@@ -20,9 +20,10 @@
  */
 package org.apache.qpid.server.configuration.store;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.doAnswer;
@@ -35,18 +36,18 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
 import org.mockito.ArgumentCaptor;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
 
 import org.apache.qpid.server.configuration.IllegalConfigurationException;
 import org.apache.qpid.server.configuration.updater.CurrentThreadTaskExecutor;
@@ -61,7 +62,6 @@ import org.apache.qpid.server.model.Protocol;
 import org.apache.qpid.server.model.State;
 import org.apache.qpid.server.model.StateTransition;
 import org.apache.qpid.server.model.SystemConfig;
-import org.apache.qpid.server.model.VirtualHost;
 import org.apache.qpid.server.model.VirtualHostNode;
 import org.apache.qpid.server.store.ConfiguredObjectRecord;
 import org.apache.qpid.server.store.ConfiguredObjectRecordImpl;
@@ -77,65 +77,54 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
     private ConfiguredObjectRecord _root;
     private ConfiguredObjectRecord _portEntry;
     private UUID _rootId, _portEntryId;
-    private SystemConfig _systemConfig;
+    private SystemConfig<?> _systemConfig;
     private TaskExecutor _taskExecutor;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
-        _rootId = UUID.randomUUID();
-        _portEntryId = UUID.randomUUID();
+        _rootId = randomUUID();
+        _portEntryId = randomUUID();
         _store = mock(DurableConfigurationStore.class);
         _taskExecutor = new CurrentThreadTaskExecutor();
         _taskExecutor.start();
 
-        _systemConfig = new JsonSystemConfigImpl(_taskExecutor, mock(EventLogger.class),
-                                                 null, new HashMap<String, Object>());
+        _systemConfig = new JsonSystemConfigImpl(_taskExecutor, mock(EventLogger.class),null, Map.of());
 
+        final ConfiguredObjectRecord systemContextRecord = _systemConfig.asObjectRecord();
 
-        ConfiguredObjectRecord systemContextRecord = _systemConfig.asObjectRecord();
-
-
-
-        _root = new ConfiguredObjectRecordImpl(_rootId, Broker.class.getSimpleName(), Collections.singletonMap(Broker.NAME,
-                                                                                                               (Object) "broker"), Collections.singletonMap(SystemConfig.class.getSimpleName(), systemContextRecord.getId()));
+        _root = new ConfiguredObjectRecordImpl(_rootId, Broker.class.getSimpleName(), Map.of(Broker.NAME, "broker"), Map.of(SystemConfig.class.getSimpleName(), systemContextRecord.getId()));
 
         _portEntry = mock(ConfiguredObjectRecord.class);
         when(_portEntry.getId()).thenReturn(_portEntryId);
-        when(_portEntry.getParents()).thenReturn(Collections.singletonMap(Broker.class.getSimpleName(), _root.getId()));
+        when(_portEntry.getParents()).thenReturn(Map.of(Broker.class.getSimpleName(), _root.getId()));
         when(_portEntry.getType()).thenReturn(Port.class.getSimpleName());
 
-        final ArgumentCaptor<ConfiguredObjectRecordHandler> recovererArgumentCaptor = ArgumentCaptor.forClass(ConfiguredObjectRecordHandler.class);
-        doAnswer(
-                new Answer()
-                {
-                    @Override
-                    public Object answer(final InvocationOnMock invocation) throws Throwable
-                    {
-                        ConfiguredObjectRecordHandler recoverer = recovererArgumentCaptor.getValue();
-                        recoverer.handle(_root);
-                        recoverer.handle(_portEntry);
-                        return false;
-                    }
-                }
-                ).when(_store).openConfigurationStore(recovererArgumentCaptor.capture());
+        final ArgumentCaptor<ConfiguredObjectRecordHandler> recovererArgumentCaptor = 
+                ArgumentCaptor.forClass(ConfiguredObjectRecordHandler.class);
+        doAnswer(invocation -> 
+        {
+            final ConfiguredObjectRecordHandler recoverer = recovererArgumentCaptor.getValue();
+            recoverer.handle(_root);
+            recoverer.handle(_portEntry);
+            return false;
+        }).when(_store).openConfigurationStore(recovererArgumentCaptor.capture());
         _systemConfigAttributes = new HashMap<>();
 
-        _handler = new ManagementModeStoreHandler(_store, _systemConfig);;
+        _handler = new ManagementModeStoreHandler(_store, _systemConfig);
 
         _handler.init(_systemConfig);
     }
 
+    @SuppressWarnings({"rawtypes", "unchecked"})
     private ManagementModeStoreHandler createManagementModeStoreHandler()
     {
         _systemConfig.close();
-        Map<String, Object> attributes = new HashMap<>(_systemConfigAttributes);
+        final Map<String, Object> attributes = new HashMap<>(_systemConfigAttributes);
         attributes.put(ConfiguredObject.DESIRED_STATE, State.QUIESCED);
         attributes.remove(ConfiguredObject.TYPE);
 
-        _systemConfig = new AbstractSystemConfig(_taskExecutor,
-                                                 mock(EventLogger.class),
-                                                 mock(Principal.class), attributes)
+        _systemConfig = new AbstractSystemConfig(_taskExecutor, mock(EventLogger.class),mock(Principal.class), attributes)
         {
             @Override
             protected void onOpen()
@@ -165,7 +154,7 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         return new ManagementModeStoreHandler(_store, _systemConfig);
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception
     {
         _taskExecutor.stop();
@@ -175,73 +164,37 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
     private Collection<ConfiguredObjectRecord> openAndGetRecords()
     {
         final Collection<ConfiguredObjectRecord> records = new ArrayList<>();
-        _handler.openConfigurationStore(new ConfiguredObjectRecordHandler()
-        {
-
-            @Override
-            public void handle(final ConfiguredObjectRecord record)
-            {
-                records.add(record);
-            }
-
-        });
+        _handler.openConfigurationStore(records::add);
         return records;
     }
 
     private ConfiguredObjectRecord getRootEntry(Collection<ConfiguredObjectRecord> records)
     {
-        for(ConfiguredObjectRecord record : records)
-        {
-            if (record.getType().equals(Broker.class.getSimpleName()))
-            {
-                return record;
-            }
-        }
-        return null;
+        final String brokerClassName = Broker.class.getSimpleName();
+        return records.stream().filter(record -> record.getType().equals(brokerClassName)).findFirst().orElse(null);
     }
 
     private ConfiguredObjectRecord getEntry(Collection<ConfiguredObjectRecord> records, UUID id)
     {
-        for(ConfiguredObjectRecord record : records)
-        {
-            if (record.getId().equals(id))
-            {
-                return record;
-            }
-        }
-        return null;
+        return records.stream().filter(record -> record.getId().equals(id)).findFirst().orElse(null);
     }
 
-    private Collection<UUID> getChildrenIds(Collection<ConfiguredObjectRecord> records, ConfiguredObjectRecord parent)
+    private Collection<UUID> getChildrenIds(final Collection<ConfiguredObjectRecord> records,
+                                            final ConfiguredObjectRecord parent)
     {
-        Collection<UUID> childIds = new HashSet<>();
-
-        for(ConfiguredObjectRecord record : records)
-        {
-
-            if (record.getParents() != null)
-            {
-                for (UUID parentId : record.getParents().values())
-                {
-                    if (parentId.equals(parent.getId()))
-                    {
-                        childIds.add(record.getId());
-                    }
-                }
-
-            }
-        }
-
-        return childIds;
+        return records.stream().filter(record -> record.getParents() != null)
+                .filter(record -> record.getParents().values().stream().anyMatch(id -> id.equals(parent.getId())))
+                .map(ConfiguredObjectRecord::getId)
+                .collect(Collectors.toList());
     }
 
     @Test
     public void testGetRootEntryWithEmptyOptions()
     {
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-        ConfiguredObjectRecord root = getRootEntry(records);
-        assertEquals("Unexpected root id", _rootId, root.getId());
-        assertEquals("Unexpected children", Collections.singleton(_portEntryId), getChildrenIds(records, root));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord root = getRootEntry(records);
+        assertEquals(_rootId, root.getId(), "Unexpected root id");
+        assertIterableEquals(Set.of(_portEntryId), getChildrenIds(records, root), "Unexpected children");
     }
 
     @Test
@@ -250,13 +203,12 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,9090);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord root = getRootEntry(records);
-        assertEquals("Unexpected root id", _rootId, root.getId());
-        Collection<UUID> childrenIds = getChildrenIds(records, root);
-        assertEquals("Unexpected children size", (long) 2, (long) childrenIds.size());
-        assertTrue("Store port entry id is not found", childrenIds.contains(_portEntryId));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord root = getRootEntry(records);
+        assertEquals(_rootId, root.getId(), "Unexpected root id");
+        final Collection<UUID> childrenIds = getChildrenIds(records, root);
+        assertEquals(2, (long) childrenIds.size(), "Unexpected children size");
+        assertTrue(childrenIds.contains(_portEntryId), "Store port entry id is not found");
     }
 
     @Test
@@ -265,34 +217,31 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,1000);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord root = getRootEntry(records);
-        assertEquals("Unexpected root id", _rootId, root.getId());
-        Collection<UUID> childrenIds = getChildrenIds(records, root);
-        assertEquals("Unexpected children size", (long) 2, (long) childrenIds.size());
-        assertTrue("Store port entry id is not found", childrenIds.contains(_portEntryId));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord root = getRootEntry(records);
+        assertEquals(_rootId, root.getId(), "Unexpected root id");
+        final Collection<UUID> childrenIds = getChildrenIds(records, root);
+        assertEquals(2, (long) childrenIds.size(), "Unexpected children size");
+        assertTrue(childrenIds.contains(_portEntryId), "Store port entry id is not found");
     }
 
     @Test
     public void testGetEntryByRootId()
     {
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord root = getEntry(records, _rootId);
-        assertEquals("Unexpected root id", _rootId, root.getId());
-        assertEquals("Unexpected children", Collections.singleton(_portEntryId), getChildrenIds(records, root));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord root = getEntry(records, _rootId);
+        assertEquals(_rootId, root.getId(), "Unexpected root id");
+        assertIterableEquals(Set.of(_portEntryId), getChildrenIds(records, root), "Unexpected children");
     }
 
     @Test
     public void testGetEntryByPortId()
     {
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord portEntry = getEntry(records, _portEntryId);
-        assertEquals("Unexpected entry id", _portEntryId, portEntry.getId());
-        assertTrue("Unexpected children", getChildrenIds(records, portEntry).isEmpty());
-        assertEquals("Unexpected state", State.QUIESCED, portEntry.getAttributes().get(Port.DESIRED_STATE));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord portEntry = getEntry(records, _portEntryId);
+        assertEquals(_portEntryId, portEntry.getId(), "Unexpected entry id");
+        assertTrue(getChildrenIds(records, portEntry).isEmpty(), "Unexpected children");
+        assertEquals(State.QUIESCED, portEntry.getAttributes().get(Port.DESIRED_STATE), "Unexpected state");
     }
 
     @Test
@@ -302,27 +251,23 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
 
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        UUID optionsPort = getOptionsPortId(records);
-        ConfiguredObjectRecord portEntry = getEntry(records, optionsPort);
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final UUID optionsPort = getOptionsPortId(records);
+        final ConfiguredObjectRecord portEntry = getEntry(records, optionsPort);
         assertCLIPortEntry(records, portEntry, optionsPort, Protocol.HTTP);
     }
 
     @Test
     public void testHttpPortEntryIsQuiesced()
     {
-        Map<String, Object> attributes = new HashMap<String, Object>();
-        attributes.put(Port.PROTOCOLS, Collections.singleton(Protocol.HTTP));
+        final Map<String, Object> attributes = Map.of(Port.PROTOCOLS, Set.of(Protocol.HTTP));
         when(_portEntry.getAttributes()).thenReturn(attributes);
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,9090);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord portEntry = getEntry(records, _portEntryId);
-        assertEquals("Unexpected state", State.QUIESCED, portEntry.getAttributes().get(Port.DESIRED_STATE));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord portEntry = getEntry(records, _portEntryId);
+        assertEquals(State.QUIESCED, portEntry.getAttributes().get(Port.DESIRED_STATE), "Unexpected state");
     }
 
     @Test
@@ -339,56 +284,50 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
 
     private void virtualHostEntryQuiescedStatusTestImpl(boolean mmQuiesceVhosts)
     {
-        UUID virtualHostNodeId = UUID.randomUUID();
-        Map<String, Object> attributes = new HashMap<String, Object>();
-        attributes.put(VirtualHostNode.TYPE, "JSON");
+        final UUID virtualHostNodeId = randomUUID();
+        final Map<String, Object> attributes = Map.of(VirtualHostNode.TYPE, "JSON");
+        final ConfiguredObjectRecord virtualHostNodeRecord =
+                new ConfiguredObjectRecordImpl(virtualHostNodeId, VirtualHostNode.class.getSimpleName(), attributes, Map.of(Broker.class.getSimpleName(), _root.getId()));
+        final ArgumentCaptor<ConfiguredObjectRecordHandler> recovererArgumentCaptor =
+                ArgumentCaptor.forClass(ConfiguredObjectRecordHandler.class);
+        doAnswer(invocation ->
+        {
+            final ConfiguredObjectRecordHandler recoverer = recovererArgumentCaptor.getValue();
+            recoverer.handle(_root);
+            recoverer.handle(_portEntry);
+            recoverer.handle(virtualHostNodeRecord);
+            return false;
+        }).when(_store).openConfigurationStore(recovererArgumentCaptor.capture());
 
-        final ConfiguredObjectRecord virtualHostNodeRecord = new ConfiguredObjectRecordImpl(virtualHostNodeId, VirtualHostNode.class.getSimpleName(), attributes, Collections.singletonMap(Broker.class.getSimpleName(), _root.getId()));
-        final ArgumentCaptor<ConfiguredObjectRecordHandler> recovererArgumentCaptor = ArgumentCaptor.forClass(ConfiguredObjectRecordHandler.class);
-        doAnswer(
-                new Answer()
-                {
-                    @Override
-                    public Object answer(final InvocationOnMock invocation) throws Throwable
-                    {
-                        ConfiguredObjectRecordHandler recoverer = recovererArgumentCaptor.getValue();
-                        recoverer.handle(_root);
-                        recoverer.handle(_portEntry);
-                        recoverer.handle(virtualHostNodeRecord);
-                        return false;
-                    }
-                }
-                ).when(_store).openConfigurationStore(recovererArgumentCaptor.capture());
-
-        State expectedState = mmQuiesceVhosts ? State.QUIESCED : null;
-        if(mmQuiesceVhosts)
+        final State expectedState = mmQuiesceVhosts ? State.QUIESCED : null;
+        if (mmQuiesceVhosts)
         {
             _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_QUIESCE_VIRTUAL_HOSTS, mmQuiesceVhosts);
         }
 
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord nodeEntry = getEntry(records, virtualHostNodeId);
-        Map<String, Object> nodeAttributes = new HashMap<String, Object>(nodeEntry.getAttributes());
-        assertEquals("Unexpected state", expectedState, nodeAttributes.get(VirtualHostNode.DESIRED_STATE));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord nodeEntry = getEntry(records, virtualHostNodeId);
+        final Map<String, Object> nodeAttributes = new HashMap<>(nodeEntry.getAttributes());
+        assertEquals(expectedState, nodeAttributes.get(VirtualHostNode.DESIRED_STATE), "Unexpected state");
         nodeAttributes.remove(VirtualHostNode.DESIRED_STATE);
-        assertEquals("Unexpected attributes", attributes, nodeAttributes);
+        assertEquals(attributes, nodeAttributes, "Unexpected attributes");
     }
 
     @SuppressWarnings("unchecked")
     private void assertCLIPortEntry(final Collection<ConfiguredObjectRecord> records,
-                                    ConfiguredObjectRecord portEntry,
-                                    UUID optionsPort,
-                                    Protocol protocol)
+                                    final ConfiguredObjectRecord portEntry,
+                                    final UUID optionsPort,
+                                    final Protocol protocol)
     {
-        assertEquals("Unexpected entry id", optionsPort, portEntry.getId());
-        assertTrue("Unexpected children", getChildrenIds(records, portEntry).isEmpty());
-        Map<String, Object> attributes = portEntry.getAttributes();
-        assertEquals("Unexpected name", "MANAGEMENT-MODE-PORT-" + protocol.name(), attributes.get(Port.NAME));
-        assertEquals("Unexpected protocol", Collections.singleton(protocol), new HashSet<Protocol>(
-                (Collection<Protocol>) attributes.get(Port.PROTOCOLS)));
+        assertEquals(optionsPort, portEntry.getId(), "Unexpected entry id");
+        assertTrue(getChildrenIds(records, portEntry).isEmpty(), "Unexpected children");
+        final Map<String, Object> attributes = portEntry.getAttributes();
+        assertEquals("MANAGEMENT-MODE-PORT-" + protocol.name(), attributes.get(Port.NAME),
+                "Unexpected name");
+        assertIterableEquals(Set.of(protocol), (Collection<Protocol>) attributes.get(Port.PROTOCOLS),
+                "Unexpected protocol");
     }
 
     @Test
@@ -397,13 +336,11 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,1000);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        Map<String, Object> attributes = new HashMap<String, Object>();
-        attributes.put(Port.NAME, "TEST");
-        ConfiguredObjectRecord
-                configurationEntry = new ConfiguredObjectRecordImpl(_portEntryId, Port.class.getSimpleName(), attributes,
-                Collections.singletonMap(Broker.class.getSimpleName(), getRootEntry(records).getId()));
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final Map<String, Object> attributes = Map.of(Port.NAME, "TEST");
+        final ConfiguredObjectRecord configurationEntry =
+                new ConfiguredObjectRecordImpl(_portEntryId, Port.class.getSimpleName(), attributes,
+                                               Map.of(Broker.class.getSimpleName(), getRootEntry(records).getId()));
         _handler.create(configurationEntry);
         verify(_store).create(any(ConfiguredObjectRecord.class));
     }
@@ -414,13 +351,11 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,1000);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        ConfiguredObjectRecord root = getRootEntry(records);
-        Map<String, Object> attributes = new HashMap<String, Object>();
-        attributes.put(Broker.NAME, "TEST");
-        ConfiguredObjectRecord
-                configurationEntry = new ConfiguredObjectRecordImpl(_rootId, Broker.class.getSimpleName(), attributes,root.getParents());
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final ConfiguredObjectRecord root = getRootEntry(records);
+        final Map<String, Object> attributes = Map.of(Broker.NAME, "TEST");
+        final ConfiguredObjectRecord configurationEntry =
+                new ConfiguredObjectRecordImpl(_rootId, Broker.class.getSimpleName(), attributes,root.getParents());
         _handler.update(false, configurationEntry);
         verify(_store).update(anyBoolean(), any(ConfiguredObjectRecord.class));
     }
@@ -431,24 +366,14 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,1000);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        UUID portId = getOptionsPortId(records);
-        Map<String, Object> attributes = new HashMap<String, Object>();
-        attributes.put(Port.NAME, "TEST");
-        ConfiguredObjectRecord
-                configurationEntry = new ConfiguredObjectRecordImpl(portId, Port.class.getSimpleName(), attributes,
-                                                                    Collections.singletonMap(Broker.class.getSimpleName(),
-                                                                                             getRootEntry(records).getId()));
-        try
-        {
-            _handler.update(false, configurationEntry);
-            fail("Exception should be thrown on trying to save CLI port");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final UUID portId = getOptionsPortId(records);
+        final Map<String, Object> attributes = Map.of(Port.NAME, "TEST");
+        final ConfiguredObjectRecord configurationEntry =
+                new ConfiguredObjectRecordImpl(portId, Port.class.getSimpleName(), attributes,
+                                               Map.of(Broker.class.getSimpleName(), getRootEntry(records).getId()));
+        assertThrows(IllegalConfigurationException.class, () -> _handler.update(false, configurationEntry),
+                     "Exception should be thrown on trying to save CLI port");
     }
 
     @Test
@@ -457,9 +382,9 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,1000);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        openAndGetRecords();
 
-        ConfiguredObjectRecord record = new ConfiguredObjectRecord()
+        final ConfiguredObjectRecord record = new ConfiguredObjectRecord()
         {
             @Override
             public UUID getId()
@@ -476,7 +401,7 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
             @Override
             public Map<String, Object> getAttributes()
             {
-                return Collections.emptyMap();
+                return Map.of();
             }
 
             @Override
@@ -495,33 +420,21 @@ public class ManagementModeStoreHandlerTest extends UnitTestBase
         _systemConfigAttributes.put(SystemConfig.MANAGEMENT_MODE_HTTP_PORT_OVERRIDE,1000);
         _handler = createManagementModeStoreHandler();
         _handler.init(_systemConfig);
-        Collection<ConfiguredObjectRecord> records = openAndGetRecords();
-
-        UUID portId = getOptionsPortId(records);
-        ConfiguredObjectRecord record = mock(ConfiguredObjectRecord.class);
+        final Collection<ConfiguredObjectRecord> records = openAndGetRecords();
+        final UUID portId = getOptionsPortId(records);
+        final ConfiguredObjectRecord record = mock(ConfiguredObjectRecord.class);
         when(record.getId()).thenReturn(portId);
-        try
-        {
-            _handler.remove(record);
-            fail("Exception should be thrown on trying to remove CLI port");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
+
+        assertThrows(IllegalConfigurationException.class, () -> _handler.remove(record),
+                     "Exception should be thrown on trying to remove CLI port");
     }
 
     private UUID getOptionsPortId(Collection<ConfiguredObjectRecord> records)
     {
-
-        ConfiguredObjectRecord root = getRootEntry(records);
-        assertEquals("Unexpected root id", _rootId, root.getId());
-        Collection<UUID> childrenIds = getChildrenIds(records, root);
-
+        final ConfiguredObjectRecord root = getRootEntry(records);
+        assertEquals(_rootId, root.getId(), "Unexpected root id");
+        final Collection<UUID> childrenIds = getChildrenIds(records, root);
         childrenIds.remove(_portEntryId);
-        UUID optionsPort = childrenIds.iterator().next();
-        return optionsPort;
+        return childrenIds.iterator().next();
     }
-
-
 }
