@@ -20,8 +20,8 @@
  */
 package org.apache.qpid.server.connection;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.eq;
@@ -31,14 +31,11 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.lang.reflect.Type;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.logging.EventLogger;
 import org.apache.qpid.server.logging.LogMessage;
@@ -50,40 +47,41 @@ import org.apache.qpid.test.utils.UnitTestBase;
 
 public class ConnectionVersionValidatorTest extends UnitTestBase
 {
-
-    private QueueManagingVirtualHost _virtualHostMock;
-    private AMQPConnection _connectionMock;
+    private QueueManagingVirtualHost<?> _virtualHostMock;
+    private AMQPConnection<?> _connectionMock;
     private EventLogger _eventLoggerMock;
     private ConnectionVersionValidator _connectionValidator;
 
-    @Before
+    @BeforeEach
+    @SuppressWarnings({"rawtypes", "unchecked"})
     public void setUp() throws Exception
     {
-
         _connectionValidator = new ConnectionVersionValidator();
         _virtualHostMock = mock(QueueManagingVirtualHost.class);
         _connectionMock = mock(AMQPConnection.class);
         _eventLoggerMock = mock(EventLogger.class);
-        Broker brokerMock = mock(Broker.class);
+        final Broker brokerMock = mock(Broker.class);
 
         when(_virtualHostMock.getBroker()).thenReturn(brokerMock);
         when(brokerMock.getEventLogger()).thenReturn(_eventLoggerMock);
     }
 
-    private void setContextValues(Map<String, List<String>> values)
+    @SuppressWarnings("unchecked")
+    private void setContextValues(final Map<String, List<String>> values)
     {
         when(_virtualHostMock.getContextKeys(anyBoolean())).thenReturn(values.keySet());
-        for (Map.Entry<String, List<String>> entry : values.entrySet())
+        for (final Map.Entry<String, List<String>> entry : values.entrySet())
         {
-            when(_virtualHostMock.getContextValue(any(Class.class), any(Type.class), eq(entry.getKey()))).thenReturn(entry.getValue());
+            when(_virtualHostMock.getContextValue(any(Class.class), any(Type.class), eq(entry.getKey())))
+                    .thenReturn(entry.getValue());
         }
     }
 
     @Test
     public void testInvalidRegex()
     {
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, Arrays.asList("${}", "foo"));
+        final Map<String, List<String>> contextValues = Map.of(
+                ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, List.of("${}", "foo"));
         setContextValues(contextValues);
         when(_connectionMock.getClientVersion()).thenReturn("foo");
         assertFalse(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
@@ -107,8 +105,7 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     @Test
     public void testEmptyList()
     {
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, Collections.<String>emptyList());
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, List.of());
         setContextValues(contextValues);
         when(_connectionMock.getClientVersion()).thenReturn("foo");
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
@@ -118,8 +115,7 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     @Test
     public void testEmptyString()
     {
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, Arrays.asList(""));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, List.of(""));
         setContextValues(contextValues);
         when(_connectionMock.getClientVersion()).thenReturn("");
         assertFalse(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
@@ -134,8 +130,7 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     public void testClientRejected()
     {
         when(_connectionMock.getClientVersion()).thenReturn("foo");
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, Arrays.asList("foo"));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, List.of("foo"));
         setContextValues(contextValues);
         assertFalse(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
         verify(_eventLoggerMock).message(ConnectionMessages.CLIENT_VERSION_REJECT("foo"));
@@ -145,8 +140,7 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     public void testClientLogged()
     {
         when(_connectionMock.getClientVersion()).thenReturn("foo");
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, Arrays.asList("foo"));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, List.of("foo"));
         setContextValues(contextValues);
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
         verify(_eventLoggerMock).message(ConnectionMessages.CLIENT_VERSION_LOG("foo"));
@@ -156,10 +150,9 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     public void testAllowedTakesPrecedence()
     {
         when(_connectionMock.getClientVersion()).thenReturn("foo");
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_ALLOWED_CONNECTION_VERSION, Arrays.asList("foo"));
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, Arrays.asList("foo"));
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, Arrays.asList("foo"));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_ALLOWED_CONNECTION_VERSION, List.of("foo"),
+                ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, List.of("foo"),
+                ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, List.of("foo"));
         setContextValues(contextValues);
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
         verify(_eventLoggerMock, never()).message(any(LogMessage.class));
@@ -169,9 +162,8 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     public void testLoggedTakesPrecedenceOverRejected()
     {
         when(_connectionMock.getClientVersion()).thenReturn("foo");
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, Arrays.asList("foo"));
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, Arrays.asList("foo"));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, List.of("foo"),
+                ConnectionVersionValidator.VIRTUALHOST_REJECTED_CONNECTION_VERSION, List.of("foo"));
         setContextValues(contextValues);
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
         verify(_eventLoggerMock).message(ConnectionMessages.CLIENT_VERSION_LOG("foo"));
@@ -180,9 +172,8 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     @Test
     public void testRegex()
     {
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_ALLOWED_CONNECTION_VERSION, Arrays.asList("foo"));
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, Arrays.asList("f.*"));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_ALLOWED_CONNECTION_VERSION, List.of("foo"),
+                ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, List.of("f.*"));
         setContextValues(contextValues);
         when(_connectionMock.getClientVersion()).thenReturn("foo");
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
@@ -198,9 +189,8 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
     @Test
     public void testRegexLists()
     {
-        Map<String, List<String>> contextValues = new HashMap<>();
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_ALLOWED_CONNECTION_VERSION, Arrays.asList("foo"));
-        contextValues.put(ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, Arrays.asList("f.*", "baz"));
+        final Map<String, List<String>> contextValues = Map.of(ConnectionVersionValidator.VIRTUALHOST_ALLOWED_CONNECTION_VERSION, List.of("foo"),
+                ConnectionVersionValidator.VIRTUALHOST_LOGGED_CONNECTION_VERSION, List.of("f.*", "baz"));
         setContextValues(contextValues);
         when(_connectionMock.getClientVersion()).thenReturn("foo");
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
@@ -212,5 +202,4 @@ public class ConnectionVersionValidatorTest extends UnitTestBase
         assertTrue(_connectionValidator.validateConnectionCreation(_connectionMock, _virtualHostMock));
         verify(_eventLoggerMock).message(ConnectionMessages.CLIENT_VERSION_LOG("baz"));
     }
-
 }
