@@ -20,23 +20,21 @@
 package org.apache.qpid.server.exchange;
 
 import static org.apache.qpid.server.filter.AMQPFilterTypes.JMS_SELECTOR;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.configuration.IllegalConfigurationException;
 import org.apache.qpid.server.message.AMQMessageHeader;
@@ -63,84 +61,57 @@ public class DirectExchangeTest extends UnitTestBase
     private InstanceProperties _instanceProperties;
     private ServerMessage<?> _messageWithNoHeaders;
 
-    @Before
-    public void setUp() throws Exception
+    @BeforeAll
+    public void beforeAll() throws Exception
     {
-        BrokerTestHelper.setUp();
-        _vhost = BrokerTestHelper.createVirtualHost(getTestName(), this);
+        _vhost = BrokerTestHelper.createVirtualHost(getTestClassName(), this);
 
-        Map<String,Object> attributes = new HashMap<>();
-        attributes.put(Exchange.NAME, "test");
-        attributes.put(Exchange.DURABLE, false);
-        attributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Map<String,Object> attributes = Map.of(Exchange.NAME, "test",
+                Exchange.DURABLE, false,
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
 
         _exchange = (DirectExchange<?>) _vhost.createChild(Exchange.class, attributes);
+    }
 
+    @BeforeEach
+    public void setUp() throws Exception
+    {
         _instanceProperties = mock(InstanceProperties.class);
-        _messageWithNoHeaders = createTestMessage(Collections.emptyMap());
-    }
-
-    @After
-    public void tearDown() throws Exception
-    {
-        try
-        {
-            if (_vhost != null)
-            {
-                _vhost.close();
-            }
-        }
-        finally
-        {
-            BrokerTestHelper.tearDown();
-        }
+        _messageWithNoHeaders = createTestMessage(Map.of());
     }
 
     @Test
-    public void testCreationOfExchangeWithReservedExchangePrefixRejected() throws Exception
+    public void testCreationOfExchangeWithReservedExchangePrefixRejected()
     {
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(Exchange.NAME, "amq.wibble");
-        attributes.put(Exchange.DURABLE, false);
-        attributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
-
-        try
-        {
-            _exchange = (DirectExchangeImpl) _vhost.createChild(Exchange.class, attributes);
-            _exchange.open();
-            fail("Exception not thrown");
-        }
-        catch (ReservedExchangeNameException rene)
-        {
-            // PASS
-        }
+        final Map<String, Object> attributes = Map.of(Exchange.NAME, "amq.wibble",
+                Exchange.DURABLE, false,
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        assertThrows(ReservedExchangeNameException.class, () ->
+                {
+                    _exchange = (DirectExchangeImpl) _vhost.createChild(Exchange.class, attributes);
+                    _exchange.open();
+                }, "Exception not thrown");
     }
 
     @Test
-    public void testAmqpDirectRecreationRejected() throws Exception
+    public void testAmqpDirectRecreationRejected()
     {
-        DirectExchangeImpl amqpDirect = (DirectExchangeImpl) _vhost.getChildByName(Exchange.class, ExchangeDefaults.DIRECT_EXCHANGE_NAME);
+        final DirectExchangeImpl amqpDirect = 
+                (DirectExchangeImpl) _vhost.getChildByName(Exchange.class, ExchangeDefaults.DIRECT_EXCHANGE_NAME);
 
         assertNotNull(amqpDirect);
 
         assertSame(amqpDirect, _vhost.getChildById(Exchange.class, amqpDirect.getId()));
         assertSame(amqpDirect, _vhost.getChildByName(Exchange.class, amqpDirect.getName()));
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(Exchange.NAME, ExchangeDefaults.DIRECT_EXCHANGE_NAME);
-        attributes.put(Exchange.DURABLE, true);
-        attributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
-
-        try
-        {
-            _exchange = (DirectExchangeImpl) _vhost.createChild(Exchange.class, attributes);
-            _exchange.open();
-            fail("Exception not thrown");
-        }
-        catch (ReservedExchangeNameException rene)
-        {
-            // PASS
-        }
+        final Map<String, Object> attributes = Map.of(Exchange.NAME, ExchangeDefaults.DIRECT_EXCHANGE_NAME,
+                Exchange.DURABLE, true,
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        assertThrows(ReservedExchangeNameException.class, () ->
+                {
+                    _exchange = (DirectExchangeImpl) _vhost.createChild(Exchange.class, attributes);
+                    _exchange.open();
+                }, "Exception not thrown");
 
         // QPID-6599, defect would mean that the existing exchange was removed from the in memory model.
         assertSame(amqpDirect, _vhost.getChildById(Exchange.class, amqpDirect.getId()));
@@ -148,203 +119,154 @@ public class DirectExchangeTest extends UnitTestBase
     }
 
     @Test
-    public void testDeleteOfExchangeSetAsAlternate() throws Exception
+    public void testDeleteOfExchangeSetAsAlternate()
     {
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(Queue.NAME, getTestName());
-        attributes.put(Queue.DURABLE, false);
-        attributes.put(Queue.ALTERNATE_BINDING, Collections.singletonMap(AlternateBinding.DESTINATION, _exchange.getName()));
+        final Map<String, Object> attributes = Map.of(Queue.NAME, getTestName(),
+                Queue.DURABLE, false,
+                Queue.ALTERNATE_BINDING, Map.of(AlternateBinding.DESTINATION, _exchange.getName()));
 
-        Queue queue = _vhost.createChild(Queue.class, attributes);
+        Queue<?> queue = _vhost.createChild(Queue.class, attributes);
         queue.open();
 
-        assertEquals("Unexpected alternate exchange on queue", _exchange, queue.getAlternateBindingDestination());
+        assertEquals(_exchange, queue.getAlternateBindingDestination(), "Unexpected alternate exchange on queue");
 
+        assertThrows(MessageDestinationIsAlternateException.class,() ->_exchange.delete(),
+                "Exchange deletion should fail with MessageDestinationIsAlternateException");
 
-        try
-        {
-            _exchange.delete();
-            fail("Exchange deletion should fail with MessageDestinationIsAlternateException");
-        }
-        catch(MessageDestinationIsAlternateException e)
-        {
-            // pass
-        }
-
-        assertEquals("Unexpected effective exchange state", State.ACTIVE, _exchange.getState());
-        assertEquals("Unexpected desired exchange state", State.ACTIVE, _exchange.getDesiredState());
+        assertEquals(State.ACTIVE, _exchange.getState(), "Unexpected effective exchange state");
+        assertEquals(State.ACTIVE, _exchange.getDesiredState(), "Unexpected desired exchange state");
     }
 
     @Test
     public void testAlternateBindingValidationRejectsNonExistingDestination()
     {
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(Exchange.NAME, getTestName());
-        attributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
-        String alternateBinding = "nonExisting";
-        attributes.put(Exchange.ALTERNATE_BINDING,
-                       Collections.singletonMap(AlternateBinding.DESTINATION, alternateBinding));
+        final String alternateBinding = "nonExisting";
+        final Map<String, Object> attributes = Map.of(Exchange.NAME, getTestName(),
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS,
+                Exchange.ALTERNATE_BINDING, Map.of(AlternateBinding.DESTINATION, alternateBinding));
 
-        try
-        {
-            _vhost.createChild(Exchange.class, attributes);
-            fail("Expected exception is not thrown");
-        }
-        catch (UnknownAlternateBindingException e)
-        {
-            assertEquals("Unexpected exception alternate binding", alternateBinding, e.getAlternateBindingName());
-        }
+        final UnknownAlternateBindingException thrown = assertThrows(UnknownAlternateBindingException.class,
+                () -> _vhost.createChild(Exchange.class, attributes),
+                "Expected exception is not thrown");
+        assertEquals(alternateBinding, thrown.getAlternateBindingName(), "Unexpected exception alternate binding");
     }
 
     @Test
     public void testAlternateBindingValidationRejectsSelf()
     {
-        Map<String, String> alternateBinding = Collections.singletonMap(AlternateBinding.DESTINATION, _exchange.getName());
-        Map<String, Object> newAttributes = Collections.singletonMap(Exchange.ALTERNATE_BINDING, alternateBinding);
-        try
-        {
-            _exchange.setAttributes(newAttributes);
-            fail("Expected exception is not thrown");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
+        final Map<String, String> alternateBinding = Map.of(AlternateBinding.DESTINATION, _exchange.getName());
+        final Map<String, Object> newAttributes = Map.of(Exchange.ALTERNATE_BINDING, alternateBinding);
+        assertThrows(IllegalConfigurationException.class, () -> _exchange.setAttributes(newAttributes),
+                "Expected exception is not thrown");
     }
 
     @Test
     public void testDurableExchangeRejectsNonDurableAlternateBinding()
     {
-        Map<String, Object> dlqAttributes = new HashMap<>();
-        String dlqName = getTestName() + "_DLQ";
-        dlqAttributes.put(Queue.NAME, dlqName);
-        dlqAttributes.put(Queue.DURABLE, false);
+        final String dlqName = getTestName() + "_DLQ";
+        final Map<String, Object> dlqAttributes = Map.of(Queue.NAME, dlqName,
+                Queue.DURABLE, false);
         _vhost.createChild(Queue.class, dlqAttributes);
 
-        Map<String, Object> exchangeAttributes = new HashMap<>();
-        exchangeAttributes.put(Exchange.NAME, getTestName());
-        exchangeAttributes.put(Exchange.ALTERNATE_BINDING, Collections.singletonMap(AlternateBinding.DESTINATION, dlqName));
-        exchangeAttributes.put(Exchange.DURABLE, true);
-        exchangeAttributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
-
-        try
-        {
-            _vhost.createChild(Exchange.class, exchangeAttributes);
-            fail("Expected exception is not thrown");
-        }
-        catch (IllegalConfigurationException e)
-        {
-            // pass
-        }
+        final Map<String, Object> exchangeAttributes = Map.of(Exchange.NAME, getTestName(),
+                Exchange.ALTERNATE_BINDING, Map.of(AlternateBinding.DESTINATION, dlqName),
+                Exchange.DURABLE, true,
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        assertThrows(IllegalConfigurationException.class, () -> _vhost.createChild(Exchange.class, exchangeAttributes),
+                "Expected exception is not thrown");
     }
 
     @Test
     public void testAlternateBinding()
     {
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(Exchange.NAME, getTestName());
-        attributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
-        attributes.put(Exchange.ALTERNATE_BINDING,
-                       Collections.singletonMap(AlternateBinding.DESTINATION, _exchange.getName()));
-        attributes.put(Exchange.DURABLE, false);
+        final Map<String, Object> attributes = Map.of(Exchange.NAME, getTestName(),
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS,
+                Exchange.ALTERNATE_BINDING, Map.of(AlternateBinding.DESTINATION, _exchange.getName()),
+                Exchange.DURABLE, false);
+        final Exchange<?> newExchange = _vhost.createChild(Exchange.class, attributes);
 
-        Exchange newExchange = _vhost.createChild(Exchange.class, attributes);
-
-        assertEquals("Unexpected alternate binding",
-                            _exchange.getName(),
-                            newExchange.getAlternateBinding().getDestination());
+        assertEquals(_exchange.getName(), newExchange.getAlternateBinding().getDestination(),
+                "Unexpected alternate binding");
     }
 
     @Test
     public void testRouteToQueue()
     {
-        String boundKey = "key";
-        Queue<?> queue = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue"));
+        final String boundKey = "key";
+        final Queue<?> queue = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue"));
 
-        RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders, boundKey,
-                                                                                       _instanceProperties);
-        assertFalse("Message unexpectedly routed to queue before bind", result.hasRoutes());
+        RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
+        assertFalse(result.hasRoutes(), "Message unexpectedly routed to queue before bind");
 
-        boolean bind = _exchange.bind(queue.getName(), boundKey, Collections.emptyMap(), false);
-        assertTrue("Bind operation should be successful", bind);
-
-        result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
-        assertTrue("Message unexpectedly not routed to queue after bind", result.hasRoutes());
-
-        boolean unbind = _exchange.unbind(queue.getName(), boundKey);
-        assertTrue("Unbind operation should be successful", unbind);
+        final boolean bind = _exchange.bind(queue.getName(), boundKey, Map.of(), false);
+        assertTrue(bind, "Bind operation should be successful");
 
         result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
-        assertFalse("Message unexpectedly routed to queue after unbind", result.hasRoutes());
+        assertTrue(result.hasRoutes(), "Message unexpectedly not routed to queue after bind");
+
+        final boolean unbind = _exchange.unbind(queue.getName(), boundKey);
+        assertTrue(unbind, "Unbind operation should be successful");
+
+        result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
+        assertFalse(result.hasRoutes(), "Message unexpectedly routed to queue after unbind");
     }
 
     @Test
     public void testRouteToQueueWithSelector()
     {
-        String boundKey = "key";
-        Queue<?> queue = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue"));
+        final String boundKey = "key";
+        final Queue<?> queue = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue"));
 
-        InstanceProperties instanceProperties = mock(InstanceProperties.class);
-        ServerMessage<?> matchingMessage = createTestMessage(Collections.singletonMap("prop", true));
-        ServerMessage<?> unmatchingMessage = createTestMessage(Collections.singletonMap("prop", false));
+        final InstanceProperties instanceProperties = mock(InstanceProperties.class);
+        final ServerMessage<?> matchingMessage = createTestMessage(Map.of("prop", true));
+        final ServerMessage<?> unmatchingMessage = createTestMessage(Map.of("prop", false));
 
-        boolean bind = _exchange.bind(queue.getName(), boundKey,
-                                      Collections.singletonMap(JMS_SELECTOR.toString(), "prop = True"),
-                                      false);
-        assertTrue("Bind operation should be successful", bind);
+        final boolean bind = _exchange.bind(queue.getName(), boundKey,
+                Map.of(JMS_SELECTOR.toString(), "prop = True"), false);
+        assertTrue(bind, "Bind operation should be successful");
 
         RoutingResult<ServerMessage<?>> result = _exchange.route(matchingMessage, boundKey, instanceProperties);
-        assertTrue("Message with matching selector not routed to queue", result.hasRoutes());
+        assertTrue(result.hasRoutes(), "Message with matching selector not routed to queue");
 
         result = _exchange.route(unmatchingMessage, boundKey, instanceProperties);
-        assertFalse("Message with matching selector unexpectedly routed to queue", result.hasRoutes());
+        assertFalse(result.hasRoutes(), "Message with matching selector unexpectedly routed to queue");
 
-        boolean unbind = _exchange.unbind(queue.getName(), boundKey);
-        assertTrue("Unbind operation should be successful", unbind);
+        final boolean unbind = _exchange.unbind(queue.getName(), boundKey);
+        assertTrue(unbind, "Unbind operation should be successful");
 
         result = _exchange.route(matchingMessage, boundKey, instanceProperties);
-        assertFalse("Message with matching selector unexpectedly routed to queue after unbind",
-                           result.hasRoutes());
-
+        assertFalse(result.hasRoutes(), "Message with matching selector unexpectedly routed to queue after unbind");
     }
 
     @Test
     public void testRouteToQueueViaTwoExchanges()
     {
-        String boundKey = "key";
+        final String boundKey = "key";
+        final Map<String, Object> attributes = Map.of(Exchange.NAME, getTestName(),
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Exchange<?> via = _vhost.createChild(Exchange.class, attributes);
+        final Queue<?> queue = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue"));
+        final boolean exchToViaBind = _exchange.bind(via.getName(), boundKey, Map.of(), false);
+        assertTrue(exchToViaBind, "Exchange to exchange bind operation should be successful");
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(Exchange.NAME, getTestName());
-        attributes.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final boolean viaToQueueBind = via.bind(queue.getName(), boundKey, Map.of(), false);
+        assertTrue(viaToQueueBind, "Exchange to queue bind operation should be successful");
 
-        Exchange via = _vhost.createChild(Exchange.class, attributes);
-        Queue<?> queue = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue"));
-
-        boolean exchToViaBind = _exchange.bind(via.getName(), boundKey, Collections.emptyMap(), false);
-        assertTrue("Exchange to exchange bind operation should be successful", exchToViaBind);
-
-        boolean viaToQueueBind = via.bind(queue.getName(), boundKey, Collections.emptyMap(), false);
-        assertTrue("Exchange to queue bind operation should be successful", viaToQueueBind);
-
-        RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders,
-                                                                                       boundKey,
-                                                                                       _instanceProperties);
-        assertTrue("Message unexpectedly not routed to queue", result.hasRoutes());
+        final RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
+        assertTrue(result.hasRoutes(), "Message unexpectedly not routed to queue");
     }
-
 
     @Test
     public void testDestinationDeleted()
     {
-        String boundKey = "key";
-        Queue<?> queue = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue"));
-
+        final String boundKey = "key";
+        final Queue<?> queue = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue"));
 
         assertFalse(_exchange.isBound(boundKey));
         assertFalse(_exchange.isBound(boundKey, queue));
         assertFalse(_exchange.isBound(queue));
 
-        _exchange.bind(queue.getName(), boundKey, Collections.emptyMap(), false);
+        _exchange.bind(queue.getName(), boundKey, Map.of(), false);
 
         assertTrue(_exchange.isBound(boundKey));
         assertTrue(_exchange.isBound(boundKey, queue));
@@ -357,13 +279,12 @@ public class DirectExchangeTest extends UnitTestBase
         assertFalse(_exchange.isBound(queue));
     }
 
-    private ServerMessage<?> createTestMessage(Map<String, Object> headerValues)
+    private ServerMessage<?> createTestMessage(final Map<String, Object> headerValues)
     {
-        AMQMessageHeader header = mock(AMQMessageHeader.class);
+        final AMQMessageHeader header = mock(AMQMessageHeader.class);
         headerValues.forEach((key, value) -> when(header.getHeader(key)).thenReturn(value));
 
-        @SuppressWarnings("unchecked")
-        ServerMessage<?> message = mock(ServerMessage.class);
+        final ServerMessage<?> message = mock(ServerMessage.class);
         when(message.isResourceAcceptable(any(TransactionLogResource.class))).thenReturn(true);
         when(message.getMessageHeader()).thenReturn(header);
         return message;
@@ -372,150 +293,111 @@ public class DirectExchangeTest extends UnitTestBase
     @Test
     public void testRouteToMultipleQueues()
     {
-        String boundKey = "key";
-        Queue<?> queue1 = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue1"));
-        Queue<?> queue2 = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue2"));
+        final String boundKey = "key";
+        final Queue<?> queue1 = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue1"));
+        final Queue<?> queue2 = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue2"));
 
-        boolean bind1 = _exchange.bind(queue1.getName(), boundKey, Collections.emptyMap(), false);
-        assertTrue("Bind operation to queue1 should be successful", bind1);
+        final boolean bind1 = _exchange.bind(queue1.getName(), boundKey, Map.of(), false);
+        assertTrue(bind1, "Bind operation to queue1 should be successful");
 
         RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
-        assertEquals("Message routed to unexpected number of queues",
-                            (long) 1,
-                            (long) result.getNumberOfRoutes());
+        assertEquals(1, (long) result.getNumberOfRoutes(), "Message routed to unexpected number of queues");
 
-        _exchange.bind(queue2.getName(), boundKey, Collections.singletonMap(JMS_SELECTOR.toString(), "prop is null"), false);
+        _exchange.bind(queue2.getName(), boundKey, Map.of(JMS_SELECTOR.toString(), "prop is null"), false);
 
         result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
-        assertEquals("Message routed to unexpected number of queues",
-                            (long) 2,
-                            (long) result.getNumberOfRoutes());
+        assertEquals(2, (long) result.getNumberOfRoutes(), "Message routed to unexpected number of queues");
 
         _exchange.unbind(queue1.getName(), boundKey);
 
         result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
-        assertEquals("Message routed to unexpected number of queues",
-                            (long) 1,
-                            (long) result.getNumberOfRoutes());
+        assertEquals(1, (long) result.getNumberOfRoutes(), "Message routed to unexpected number of queues");
 
         _exchange.unbind(queue2.getName(), boundKey);
         result = _exchange.route(_messageWithNoHeaders, boundKey, _instanceProperties);
-        assertEquals("Message routed to unexpected number of queues",
-                            (long) 0,
-                            (long) result.getNumberOfRoutes());
+        assertEquals(0, (long) result.getNumberOfRoutes(), "Message routed to unexpected number of queues");
     }
 
     @Test
     public void testRouteToQueueViaTwoExchangesWithReplacementRoutingKey()
     {
-        Map<String, Object> viaExchangeArguments = new HashMap<>();
-        viaExchangeArguments.put(Exchange.NAME, "via_exchange");
-        viaExchangeArguments.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Map<String, Object> viaExchangeArguments = Map.of(Exchange.NAME, "via_exchange",
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Exchange<?> via = _vhost.createChild(Exchange.class, viaExchangeArguments);
+        final Queue<?> queue = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue"));
+        final boolean exchToViaBind = _exchange.bind(via.getName(), "key1",
+                Map.of(Binding.BINDING_ARGUMENT_REPLACEMENT_ROUTING_KEY, "key2"), false);
+        assertTrue(exchToViaBind, "Exchange to exchange bind operation should be successful");
 
-        Exchange via = _vhost.createChild(Exchange.class, viaExchangeArguments);
-        Queue<?> queue = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue"));
+        final boolean viaToQueueBind = via.bind(queue.getName(), "key2", Map.of(), false);
+        assertTrue(viaToQueueBind, "Exchange to queue bind operation should be successful");
 
-        boolean exchToViaBind = _exchange.bind(via.getName(),
-                                               "key1",
-                                               Collections.singletonMap(Binding.BINDING_ARGUMENT_REPLACEMENT_ROUTING_KEY, "key2"),
-                                               false);
-        assertTrue("Exchange to exchange bind operation should be successful", exchToViaBind);
-
-        boolean viaToQueueBind = via.bind(queue.getName(), "key2", Collections.emptyMap(), false);
-        assertTrue("Exchange to queue bind operation should be successful", viaToQueueBind);
-
-        RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders,
-                                                                                       "key1",
-                                                                                       _instanceProperties);
-        assertTrue("Message unexpectedly not routed to queue", result.hasRoutes());
+        final RoutingResult<ServerMessage<?>> result = _exchange.route(_messageWithNoHeaders, "key1",
+                _instanceProperties);
+        assertTrue(result.hasRoutes(), "Message unexpectedly not routed to queue");
     }
 
     @Test
     public void testRouteToQueueViaTwoExchangesWithReplacementRoutingKeyAndFiltering()
     {
-        Map<String, Object> viaExchangeArguments = new HashMap<>();
-        viaExchangeArguments.put(Exchange.NAME, getTestName() + "_via_exch");
-        viaExchangeArguments.put(Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Map<String, Object> viaExchangeArguments = Map.of(Exchange.NAME, getTestName() + "_via_exch",
+                Exchange.TYPE, ExchangeDefaults.DIRECT_EXCHANGE_CLASS);
+        final Exchange<?> via = _vhost.createChild(Exchange.class, viaExchangeArguments);
+        final Queue<?> queue = _vhost.createChild(Queue.class, Map.of(Queue.NAME, getTestName() + "_queue"));
+        final Map<String, Object> exchToViaBindArguments = Map.of(Binding.BINDING_ARGUMENT_REPLACEMENT_ROUTING_KEY, "key2",
+                JMS_SELECTOR.toString(), "prop = True");
+        final boolean exchToViaBind = _exchange.bind(via.getName(), "key1", exchToViaBindArguments, false);
+        assertTrue(exchToViaBind, "Exchange to exchange bind operation should be successful");
 
-        Exchange via = _vhost.createChild(Exchange.class, viaExchangeArguments);
-        Queue<?> queue = _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, getTestName() + "_queue"));
+        final boolean viaToQueueBind = via.bind(queue.getName(), "key2", Map.of(), false);
+        assertTrue(viaToQueueBind, "Exchange to queue bind operation should be successful");
 
+        RoutingResult<ServerMessage<?>> result = _exchange.route(createTestMessage(Map.of("prop", true)), "key1",
+                _instanceProperties);
 
-        Map<String, Object> exchToViaBindArguments = new HashMap<>();
-        exchToViaBindArguments.put(Binding.BINDING_ARGUMENT_REPLACEMENT_ROUTING_KEY, "key2");
-        exchToViaBindArguments.put(JMS_SELECTOR.toString(), "prop = True");
+        assertTrue(result.hasRoutes(), "Message unexpectedly not routed to queue");
 
-        boolean exchToViaBind = _exchange.bind(via.getName(),
-                                               "key1",
-                                               exchToViaBindArguments,
-                                               false);
-        assertTrue("Exchange to exchange bind operation should be successful", exchToViaBind);
-
-        boolean viaToQueueBind = via.bind(queue.getName(), "key2", Collections.emptyMap(), false);
-        assertTrue("Exchange to queue bind operation should be successful", viaToQueueBind);
-
-        RoutingResult<ServerMessage<?>> result = _exchange.route(createTestMessage(Collections.singletonMap("prop", true)),
-                                                                                                            "key1",
-                                                                                                            _instanceProperties);
-
-        assertTrue("Message unexpectedly not routed to queue", result.hasRoutes());
-
-        result = _exchange.route(createTestMessage(Collections.singletonMap("prop", false)),
-                                 "key1",
-                                 _instanceProperties);
-        assertFalse("Message unexpectedly routed to queue", result.hasRoutes());
+        result = _exchange.route(createTestMessage(Map.of("prop", false)), "key1", _instanceProperties);
+        assertFalse(result.hasRoutes(), "Message unexpectedly routed to queue");
     }
 
     @Test
     public void testBindWithInvalidSelector()
     {
         final String queueName = getTestName() + "_queue";
-        _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, queueName));
+        _vhost.createChild(Queue.class, Map.of(Queue.NAME, queueName));
 
-        final Map<String, Object> bindArguments = Collections.singletonMap(JMS_SELECTOR.toString(), "foo in (");
+        final Map<String, Object> bindArguments = Map.of(JMS_SELECTOR.toString(), "foo in (");
+        assertThrows(IllegalArgumentException.class,
+                () -> _exchange.bind(queueName, queueName, bindArguments, false),
+                "Queue can be bound when invalid selector expression is supplied as part of bind arguments");
 
-        try
-        {
-            _exchange.bind(queueName, queueName, bindArguments, false);
-            fail("Queue can be bound when invalid selector expression is supplied as part of bind arguments");
-        }
-        catch (IllegalArgumentException e)
-        {
-            // pass
-        }
-
-        final ServerMessage<?> testMessage = createTestMessage(Collections.singletonMap("foo", "bar"));
+        final ServerMessage<?> testMessage = createTestMessage(Map.of("foo", "bar"));
         final RoutingResult<ServerMessage<?>> result = _exchange.route(testMessage, queueName, _instanceProperties);
 
-        assertFalse("Message is unexpectedly routed to queue", result.hasRoutes());
+        assertFalse(result.hasRoutes(), "Message is unexpectedly routed to queue");
     }
 
     @Test
     public void testBindWithInvalidSelectorWhenBindingExists()
     {
         final String queueName = getTestName() + "_queue";
-        _vhost.createChild(Queue.class, Collections.singletonMap(Queue.NAME, queueName));
+        _vhost.createChild(Queue.class, Map.of(Queue.NAME, queueName));
 
-        final Map<String, Object> bindArguments = Collections.singletonMap(JMS_SELECTOR.toString(), "foo in ('bar')");
+        final Map<String, Object> bindArguments = Map.of(JMS_SELECTOR.toString(), "foo in ('bar')");
         final boolean isBound = _exchange.bind(queueName, queueName, bindArguments, false);
-        assertTrue("Could not bind queue", isBound);
+        assertTrue(isBound, "Could not bind queue");
 
-        final ServerMessage<?> testMessage = createTestMessage(Collections.singletonMap("foo", "bar"));
+        final ServerMessage<?> testMessage = createTestMessage(Map.of("foo", "bar"));
         final RoutingResult<ServerMessage<?>> result = _exchange.route(testMessage, queueName, _instanceProperties);
-        assertTrue("Message should be routed to queue", result.hasRoutes());
+        assertTrue(result.hasRoutes(), "Message should be routed to queue");
 
-        final Map<String, Object> bindArguments2 = Collections.singletonMap(JMS_SELECTOR.toString(), "foo in (");
-        try
-        {
-            _exchange.bind(queueName, queueName, bindArguments2, true);
-            fail("Queue can be bound when invalid selector expression is supplied as part of bind arguments");
-        }
-        catch (IllegalArgumentException e)
-        {
-            // pass
-        }
+        final Map<String, Object> bindArguments2 = Map.of(JMS_SELECTOR.toString(), "foo in (");
+        assertThrows(IllegalArgumentException.class,
+                () -> _exchange.bind(queueName, queueName, bindArguments2, true),
+                "Queue can be bound when invalid selector expression is supplied as part of bind arguments");
 
         final RoutingResult<ServerMessage<?>> result2 = _exchange.route(testMessage, queueName, _instanceProperties);
-        assertTrue("Message should be be possible to route using old binding", result2.hasRoutes());
+        assertTrue(result2.hasRoutes(), "Message should be be possible to route using old binding");
     }
 }
