@@ -20,16 +20,16 @@
 package org.apache.qpid.server.model.preferences;
 
 import static org.apache.qpid.server.model.preferences.PreferenceTestHelper.createPreferenceAttributes;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.model.ConfiguredObject;
 import org.apache.qpid.server.security.auth.TestPrincipalUtils;
@@ -42,7 +42,7 @@ public class PreferenceFactoryTest extends UnitTestBase
             TestPrincipalUtils.getTestPrincipalSerialization(TEST_USERNAME);
     private ConfiguredObject<?> _testObject;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
         _testObject = mock(ConfiguredObject.class);
@@ -51,25 +51,20 @@ public class PreferenceFactoryTest extends UnitTestBase
     @Test
     public void testCreatePreferenceFromAttributes()
     {
-        final Map<String, Object> prefValueMap = Collections.<String, Object>singletonMap("myprefkey", "myprefvalue");
-        final UUID preferenceId = UUID.randomUUID();
-        Preference p = PreferenceFactory.fromAttributes(_testObject, createPreferenceAttributes(null,
-                                                                                                preferenceId,
-                                                                                                "X-PREF1",
-                                                                                                "myprefname",
-                                                                                                "myprefdescription",
-                                                                                                TEST_PRINCIPAL_SERIALIZATION,
-                                                                                                Collections.<String>emptySet(),
-                                                                                                prefValueMap));
+        final Map<String, Object> prefValueMap = Map.of("myprefkey", "myprefvalue");
+        final UUID preferenceId = randomUUID();
+        final Preference p = PreferenceFactory.fromAttributes(_testObject, 
+                createPreferenceAttributes(null, preferenceId, "X-PREF1", "myprefname",
+                        "myprefdescription", TEST_PRINCIPAL_SERIALIZATION, Set.of(), prefValueMap));
 
-        assertNotNull("Creation failed", p);
-        assertEquals("Unexpected preference preferenceId", preferenceId, p.getId());
-        assertEquals("Unexpected preference name", "myprefname", p.getName());
-        assertEquals("Unexpected preference description", "myprefdescription", p.getDescription());
-        assertEquals("Unexpected preference visibility list", Collections.emptySet(), p.getVisibilityList());
-        assertEquals("Unexpected preference owner", TEST_USERNAME, p.getOwner().getName());
+        assertNotNull(p, "Creation failed");
+        assertEquals(preferenceId, p.getId(), "Unexpected preference preferenceId");
+        assertEquals("myprefname", p.getName(), "Unexpected preference name");
+        assertEquals("myprefdescription", p.getDescription(), "Unexpected preference description");
+        assertEquals(Set.of(), p.getVisibilityList(), "Unexpected preference visibility list");
+        assertEquals(TEST_USERNAME, p.getOwner().getName(), "Unexpected preference owner");
         final PreferenceValue preferenceValue = p.getValue();
-        assertNotNull("Preference value is null", preferenceValue);
-        assertEquals("Unexpected preference value", prefValueMap, preferenceValue.getAttributes());
+        assertNotNull(preferenceValue, "Preference value is null");
+        assertEquals(prefValueMap, preferenceValue.getAttributes(), "Unexpected preference value");
     }
 }
