@@ -22,20 +22,20 @@ package org.apache.qpid.server.model.testmodels.hierarchy;
 
 import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
 import com.google.common.collect.Lists;
-import org.junit.Test;
+
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.model.ConfiguredObject;
 import org.apache.qpid.server.model.ConfiguredObjectAttribute;
@@ -50,15 +50,14 @@ public class ConfiguredObjectTypeRegistryTest extends UnitTestBase
     private final ConfiguredObjectTypeRegistry _typeRegistry = TestModel.getInstance().getTypeRegistry();
 
     @Test
+    @SuppressWarnings("rawtypes")
     public void testTypeSpecialisations()
     {
-        Collection<Class<? extends ConfiguredObject>> types = _typeRegistry.getTypeSpecialisations(TestEngine.class);
+        final Collection<Class<? extends ConfiguredObject>> types =
+                _typeRegistry.getTypeSpecialisations(TestEngine.class);
 
-        assertEquals("Unexpected number of specialisations for " + TestEngine.class + " Found : " + types,
-                            (long) 3,
-                            (long) types.size());
-
-
+        assertEquals(3, (long) types.size(), "Unexpected number of specialisations for " +
+                TestEngine.class + " Found : " + types);
         assertTrue(types.contains(TestPetrolEngineImpl.class));
         assertTrue(types.contains(TestHybridEngineImpl.class));
         assertTrue(types.contains(TestElecEngineImpl.class));
@@ -68,12 +67,14 @@ public class ConfiguredObjectTypeRegistryTest extends UnitTestBase
     public void testGetValidChildTypes()
     {
         // The standard car restricts its engine type
-        Collection<String> standardCarValidEnginesTypes = _typeRegistry.getValidChildTypes(TestStandardCarImpl.class, TestEngine.class);
+        final Collection<String> standardCarValidEnginesTypes =
+                _typeRegistry.getValidChildTypes(TestStandardCarImpl.class, TestEngine.class);
         assertThat(standardCarValidEnginesTypes, hasItem(TestPetrolEngineImpl.TEST_PETROL_ENGINE_TYPE));
         assertThat(standardCarValidEnginesTypes, hasItem(TestHybridEngineImpl.TEST_HYBRID_ENGINE_TYPE));
         assertThat(standardCarValidEnginesTypes.size(), is(2));
 
-        Collection<String> kitCarValidEngineTypes = _typeRegistry.getValidChildTypes(TestKitCarImpl.class, TestEngine.class);
+        final Collection<String> kitCarValidEngineTypes =
+                _typeRegistry.getValidChildTypes(TestKitCarImpl.class, TestEngine.class);
         // Would it be more useful to producers of management UIs if this were populated with all possible types?
         assertNull(kitCarValidEngineTypes);
     }
@@ -82,24 +83,27 @@ public class ConfiguredObjectTypeRegistryTest extends UnitTestBase
     public void testManagedInterfaces()
     {
         // The electric engine is rechargable
-        Set<Class<? extends ManagedInterface>> elecEngIntfcs = _typeRegistry.getManagedInterfaces(TestElecEngine.class);
+        final Set<Class<? extends ManagedInterface>> elecEngIntfcs =
+                _typeRegistry.getManagedInterfaces(TestElecEngine.class);
         assertThat(elecEngIntfcs, hasItem(TestRechargeable.class));
         assertThat(elecEngIntfcs.size(), is(1));
 
         // The petrol engine implements no additional interfaces
-        Set<Class<? extends ManagedInterface>> stdCarIntfcs = _typeRegistry.getManagedInterfaces(TestPetrolEngine.class);
+        final Set<Class<? extends ManagedInterface>> stdCarIntfcs =
+                _typeRegistry.getManagedInterfaces(TestPetrolEngine.class);
         assertThat(stdCarIntfcs.size(), is(0));
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testOperations()
     {
         final String objectName = "testKitCar";
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
-        attributes.put(ConfiguredObject.TYPE, TestKitCarImpl.TEST_KITCAR_TYPE);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName,
+                ConfiguredObject.TYPE, TestKitCarImpl.TEST_KITCAR_TYPE);
 
-        TestCar object = TestModel.getInstance().getObjectFactory().create(TestCar.class, attributes, null);
+        final TestCar<?> object =
+                TestModel.getInstance().getObjectFactory().create(TestCar.class, attributes, null);
 
         assertEquals(TestKitCarImpl.class, object.getTypeClass());
 
@@ -110,89 +114,61 @@ public class ConfiguredObjectTypeRegistryTest extends UnitTestBase
                 (ConfiguredObjectOperation<TestCar<?>>) kitCarOperations.get("openDoor");
 
         // test explicitly setting parameter
-        Object returnVal = operation.perform(object, Collections.<String, Object>singletonMap("door", "DRIVER"));
+        Object returnVal = operation.perform(object, Map.of("door", "DRIVER"));
         assertEquals(TestCar.Door.DRIVER, returnVal);
 
         // test default parameter
-        returnVal = operation.perform(object, Collections.<String, Object>emptyMap());
+        returnVal = operation.perform(object, Map.of());
         assertEquals(TestCar.Door.PASSENGER, returnVal);
 
-        try
-        {
-            operation.perform(object, Collections.<String, Object>singletonMap("seat", "DRIVER"));
-            fail("Should not be able to pass in an unused parameter");
-        }
-        catch(IllegalArgumentException e)
-        {
-            // pass
-        }
-
-        try
-        {
-            operation.perform(object, Collections.<String, Object>singletonMap("door", "[\"eggs\", \"flour\", \"milk\"]"));
-            fail("Should not be able to pass in a parameter of the wrong type");
-        }
-        catch(IllegalArgumentException e)
-        {
-            // pass
-        }
+        assertThrows(IllegalArgumentException.class,
+                () -> operation.perform(object, Map.of("seat", "DRIVER")),
+                "Should not be able to pass in an unused parameter");
+        assertThrows(IllegalArgumentException.class,
+                () -> operation.perform(object, Map.of("door", "[\"eggs\", \"flour\", \"milk\"]")),
+                "Should not be able to pass in a parameter of the wrong type");
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void testOperationWithMandatoryParameter_RejectsNullParameter()
     {
         final String objectName = "testKitCar";
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
-        attributes.put(ConfiguredObject.TYPE, TestKitCarImpl.TEST_KITCAR_TYPE);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName,
+                ConfiguredObject.TYPE, TestKitCarImpl.TEST_KITCAR_TYPE);
+        final TestCar<?> object = TestModel.getInstance().getObjectFactory().create(TestCar.class, attributes, null);
+        final Map<String, ConfiguredObjectOperation<?>> operations = _typeRegistry.getOperations(object.getClass());
+        final ConfiguredObjectOperation<TestCar<?>> operation = (ConfiguredObjectOperation<TestCar<?>>) operations.get("startEngine");
 
-        TestCar object = TestModel.getInstance().getObjectFactory().create(TestCar.class, attributes, null);
-        Map<String, ConfiguredObjectOperation<?>> operations = _typeRegistry.getOperations(object.getClass());
-
-        ConfiguredObjectOperation<TestCar<?>> operation = (ConfiguredObjectOperation<TestCar<?>>) operations.get("startEngine");
-
-        try
-        {
-            operation.perform(object, Collections.<String, Object>emptyMap());
-            fail("Exception not thrown");
-        }
-        catch (IllegalArgumentException e)
-        {
-            // PASS
-        }
-
-        try
-        {
-            operation.perform(object, Collections.singletonMap("keyCode", null));
-            fail("Exception not thrown");
-        }
-        catch (IllegalArgumentException e)
-        {
-            // PASS
-        }
+        assertThrows(IllegalArgumentException.class,
+                () -> operation.perform(object, Map.of()),
+                "Exception not thrown");
+        assertThrows(IllegalArgumentException.class,
+                () -> operation.perform(object, Collections.singletonMap("keyCode", null)),
+                "Exception not thrown");
     }
 
     @Test
-    public void testEnumValidValues_UnrestrictedSet() throws Exception
+    public void testEnumValidValues_UnrestrictedSet()
     {
-        Map<String, ConfiguredObjectAttribute<?, ?>> attributeTypes = _typeRegistry.getAttributeTypes(TestCar.class);
-        ConfiguredSettableAttribute<?, ?> attribute = (ConfiguredSettableAttribute<?, ?>) attributeTypes.get("bodyColour");
+        final Map<String, ConfiguredObjectAttribute<?, ?>> attributeTypes =
+                _typeRegistry.getAttributeTypes(TestCar.class);
+        final ConfiguredSettableAttribute<?, ?> attribute =
+                (ConfiguredSettableAttribute<?, ?>) attributeTypes.get("bodyColour");
 
-
-        assertEquals("The attribute's valid values should match the set of the enum",
-                            Lists.newArrayList("BLACK", "RED", "BLUE", "GREY"),
-                            attribute.validValues());
+        assertEquals(Lists.newArrayList("BLACK", "RED", "BLUE", "GREY"), attribute.validValues(),
+                "The attribute's valid values should match the set of the enum");
     }
 
     @Test
-    public void testEnumValidValues_RestrictedSet() throws Exception
+    public void testEnumValidValues_RestrictedSet()
     {
-        Map<String, ConfiguredObjectAttribute<?, ?>> attributeTypes = _typeRegistry.getAttributeTypes(TestCar.class);
-        ConfiguredSettableAttribute<?, ?> attribute = (ConfiguredSettableAttribute<?, ?>) attributeTypes.get("interiorColour");
+        final Map<String, ConfiguredObjectAttribute<?, ?>> attributeTypes =
+                _typeRegistry.getAttributeTypes(TestCar.class);
+        final ConfiguredSettableAttribute<?, ?> attribute =
+                (ConfiguredSettableAttribute<?, ?>) attributeTypes.get("interiorColour");
 
-        assertEquals(
-                "The attribute's valid values should match the restricted set defined on the attribute itself",
-                Lists.newArrayList("GREY", "BLACK"),
-                attribute.validValues());
+        assertEquals(Lists.newArrayList("GREY", "BLACK"), attribute.validValues(),
+                "The attribute's valid values should match the restricted set defined on the attribute itself");
     }
 }
