@@ -18,33 +18,35 @@
  */
 package org.apache.qpid.server.model.testmodels.singleton;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.security.PrivilegedAction;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import javax.security.auth.Subject;
 
 import com.google.common.collect.Sets;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.configuration.IllegalConfigurationException;
 import org.apache.qpid.server.model.AbstractConfigurationChangeListener;
 import org.apache.qpid.server.model.AbstractConfiguredObject;
 import org.apache.qpid.server.model.ConfiguredObject;
+import org.apache.qpid.server.model.ConfiguredObjectFactory;
 import org.apache.qpid.server.model.Model;
 import org.apache.qpid.server.model.SystemConfig;
 import org.apache.qpid.server.security.auth.AuthenticatedPrincipal;
@@ -52,29 +54,27 @@ import org.apache.qpid.server.security.auth.UsernamePrincipal;
 import org.apache.qpid.server.store.ConfiguredObjectRecord;
 import org.apache.qpid.test.utils.UnitTestBase;
 
-
 /**
  * Tests behaviour of AbstractConfiguredObject related to attributes including
  * persistence, defaulting, and attribute values derived from context variables.
  */
+@SuppressWarnings({"rawtypes", "unchecked"})
 public class AbstractConfiguredObjectTest extends UnitTestBase
 {
     private final Model _model = TestModel.getInstance();
+    private final ConfiguredObjectFactory _objectFactory = _model.getObjectFactory();
 
     @Test
     public void testAttributePersistence()
     {
         final String objectName = "testNonPersistAttributes";
-        TestSingleton object =
-                _model.getObjectFactory().create(TestSingleton.class,
-                                                Collections.<String, Object>singletonMap(ConfiguredObject.NAME,
-                                                                                         objectName),
-                                               null);
+        final TestSingleton object =
+                _objectFactory.create(TestSingleton.class, Map.of(ConfiguredObject.NAME, objectName), null);
 
         assertEquals(objectName, object.getName());
         assertNull(object.getAutomatedNonPersistedValue());
         assertNull(object.getAutomatedPersistedValue());
-        assertEquals((long) TestSingletonImpl.DERIVED_VALUE, object.getDerivedValue());
+        assertEquals(TestSingletonImpl.DERIVED_VALUE, object.getDerivedValue());
 
         ConfiguredObjectRecord record = object.asObjectRecord();
 
@@ -84,13 +84,10 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         assertFalse(record.getAttributes().containsKey(TestSingleton.AUTOMATED_NONPERSISTED_VALUE));
         assertFalse(record.getAttributes().containsKey(TestSingleton.DERIVED_VALUE));
 
-        Map<String, Object> updatedAttributes = new HashMap<>();
-
         final String newValue = "newValue";
-
-        updatedAttributes.put(TestSingleton.AUTOMATED_PERSISTED_VALUE, newValue);
-        updatedAttributes.put(TestSingleton.AUTOMATED_NONPERSISTED_VALUE, newValue);
-        updatedAttributes.put(TestSingleton.DERIVED_VALUE, System.currentTimeMillis());  // Will be ignored
+        final Map<String, Object> updatedAttributes = Map.of(TestSingleton.AUTOMATED_PERSISTED_VALUE, newValue,
+                TestSingleton.AUTOMATED_NONPERSISTED_VALUE, newValue,
+                TestSingleton.DERIVED_VALUE, System.currentTimeMillis());  // Will be ignored
         object.setAttributes(updatedAttributes);
 
         assertEquals(newValue, object.getAutomatedPersistedValue());
@@ -108,11 +105,8 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testDefaultedAttributeValue()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = Collections.<String, Object>singletonMap(TestSingleton.NAME, objectName);
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName);
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
         assertEquals(TestSingleton.DEFAULTED_VALUE_DEFAULT, object1.getDefaultedValue());
@@ -122,13 +116,9 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testOverriddenDefaultedAttributeValue()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.DEFAULTED_VALUE, "override");
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.DEFAULTED_VALUE, "override");
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object.getName());
         assertEquals("override", object.getDefaultedValue());
@@ -138,13 +128,9 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testOverriddenDefaultedAttributeValueRevertedToDefault()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.DEFAULTED_VALUE, "override");
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.DEFAULTED_VALUE, "override");
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object.getName());
         assertEquals("override", object.getDefaultedValue());
@@ -158,37 +144,32 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testDefaultInitialization()
     {
         TestSingleton object =
-                _model.getObjectFactory().create(TestSingleton.class,
-                                                 Collections.<String, Object>singletonMap(ConfiguredObject.NAME,
-                                                                                          "testDefaultInitialization"), null);
+                _objectFactory.create(TestSingleton.class, Map.of(ConfiguredObject.NAME, "testDefaultInitialization"), null);
         assertEquals(object.getAttrWithDefaultFromContextNoInit(), TestSingleton.testGlobalDefault);
         assertEquals(object.getAttrWithDefaultFromContextCopyInit(), TestSingleton.testGlobalDefault);
         assertEquals(object.getAttrWithDefaultFromContextMaterializeInit(), TestSingleton.testGlobalDefault);
 
         assertFalse(object.getActualAttributes().containsKey("attrWithDefaultFromContextNoInit"));
         assertEquals("${" + TestSingleton.TEST_CONTEXT_DEFAULT + "}",
-                            object.getActualAttributes().get("attrWithDefaultFromContextCopyInit"));
+                                object.getActualAttributes().get("attrWithDefaultFromContextCopyInit"));
         assertEquals(TestSingleton.testGlobalDefault,
-                            object.getActualAttributes().get("attrWithDefaultFromContextMaterializeInit"));
+                                object.getActualAttributes().get("attrWithDefaultFromContextMaterializeInit"));
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, "testDefaultInitialization2");
-        attributes.put(ConfiguredObject.CONTEXT, Collections.singletonMap(TestSingleton.TEST_CONTEXT_DEFAULT, "foo"));
-        object = _model.getObjectFactory().create(TestSingleton.class,
-                                         attributes, null);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, "testDefaultInitialization2",
+                ConfiguredObject.CONTEXT, Map.of(TestSingleton.TEST_CONTEXT_DEFAULT, "foo"));
+        object = _objectFactory.create(TestSingleton.class, attributes, null);
         assertEquals("foo", object.getAttrWithDefaultFromContextNoInit());
         assertEquals("foo", object.getAttrWithDefaultFromContextCopyInit());
         assertEquals("foo", object.getAttrWithDefaultFromContextMaterializeInit());
 
         assertFalse(object.getActualAttributes().containsKey("attrWithDefaultFromContextNoInit"));
         assertEquals("${" + TestSingleton.TEST_CONTEXT_DEFAULT + "}",
-                            object.getActualAttributes().get("attrWithDefaultFromContextCopyInit"));
+                                object.getActualAttributes().get("attrWithDefaultFromContextCopyInit"));
         assertEquals("foo", object.getActualAttributes().get("attrWithDefaultFromContextMaterializeInit"));
 
         setTestSystemProperty(TestSingleton.TEST_CONTEXT_DEFAULT, "bar");
-        object = _model.getObjectFactory().create(TestSingleton.class,
-                                        Collections.<String, Object>singletonMap(ConfiguredObject.NAME,
-                                                                                 "testDefaultInitialization3"), null);
+        object = _objectFactory.create(TestSingleton.class,
+                Map.of(ConfiguredObject.NAME, "testDefaultInitialization3"), null);
 
         assertEquals("bar", object.getAttrWithDefaultFromContextNoInit());
         assertEquals("bar", object.getAttrWithDefaultFromContextCopyInit());
@@ -196,7 +177,7 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
 
         assertFalse(object.getActualAttributes().containsKey("attrWithDefaultFromContextNoInit"));
         assertEquals("${" + TestSingleton.TEST_CONTEXT_DEFAULT + "}",
-                            object.getActualAttributes().get("attrWithDefaultFromContextCopyInit"));
+                                object.getActualAttributes().get("attrWithDefaultFromContextCopyInit"));
         assertEquals("bar", object.getActualAttributes().get("attrWithDefaultFromContextMaterializeInit"));
     }
 
@@ -204,13 +185,9 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testEnumAttributeValueFromString()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.ENUM_VALUE, TestEnum.TEST_ENUM1.name());
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.ENUM_VALUE, TestEnum.TEST_ENUM1.name());
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
         assertEquals(TestEnum.TEST_ENUM1, object1.getEnumValue());
@@ -220,13 +197,9 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testEnumAttributeValueFromEnum()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.ENUM_VALUE, TestEnum.TEST_ENUM1);
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.ENUM_VALUE, TestEnum.TEST_ENUM1);
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
         assertEquals(TestEnum.TEST_ENUM1, object1.getEnumValue());
@@ -236,62 +209,46 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testIntegerAttributeValueFromString()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.INT_VALUE, "-4");
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.INT_VALUE, "-4");
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
-        assertEquals((long) -4, (long) object1.getIntValue());
+        assertEquals(-4, (long) object1.getIntValue());
     }
 
     @Test
     public void testIntegerAttributeValueFromInteger()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.INT_VALUE, 5);
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.INT_VALUE, 5);
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
-        assertEquals((long) 5, (long) object1.getIntValue());
+        assertEquals(5, (long) object1.getIntValue());
     }
 
     @Test
     public void testIntegerAttributeValueFromDouble()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.INT_VALUE, 6.1);
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.INT_VALUE, 6.1);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object.getName());
-        assertEquals((long) 6, (long) object.getIntValue());
+        assertEquals(6, (long) object.getIntValue());
     }
 
     @Test
     public void testDateAttributeFromMillis()
     {
         final String objectName = "myName";
-        long now = System.currentTimeMillis();
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.DATE_VALUE, now);
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final long now = System.currentTimeMillis();
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.DATE_VALUE, now);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object.getName());
         assertEquals(new Date(now), object.getDateValue());
@@ -301,14 +258,10 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     public void testDateAttributeFromIso8601()
     {
         final String objectName = "myName";
-        String date = "1970-01-01";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.DATE_VALUE, date);
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final String date = "1970-01-01";
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.DATE_VALUE, date);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object.getName());
         assertEquals(new Date(0), object.getDateValue());
@@ -317,19 +270,15 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     @Test
     public void testStringAttributeValueFromContextVariableProvidedBySystemProperty()
     {
-        String sysPropertyName = "testStringAttributeValueFromContextVariableProvidedBySystemProperty";
-        String contextToken = "${" + sysPropertyName + "}";
+        final String sysPropertyName = "testStringAttributeValueFromContextVariableProvidedBySystemProperty";
+        final String contextToken = "${" + sysPropertyName + "}";
 
         System.setProperty(sysPropertyName, "myValue");
 
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.STRING_VALUE, contextToken);
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.STRING_VALUE, contextToken);
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
         assertEquals("myValue", object1.getStringValue());
@@ -337,16 +286,14 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         // System property set empty string
 
         System.setProperty(sysPropertyName, "");
-        TestSingleton object2 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object2 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals("", object2.getStringValue());
 
         // System property not set
         System.clearProperty(sysPropertyName);
 
-        TestSingleton object3 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object3 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         // yields the unexpanded token - not sure if this is really useful behaviour?
         assertEquals(contextToken, object3.getStringValue());
@@ -355,23 +302,17 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     @Test
     public void testMapAttributeValueFromContextVariableProvidedBySystemProperty()
     {
-        String sysPropertyName = "testMapAttributeValueFromContextVariableProvidedBySystemProperty";
-        String contextToken = "${" + sysPropertyName + "}";
-
-        Map<String,String> expectedMap = new HashMap<>();
-        expectedMap.put("field1", "value1");
-        expectedMap.put("field2", "value2");
+        final String sysPropertyName = "testMapAttributeValueFromContextVariableProvidedBySystemProperty";
+        final String contextToken = "${" + sysPropertyName + "}";
+        final Map<String,String> expectedMap = Map.of("field1", "value1",
+                "field2", "value2");
 
         System.setProperty(sysPropertyName, "{ \"field1\" : \"value1\", \"field2\" : \"value2\"}");
 
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.MAP_VALUE, contextToken);
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.MAP_VALUE, contextToken);
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object1.getName());
         assertEquals(expectedMap, object1.getMapValue());
@@ -383,17 +324,13 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     @Test
     public void testStringAttributeValueFromContextVariableProvidedObjectsContext()
     {
-        String contextToken = "${myReplacement}";
-
+        final String contextToken = "${myReplacement}";
         final String objectName = "myName";
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName,
+                ConfiguredObject.CONTEXT, Map.of("myReplacement", "myValue"),
+                TestSingleton.STRING_VALUE, contextToken);
+        final TestSingleton object1 = _objectFactory.create(TestSingleton.class, attributes, null);
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
-        attributes.put(ConfiguredObject.CONTEXT, Collections.singletonMap("myReplacement", "myValue"));
-        attributes.put(TestSingleton.STRING_VALUE, contextToken);
-
-        TestSingleton object1 = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
         // Check the object's context itself
         assertTrue(object1.getContext().containsKey("myReplacement"));
         assertEquals("myValue", object1.getContext().get("myReplacement"));
@@ -405,121 +342,81 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     @Test
     public void testInvalidIntegerAttributeValueFromContextVariable()
     {
-        final Map<String, Object> attributes = new HashMap<>();
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, "myName",
+                TestSingleton.TYPE, TestSingletonImpl.TEST_SINGLETON_TYPE,
+                TestSingleton.CONTEXT, Map.of("contextVal", "notAnInteger"),
+                TestSingleton.INT_VALUE, "${contextVal}");
 
-        attributes.put(TestSingleton.NAME, "myName");
-        attributes.put(TestSingleton.TYPE, TestSingletonImpl.TEST_SINGLETON_TYPE);
-        attributes.put(TestSingleton.CONTEXT, Collections.singletonMap("contextVal", "notAnInteger"));
-        attributes.put(TestSingleton.INT_VALUE, "${contextVal}");
-
-        try
-        {
-            _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-            fail("creation of child object should have failed due to invalid value");
-        }
-        catch (IllegalArgumentException e)
-        {
-            // PASS
-            String message = e.getMessage();
-            assertTrue("Message does not contain the attribute name", message.contains("intValue"));
-            assertTrue("Message does not contain the non-interpolated value", message.contains("contextVal"));
-            assertTrue("Message does not contain the interpolated value", message.contains("contextVal"));
-        }
+        final IllegalArgumentException thrown = assertThrows(IllegalArgumentException.class,
+                () -> _objectFactory.create(TestSingleton.class, attributes, null),
+                "Creation of child object should have failed due to invalid value");
+        final String message = thrown.getMessage();
+        assertTrue(message.contains("intValue"), "Message does not contain the attribute name");
+        assertTrue(message.contains("contextVal"), "Message does not contain the non-interpolated value");
+        assertTrue(message.contains("contextVal"), "Message does not contain the interpolated value");
     }
 
     @Test
-    public void testCreateEnforcesAttributeValidValues() throws Exception
+    public void testCreateEnforcesAttributeValidValues()
     {
         final String objectName = getTestName();
-        Map<String, Object> illegalCreateAttributes = new HashMap<>();
-        illegalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        illegalCreateAttributes.put(TestSingleton.VALID_VALUE, "illegal");
+        final Map<String, Object> illegalCreateAttributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.VALID_VALUE, "illegal");
 
-        try
-        {
-            _model.getObjectFactory().create(TestSingleton.class, illegalCreateAttributes, null);
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException ice)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> _objectFactory.create(TestSingleton.class, illegalCreateAttributes, null),
+                "Exception not thrown");
 
-        Map<String, Object> legalCreateAttributes = new HashMap<>();
-        legalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        legalCreateAttributes.put(TestSingleton.VALID_VALUE, TestSingleton.VALID_VALUE1);
+        final Map<String, Object> legalCreateAttributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.VALID_VALUE, TestSingleton.VALID_VALUE1);
 
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class, legalCreateAttributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, legalCreateAttributes, null);
         assertEquals(TestSingleton.VALID_VALUE1, object.getValidValue());
     }
 
     @Test
-    public void testCreateEnforcesAttributeValidValuePattern() throws Exception
+    public void testCreateEnforcesAttributeValidValuePattern()
     {
         final String objectName = getTestName();
-        Map<String, Object> illegalCreateAttributes = new HashMap<>();
-        illegalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        illegalCreateAttributes.put(TestSingleton.VALUE_WITH_PATTERN, "illegal");
+        final Map<String, Object> illegalCreateAttributes1 = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.VALUE_WITH_PATTERN, "illegal");
 
-        try
-        {
-            _model.getObjectFactory().create(TestSingleton.class, illegalCreateAttributes, null);
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException ice)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> _objectFactory.create(TestSingleton.class, illegalCreateAttributes1, null),
+                "Exception not thrown");
 
-        illegalCreateAttributes = new HashMap<>();
-        illegalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        illegalCreateAttributes.put(TestSingleton.LIST_VALUE_WITH_PATTERN, Arrays.asList("1.1.1.1", "1"));
+        final Map<String, Object> illegalCreateAttributes2 = Map.of(
+                ConfiguredObject.NAME, objectName,
+                TestSingleton.LIST_VALUE_WITH_PATTERN, List.of("1.1.1.1", "1"));
 
-        try
-        {
-            _model.getObjectFactory().create(TestSingleton.class, illegalCreateAttributes, null);
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException ice)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> _objectFactory.create(TestSingleton.class, illegalCreateAttributes2, null),
+                "Exception not thrown");
 
+        final Map<String, Object> legalCreateAttributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.VALUE_WITH_PATTERN, "foozzzzzbar",
+                TestSingleton.LIST_VALUE_WITH_PATTERN, List.of("1.1.1.1", "255.255.255.255"));
 
-        Map<String, Object> legalCreateAttributes = new HashMap<>();
-        legalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        legalCreateAttributes.put(TestSingleton.VALUE_WITH_PATTERN, "foozzzzzbar");
-        legalCreateAttributes.put(TestSingleton.LIST_VALUE_WITH_PATTERN, Arrays.asList("1.1.1.1", "255.255.255.255"));
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class, legalCreateAttributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, legalCreateAttributes, null);
         assertEquals("foozzzzzbar", object.getValueWithPattern());
     }
 
-
     @Test
-    public void testChangeEnforcesAttributeValidValues() throws Exception
+    public void testChangeEnforcesAttributeValidValues()
     {
         final String objectName = getTestName();
-        Map<String, Object> legalCreateAttributes = new HashMap<>();
-        legalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        legalCreateAttributes.put(TestSingleton.VALID_VALUE, TestSingleton.VALID_VALUE1);
+        final Map<String, Object> legalCreateAttributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.VALID_VALUE, TestSingleton.VALID_VALUE1);
 
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class, legalCreateAttributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, legalCreateAttributes, null);
         assertEquals(TestSingleton.VALID_VALUE1, object.getValidValue());
 
-        object.setAttributes(Collections.singletonMap(TestSingleton.VALID_VALUE, TestSingleton.VALID_VALUE2));
+        object.setAttributes(Map.of(TestSingleton.VALID_VALUE, TestSingleton.VALID_VALUE2));
         assertEquals(TestSingleton.VALID_VALUE2, object.getValidValue());
 
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.VALID_VALUE, "illegal"));
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException iae)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.VALID_VALUE, "illegal")),
+                "Exception not thrown");
 
         assertEquals(TestSingleton.VALID_VALUE2, object.getValidValue());
 
@@ -528,84 +425,63 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     }
 
     @Test
-    public void testCreateEnforcesAttributeValidValuesWithSets() throws Exception
+    public void testCreateEnforcesAttributeValidValuesWithSets()
     {
         final String objectName = getTestName();
-        final Map<String, Object> name = Collections.singletonMap(ConfiguredObject.NAME, (Object)objectName);
+        final Map<String, Object> name = Map.of(ConfiguredObject.NAME, objectName);
 
-        Map<String, Object> illegalCreateAttributes = new HashMap<>(name);
-        illegalCreateAttributes.put(TestSingleton.ENUMSET_VALUES, Collections.singleton(TestEnum.TEST_ENUM3));
+        final Map<String, Object> illegalCreateAttributes = new HashMap<>(name);
+        illegalCreateAttributes.put(TestSingleton.ENUMSET_VALUES, Set.of(TestEnum.TEST_ENUM3));
 
-        try
-        {
-            _model.getObjectFactory().create(TestSingleton.class, illegalCreateAttributes, null);
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException ice)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> _objectFactory.create(TestSingleton.class, illegalCreateAttributes, null),
+                "Exception not thrown");
+
 
         {
-            Map<String, Object> legalCreateAttributesEnums = new HashMap<>(name);
+            final Map<String, Object> legalCreateAttributesEnums = new HashMap<>(name);
             legalCreateAttributesEnums.put(TestSingleton.ENUMSET_VALUES,
-                                           Arrays.asList(TestEnum.TEST_ENUM2, TestEnum.TEST_ENUM3));
+                    List.of(TestEnum.TEST_ENUM2, TestEnum.TEST_ENUM3));
 
-            TestSingleton obj = _model.getObjectFactory().create(TestSingleton.class, legalCreateAttributesEnums, null);
-            assertTrue(obj.getEnumSetValues().containsAll(Arrays.asList(TestEnum.TEST_ENUM2, TestEnum.TEST_ENUM3)));
+            final TestSingleton obj = _objectFactory.create(TestSingleton.class, legalCreateAttributesEnums, null);
+            assertTrue(obj.getEnumSetValues().containsAll(List.of(TestEnum.TEST_ENUM2, TestEnum.TEST_ENUM3)));
         }
 
         {
-            Map<String, Object> legalCreateAttributesStrings = new HashMap<>(name);
+            final Map<String, Object> legalCreateAttributesStrings = new HashMap<>(name);
             legalCreateAttributesStrings.put(TestSingleton.ENUMSET_VALUES,
-                                             Arrays.asList(TestEnum.TEST_ENUM2.name(), TestEnum.TEST_ENUM3.name()));
+                    List.of(TestEnum.TEST_ENUM2.name(), TestEnum.TEST_ENUM3.name()));
 
-            TestSingleton
-                    obj = _model.getObjectFactory().create(TestSingleton.class, legalCreateAttributesStrings, null);
-            assertTrue(obj.getEnumSetValues().containsAll(Arrays.asList(TestEnum.TEST_ENUM2, TestEnum.TEST_ENUM3)));
+            final TestSingleton obj =
+                    _objectFactory.create(TestSingleton.class, legalCreateAttributesStrings, null);
+            assertTrue(obj.getEnumSetValues().containsAll(List.of(TestEnum.TEST_ENUM2, TestEnum.TEST_ENUM3)));
         }
     }
 
-
     @Test
-    public void testChangeEnforcesAttributeValidValuePatterns() throws Exception
+    public void testChangeEnforcesAttributeValidValuePatterns()
     {
         final String objectName = getTestName();
-        Map<String, Object> legalCreateAttributes = new HashMap<>();
-        legalCreateAttributes.put(ConfiguredObject.NAME, objectName);
-        legalCreateAttributes.put(TestSingleton.VALUE_WITH_PATTERN, "foozzzzzbar");
-        legalCreateAttributes.put(TestSingleton.LIST_VALUE_WITH_PATTERN, Arrays.asList("1.1.1.1", "255.255.255.255"));
+        final Map<String, Object> legalCreateAttributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.VALUE_WITH_PATTERN, "foozzzzzbar",
+                TestSingleton.LIST_VALUE_WITH_PATTERN, List.of("1.1.1.1", "255.255.255.255"));
 
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class, legalCreateAttributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, legalCreateAttributes, null);
         assertEquals("foozzzzzbar", object.getValueWithPattern());
-        assertEquals(Arrays.asList("1.1.1.1", "255.255.255.255"), object.getListValueWithPattern());
+        assertEquals(List.of("1.1.1.1", "255.255.255.255"), object.getListValueWithPattern());
 
-        object.setAttributes(Collections.singletonMap(TestSingleton.VALUE_WITH_PATTERN, "foobar"));
+        object.setAttributes(Map.of(TestSingleton.VALUE_WITH_PATTERN, "foobar"));
         assertEquals("foobar", object.getValueWithPattern());
 
-        object.setAttributes(Collections.singletonMap(TestSingleton.LIST_VALUE_WITH_PATTERN, Collections.singletonList("1.2.3.4")));
+        object.setAttributes(Map.of(TestSingleton.LIST_VALUE_WITH_PATTERN, Collections.singletonList("1.2.3.4")));
         assertEquals(Collections.singletonList("1.2.3.4"), object.getListValueWithPattern());
 
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.VALUE_WITH_PATTERN, "foobaz"));
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException iae)
-        {
-            // PASS
-        }
-
-
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.LIST_VALUE_WITH_PATTERN, Arrays.asList("1.1.1.1", "1")));
-            fail("Exception not thrown");
-        }
-        catch (IllegalConfigurationException iae)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.VALUE_WITH_PATTERN, "foobaz")),
+                "Exception not thrown");
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.LIST_VALUE_WITH_PATTERN, List.of("1.1.1.1", "1"))),
+                "Exception not thrown");
 
         assertEquals("foobar", object.getValueWithPattern());
         assertEquals(Collections.singletonList("1.2.3.4"), object.getListValueWithPattern());
@@ -613,8 +489,8 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         object.setAttributes(Collections.singletonMap(TestSingleton.VALUE_WITH_PATTERN, null));
         assertNull(object.getValueWithPattern());
 
-        object.setAttributes(Collections.singletonMap(TestSingleton.LIST_VALUE_WITH_PATTERN, Collections.emptyList()));
-        assertEquals(Collections.emptyList(), object.getListValueWithPattern());
+        object.setAttributes(Map.of(TestSingleton.LIST_VALUE_WITH_PATTERN, List.of()));
+        assertEquals(List.of(), object.getListValueWithPattern());
 
         object.setAttributes(Collections.singletonMap(TestSingleton.LIST_VALUE_WITH_PATTERN, null));
         assertNull(object.getListValueWithPattern());
@@ -625,19 +501,17 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String objectName = "myName";
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName);
 
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
-        assertTrue("context default not in contextKeys",
-                          object.getContextKeys(true).contains(TestSingleton.TEST_CONTEXT_DEFAULT));
+        assertTrue(object.getContextKeys(true).contains(TestSingleton.TEST_CONTEXT_DEFAULT),
+                "context default not in contextKeys");
         assertEquals("default", object.getContextValue(String.class, TestSingleton.TEST_CONTEXT_DEFAULT));
 
         setTestSystemProperty(TestSingleton.TEST_CONTEXT_DEFAULT, "notdefault");
-        assertTrue("context default not in contextKeys",
-                          object.getContextKeys(true).contains(TestSingleton.TEST_CONTEXT_DEFAULT));
+        assertTrue(object.getContextKeys(true).contains(TestSingleton.TEST_CONTEXT_DEFAULT),
+                "context default not in contextKeys");
         assertEquals("notdefault", object.getContextValue(String.class, TestSingleton.TEST_CONTEXT_DEFAULT));
     }
 
@@ -646,18 +520,15 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String objectName = "myName";
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName);
 
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
-        assertTrue("context default not in contextKeys",
-                          object.getContextKeys(true).contains(TestSingleton.TEST_CONTEXT_DEFAULT_WITH_THISREF));
+        assertTrue(object.getContextKeys(true).contains(TestSingleton.TEST_CONTEXT_DEFAULT_WITH_THISREF),
+                "context default not in contextKeys");
 
-        String expected = "a context var that refers to an attribute " + objectName;
-        assertEquals(expected,
-                            object.getContextValue(String.class, TestSingleton.TEST_CONTEXT_DEFAULT_WITH_THISREF));
+        final String expected = "a context var that refers to an attribute " + objectName;
+        assertEquals(expected, object.getContextValue(String.class, TestSingleton.TEST_CONTEXT_DEFAULT_WITH_THISREF));
     }
 
     @Test
@@ -665,17 +536,15 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String objectName = "myName";
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName);
 
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-        assertEquals((long) TestSingletonImpl.DERIVED_VALUE, object.getDerivedValue());
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
+        assertEquals(TestSingletonImpl.DERIVED_VALUE, object.getDerivedValue());
 
         // Check that update is ignored
-        object.setAttributes(Collections.singletonMap(TestSingleton.DERIVED_VALUE, System.currentTimeMillis()));
+        object.setAttributes(Map.of(TestSingleton.DERIVED_VALUE, System.currentTimeMillis()));
 
-        assertEquals((long) TestSingletonImpl.DERIVED_VALUE, object.getDerivedValue());
+        assertEquals(TestSingletonImpl.DERIVED_VALUE, object.getDerivedValue());
     }
 
     @Test
@@ -684,29 +553,21 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         final String objectName = "myName";
         final String secret = "secret";
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
-        attributes.put(TestSingleton.SECURE_VALUE, secret);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.SECURE_VALUE, secret);
 
-        final TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
-        assertEquals(AbstractConfiguredObject.SECURED_STRING_VALUE,
-                            object.getAttribute(TestSingleton.SECURE_VALUE));
+        assertEquals(AbstractConfiguredObject.SECURED_STRING_VALUE, object.getAttribute(TestSingleton.SECURE_VALUE));
         assertEquals(secret, object.getSecureValue());
 
         //verify we can retrieve the actual secure value using system rights
-        object.doAsSystem(
-                     new PrivilegedAction<Object>()
-                     {
-                         @Override
-                         public Object run()
-                         {
-                             assertEquals(secret, object.getAttribute(TestSingleton.SECURE_VALUE));
-                             assertEquals(secret, object.getSecureValue());
-                             return null;
-                         }
-                     });
+        object.doAsSystem((PrivilegedAction<Object>) () ->
+        {
+            assertEquals(secret, object.getAttribute(TestSingleton.SECURE_VALUE));
+            assertEquals(secret, object.getSecureValue());
+            return null;
+        });
     }
 
     @Test
@@ -714,103 +575,64 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String originalValue = "myvalue";
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, "myName");
-        attributes.put(TestSingleton.IMMUTABLE_VALUE, originalValue);
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, "myName",
+                TestSingleton.IMMUTABLE_VALUE, originalValue);
 
-        final TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
-        assertEquals("Immutable value unexpectedly changed", originalValue, object.getImmutableValue());
+        assertEquals(originalValue, object.getImmutableValue(), "Immutable value unexpectedly changed");
 
         // Update to the same value is allowed
-                     object.setAttributes(Collections.singletonMap(TestSingleton.IMMUTABLE_VALUE, originalValue));
+        object.setAttributes(Map.of(TestSingleton.IMMUTABLE_VALUE, originalValue));
 
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.IMMUTABLE_VALUE, "newvalue"));
-            fail("Exception not thrown");
-        }
-        catch(IllegalConfigurationException e)
-        {
-            // PASS
-        }
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.IMMUTABLE_VALUE, "newvalue")),
+                "Exception not thrown");
         assertEquals(originalValue, object.getImmutableValue());
 
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.IMMUTABLE_VALUE, null));
-            fail("Exception not thrown");
-        }
-        catch(IllegalConfigurationException e)
-        {
-            // PASS
-        }
-
-        assertEquals("Immutable value unexpectedly changed", originalValue, object.getImmutableValue());
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Collections.singletonMap(TestSingleton.IMMUTABLE_VALUE, null)),
+                "Exception not thrown");
+        assertEquals(originalValue, object.getImmutableValue(), "Immutable value unexpectedly changed");
     }
 
     @Test
     public void testImmutableAttributeNullValue()
     {
-        Map<String, Object> attributes = new HashMap<>();
+        final Map<String, Object> attributes = new HashMap<>();
         attributes.put(ConfiguredObject.NAME, "myName");
         attributes.put(TestSingleton.IMMUTABLE_VALUE, null);
 
-        final TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertNull(object.getImmutableValue());
 
         // Update to the same value is allowed
         object.setAttributes(Collections.singletonMap(TestSingleton.IMMUTABLE_VALUE, null));
 
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.IMMUTABLE_VALUE, "newvalue"));
-            fail("Exception not thrown");
-        }
-        catch(IllegalConfigurationException e)
-        {
-            // PASS
-        }
-        assertNull("Immutable value unexpectedly changed", object.getImmutableValue());
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.IMMUTABLE_VALUE, "newvalue")),
+                "Exception not thrown");
+        assertNull(object.getImmutableValue(), "Immutable value unexpectedly changed");
     }
 
     /** Id and Type are key attributes in the model and are thus worthy of test of their own */
     @Test
     public void testIdAndTypeAreImmutableAttribute()
     {
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, "myName");
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, "myName");
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
+        final UUID originalUuid = object.getId();
+        final String originalType = object.getType();
 
-        final TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-        UUID originalUuid = object.getId();
-        String originalType = object.getType();
-
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.ID, UUID.randomUUID()));
-            fail("Exception not thrown");
-        }
-        catch(IllegalConfigurationException e)
-        {
-            // PASS
-        }
-
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.ID, randomUUID())),
+                "Exception not thrown");
         assertEquals(originalUuid, object.getId());
 
-        try
-        {
-            object.setAttributes(Collections.singletonMap(TestSingleton.TYPE, "newtype"));
-            fail("Exception not thrown");
-        }
-        catch(IllegalConfigurationException e)
-        {
-            // PASS
-        }
-
+        assertThrows(IllegalConfigurationException.class,
+                () -> object.setAttributes(Map.of(TestSingleton.TYPE, "newtype")),
+                "Exception not thrown");
         assertEquals(originalType, object.getType());
     }
 
@@ -819,12 +641,10 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String objectName = "listenerFiring";
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, objectName);
-        attributes.put(TestSingleton.STRING_VALUE, "first");
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, objectName,
+                TestSingleton.STRING_VALUE, "first");
 
-        final TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         final AtomicInteger listenerCount = new AtomicInteger();
         final LinkedHashMap<String, String> updates = new LinkedHashMap<>();
@@ -837,35 +657,35 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
                                      final Object newAttributeValue)
             {
                 listenerCount.incrementAndGet();
-                String delta = String.valueOf(oldAttributeValue) + "=>" + String.valueOf(newAttributeValue);
+                String delta = oldAttributeValue + "=>" + newAttributeValue;
                 updates.put(attributeName, delta);
             }
         });
 
         // Set updated value (should cause listener to fire)
-        object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, "second"));
+        object.setAttributes(Map.of(TestSingleton.STRING_VALUE, "second"));
 
-        assertEquals((long) 1, (long) listenerCount.get());
+        assertEquals(1, (long) listenerCount.get());
         String delta = updates.remove(TestSingleton.STRING_VALUE);
         assertEquals("first=>second", delta);
 
         // Set unchanged value (should not cause listener to fire)
-        object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, "second"));
-        assertEquals((long) 1, (long) listenerCount.get());
+        object.setAttributes(Map.of(TestSingleton.STRING_VALUE, "second"));
+        assertEquals(1, (long) listenerCount.get());
 
         // Set value to null (should cause listener to fire)
         object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, null));
-        assertEquals((long) 2, (long) listenerCount.get());
+        assertEquals(2, (long) listenerCount.get());
         delta = updates.remove(TestSingleton.STRING_VALUE);
         assertEquals("second=>null", delta);
 
         // Set to null again (should not cause listener to fire)
         object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, null));
-        assertEquals((long) 2, (long) listenerCount.get());
+        assertEquals(2, (long) listenerCount.get());
 
         // Set updated value (should cause listener to fire)
-        object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, "third"));
-        assertEquals((long) 3, (long) listenerCount.get());
+        object.setAttributes(Map.of(TestSingleton.STRING_VALUE, "third"));
+        assertEquals(3, (long) listenerCount.get());
         delta = updates.remove(TestSingleton.STRING_VALUE);
         assertEquals("null=>third", delta);
     }
@@ -877,12 +697,10 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         setTestSystemProperty("foo2", "myValue2");
         setTestSystemProperty("foo3", null);
 
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(ConfiguredObject.NAME, getTestName());
-        attributes.put(TestSingleton.STRING_VALUE, "${foo1}");
+        final Map<String, Object> attributes = Map.of(ConfiguredObject.NAME, getTestName(),
+                TestSingleton.STRING_VALUE, "${foo1}");
 
-        final TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         final AtomicInteger listenerCount = new AtomicInteger();
         object.addChangeListener(new AbstractConfigurationChangeListener()
@@ -901,19 +719,19 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         assertEquals("${foo1}", object.getActualAttributes().get(TestSingleton.STRING_VALUE));
 
         // Update the actual value ${foo1} => ${foo2}
-        object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, "${foo2}"));
-        assertEquals((long) 1, (long) listenerCount.get());
+        object.setAttributes(Map.of(TestSingleton.STRING_VALUE, "${foo2}"));
+        assertEquals(1, (long) listenerCount.get());
 
         assertEquals("myValue2", object.getStringValue());
         assertEquals("${foo2}", object.getActualAttributes().get(TestSingleton.STRING_VALUE));
 
         // No change
-        object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, "${foo2}"));
-        assertEquals((long) 1, (long) listenerCount.get());
+        object.setAttributes(Map.of(TestSingleton.STRING_VALUE, "${foo2}"));
+        assertEquals(1, (long) listenerCount.get());
 
         // Update the actual value ${foo2} => ${foo3} (which doesn't have a value)
-        object.setAttributes(Collections.singletonMap(TestSingleton.STRING_VALUE, "${foo3}"));
-        assertEquals((long) 2, (long) listenerCount.get());
+        object.setAttributes(Map.of(TestSingleton.STRING_VALUE, "${foo3}"));
+        assertEquals(2, (long) listenerCount.get());
         assertEquals("${foo3}", object.getStringValue());
         assertEquals("${foo3}", object.getActualAttributes().get(TestSingleton.STRING_VALUE));
     }
@@ -923,38 +741,28 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String objectName = "myName";
         final Date now = new Date();
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-
-        Date createdTime = object.getCreatedTime();
-        assertTrue("Create date not populated", createdTime.compareTo(now) >= 0);
-        assertEquals("Last updated not populated", createdTime, object.getLastUpdatedTime());
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
+        final Date createdTime = object.getCreatedTime();
+        assertTrue(createdTime.compareTo(now) >= 0, "Create date not populated");
+        assertEquals(createdTime, object.getLastUpdatedTime(), "Last updated not populated");
 
         Thread.sleep(10);
-        object.setAttributes(Collections.singletonMap(TestSingleton.DESCRIPTION, "desc"));
-        assertEquals("Created time should not be updated by update", createdTime, object.getCreatedTime());
-        assertTrue("Last update time should be updated by update",
-                          object.getLastUpdatedTime().compareTo(createdTime) > 0);
+        object.setAttributes(Map.of(TestSingleton.DESCRIPTION, "desc"));
+        assertEquals(createdTime, object.getCreatedTime(), "Created time should not be updated by update");
+        assertTrue(object.getLastUpdatedTime().compareTo(createdTime) > 0,
+                "Last update time should be updated by update");
     }
 
     @Test
-    public void testStatistics() throws Exception
+    public void testStatistics()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
         final Map<String, Object> stats = object.getStatistics();
-        assertEquals("Unexpected number of statistics", (long) 1, (long) stats.size());
-        assertTrue("Expected statistic not found", stats.containsKey("longStatistic"));
+        assertEquals(1, (long) stats.size(), "Unexpected number of statistics");
+        assertTrue(stats.containsKey("longStatistic"), "Expected statistic not found");
     }
 
     @Test
@@ -968,51 +776,34 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
 
         Thread.sleep(5);  // Let a small amount of time pass
 
-        final Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, "myName");
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, "myName");
 
-        final TestSingleton object = Subject.doAs(creatorSubject,
-                     new PrivilegedAction<TestSingleton>()
-                     {
-                         @Override
-                         public TestSingleton run()
-                         {
-                             return _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-                         }
-                     });
+        final TestSingleton object = Subject.doAs(creatorSubject, (PrivilegedAction<TestSingleton>) () ->
+                _objectFactory.create(TestSingleton.class, attributes, null));
 
-        assertEquals("Unexpected creating user after object creation", creatingUser, object.getCreatedBy());
-        assertEquals("Unexpected last updating user after object creation",
-                            creatingUser,
-                            object.getLastUpdatedBy());
+        assertEquals(creatingUser, object.getCreatedBy(), "Unexpected creating user after object creation");
+        assertEquals(creatingUser, object.getLastUpdatedBy(), "Unexpected last updating user after object creation");
 
         final Date originalCreatedTime = object.getCreatedTime();
         final Date originalLastUpdatedTime = object.getLastUpdatedTime();
-        assertTrue("Unexpected created time", originalCreatedTime.after(now));
-        assertEquals("Unexpected created and updated time", originalCreatedTime, originalLastUpdatedTime);
+        assertTrue(originalCreatedTime.after(now), "Unexpected created time");
+        assertEquals(originalCreatedTime, originalLastUpdatedTime, "Unexpected created and updated time");
 
         Thread.sleep(5);  // Let a small amount of time pass
 
-        Subject.doAs(updaterSubject,
-                     new PrivilegedAction<Void>()
-                     {
-                         @Override
-                         public Void run()
-                         {
-                             object.setAttributes(Collections.singletonMap(TestSingleton.INT_VALUE, 5));
-                             return null;
-                         }
-                     });
+        Subject.doAs(updaterSubject, (PrivilegedAction<Void>) () ->
+        {
+            object.setAttributes(Map.of(TestSingleton.INT_VALUE, 5));
+            return null;
+        });
 
-        assertEquals("Creating user should not be changed by update", creatingUser, object.getCreatedBy());
-        assertEquals("Created time should not be changed by update",
-                            originalCreatedTime,
-                            object.getCreatedTime());
+        assertEquals(creatingUser, object.getCreatedBy(), "Creating user should not be changed by update");
+        assertEquals(originalCreatedTime, object.getCreatedTime(),
+                "Created time should not be changed by update");
 
-        assertEquals("Last updated by should be changed by update", updatingUser, object.getLastUpdatedBy());
-        assertTrue("Last updated time by should be changed by update",
-                          originalLastUpdatedTime.before(object.getLastUpdatedTime()));
+        assertEquals(updatingUser, object.getLastUpdatedBy(), "Last updated by should be changed by update");
+        assertTrue(originalLastUpdatedTime.before(object.getLastUpdatedTime()),
+                "Last updated time by should be changed by update");
     }
 
     @Test
@@ -1020,90 +811,56 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
     {
         final String user = "user";
         final Subject userSubject = createTestAuthenticatedSubject(user);
-
-        final Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, "myName");
-        attributes.put(TestSingleton.CREATED_BY, "bogusCreator");
-        attributes.put(TestSingleton.CREATED_TIME, new Date(0));
-        attributes.put(TestSingleton.LAST_UPDATED_BY, "bogusUpdater");
-        attributes.put(TestSingleton.LAST_UPDATED_TIME, new Date(0));
-
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, "myName",
+                TestSingleton.CREATED_BY, "bogusCreator",
+                TestSingleton.CREATED_TIME, new Date(0),
+                TestSingleton.LAST_UPDATED_BY, "bogusUpdater",
+                TestSingleton.LAST_UPDATED_TIME, new Date(0));
         final Date now = new Date();
         Thread.sleep(5);  // Let a small amount of time pass
 
-        final TestSingleton object = Subject.doAs(userSubject,
-                                                  new PrivilegedAction<TestSingleton>()
-                                                  {
-                                                      @Override
-                                                      public TestSingleton run()
-                                                      {
-                                                          return _model.getObjectFactory().create(TestSingleton.class,
-                                                                    attributes, null);
-                                                      }
-                                                  });
+        final TestSingleton object = Subject.doAs(userSubject, (PrivilegedAction<TestSingleton>) () ->
+                _objectFactory.create(TestSingleton.class, attributes, null));
 
-        assertEquals("Unexpected creating user after object creation", user, object.getCreatedBy());
-        assertEquals("Unexpected last updating user after object creation", user, object.getLastUpdatedBy());
+        assertEquals(user, object.getCreatedBy(), "Unexpected creating user after object creation");
+        assertEquals(user, object.getLastUpdatedBy(), "Unexpected last updating user after object creation");
 
         final Date originalCreatedTime = object.getCreatedTime();
-        assertTrue("Unexpected created time", originalCreatedTime.after(now));
+        assertTrue(originalCreatedTime.after(now), "Unexpected created time");
         final Date originalLastUpdatedTime = object.getLastUpdatedTime();
-        assertEquals("Unexpected created and updated time", originalCreatedTime, originalLastUpdatedTime);
+        assertEquals(originalCreatedTime, originalLastUpdatedTime, "Unexpected created and updated time");
 
         // Let a small amount of time pass before we update
         Thread.sleep(50);
 
-        Subject.doAs(userSubject,
-                     new PrivilegedAction<Void>()
-                     {
-                         @Override
-                         public Void run()
-                         {
-                             final Map<String, Object> updateMap = new HashMap<>();
-                             updateMap.put(TestSingleton.INT_VALUE, 5);
-                             updateMap.put(TestSingleton.CREATED_BY, "bogusCreator");
-                             updateMap.put(TestSingleton.CREATED_TIME, new Date(0));
-                             updateMap.put(TestSingleton.LAST_UPDATED_BY, "bogusUpdater");
-                             updateMap.put(TestSingleton.LAST_UPDATED_TIME, new Date(0));
+        Subject.doAs(userSubject, (PrivilegedAction<Void>) () ->
+        {
+            final Map<String, Object> updateMap = Map.of(TestSingleton.INT_VALUE, 5,
+                    TestSingleton.CREATED_BY, "bogusCreator",
+                    TestSingleton.CREATED_TIME, new Date(0),
+                    TestSingleton.LAST_UPDATED_BY, "bogusUpdater",
+                    TestSingleton.LAST_UPDATED_TIME, new Date(0));
+            object.setAttributes(updateMap);
+            return null;
+        });
 
-                             object.setAttributes(updateMap);
-                             return null;
-                         }
-                     });
+        assertEquals(user, object.getCreatedBy(), "Creating user should not be changed by update");
+        assertEquals(originalCreatedTime, object.getCreatedTime(), "Created time should not be changed by update");
 
-        assertEquals("Creating user should not be changed by update", user, object.getCreatedBy());
-        assertEquals("Created time should not be changed by update",
-                            originalCreatedTime,
-                            object.getCreatedTime());
-
-        assertEquals("Last updated by should be changed by update", user, object.getLastUpdatedBy());
-        assertTrue("Last updated time by should be changed by update",
-                          originalLastUpdatedTime.before(object.getLastUpdatedTime()));
+        assertEquals(user, object.getLastUpdatedBy(), "Last updated by should be changed by update");
+        assertTrue(originalLastUpdatedTime.before(object.getLastUpdatedTime()),
+                "Last updated time by should be changed by update");
     }
 
-
     @Test
-    public void testAuditInformationPersistenceAndRecovery() throws Exception
+    public void testAuditInformationPersistenceAndRecovery()
     {
         final String creatingUser = "creatingUser";
         final Subject creatorSubject = createTestAuthenticatedSubject(creatingUser);
         final String objectName = "myName";
-
-        final Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-
-        final TestSingleton object = Subject.doAs(creatorSubject,
-                                                  new PrivilegedAction<TestSingleton>()
-                                                  {
-                                                      @Override
-                                                      public TestSingleton run()
-                                                      {
-                                                          return _model.getObjectFactory()
-                                                                  .create(TestSingleton.class,
-                                                                    attributes, null);
-                                                      }
-                                                  });
-
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName);
+        final TestSingleton object = Subject.doAs(creatorSubject, (PrivilegedAction<TestSingleton>) () ->
+                _objectFactory.create(TestSingleton.class, attributes, null));
         final ConfiguredObjectRecord cor = object.asObjectRecord();
         final Map<String, Object> recordedAttributes = cor.getAttributes();
 
@@ -1118,50 +875,36 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         // Now recover the object
 
         final SystemConfig mockSystemConfig = mock(SystemConfig.class);
-        when(mockSystemConfig.getId()).thenReturn(UUID.randomUUID());
+        when(mockSystemConfig.getId()).thenReturn(randomUUID());
         when(mockSystemConfig.getModel()).thenReturn(TestModel.getInstance());
 
-        final TestSingleton recovered = (TestSingleton) _model.getObjectFactory().recover(cor, mockSystemConfig).resolve();
+        final TestSingleton recovered = (TestSingleton) _objectFactory.recover(cor, mockSystemConfig).resolve();
         recovered.open();
 
-        assertEquals("Unexpected recovered object created by", object.getCreatedBy(), recovered.getCreatedBy());
-        assertEquals("Unexpected recovered object created time",
-                            object.getCreatedTime(),
-                            recovered.getCreatedTime());
+        assertEquals(object.getCreatedBy(), recovered.getCreatedBy(), "Unexpected recovered object created by");
+        assertEquals(object.getCreatedTime(), recovered.getCreatedTime(), "Unexpected recovered object created time");
 
-        assertEquals("Unexpected recovered object updated by",
-                            object.getLastUpdatedBy(),
-                            recovered.getLastUpdatedBy());
-        assertEquals("Unexpected recovered object updated time",
-                            object.getLastUpdatedTime(),
-                            recovered.getLastUpdatedTime());
+        assertEquals(object.getLastUpdatedBy(), recovered.getLastUpdatedBy(), "Unexpected recovered object updated by");
+        assertEquals(object.getLastUpdatedTime(), recovered.getLastUpdatedTime(), "Unexpected recovered object updated time");
     }
 
     @Test
     public void testPostSetAttributesReportsChanges()
     {
         final String objectName = "myName";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         assertEquals(objectName, object.getName());
 
-        object.setAttributes(Collections.emptyMap());
-        assertTrue("Unexpected member of update set for empty update",
-                          object.takeLastReportedSetAttributes().isEmpty());
+        object.setAttributes(Map.of());
+        assertTrue(object.takeLastReportedSetAttributes().isEmpty(), "Unexpected member of update set for empty update");
 
-        Map<String, Object> update = new HashMap<>();
-        update.put(TestSingleton.NAME, objectName);
-        update.put(TestSingleton.DESCRIPTION, "an update");
+        final Map<String, Object> update = Map.of(TestSingleton.NAME, objectName, TestSingleton.DESCRIPTION, "an update");
 
         object.setAttributes(update);
-        assertEquals("Unexpected member of update set",
-                            Sets.newHashSet(TestSingleton.DESCRIPTION),
-                            object.takeLastReportedSetAttributes());
+        assertEquals(Sets.newHashSet(TestSingleton.DESCRIPTION), object.takeLastReportedSetAttributes(),
+                "Unexpected member of update set");
     }
 
     @Test
@@ -1170,22 +913,20 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         final String objectName = "myName";
         final String contextVariableName = "myContextVariable";
         final String contextVariableValue = "myContextVariableValue";
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class,
-                                                                Collections.singletonMap(TestSingleton.NAME, objectName),
-                                                                null);
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, Map.of(TestSingleton.NAME, objectName),
+                null);
 
         String previousValue = object.setContextVariable(contextVariableName, contextVariableValue);
 
-        assertNull("Previous value should be null", previousValue);
+        assertNull(previousValue, "Previous value should be null");
 
-        Map<String, String> context = object.getContext();
-        assertTrue("Context variable should be present in context", context.containsKey(contextVariableName));
-        assertEquals("Unexpected context variable", contextVariableValue, context.get(contextVariableName));
+        final Map<String, String> context = object.getContext();
+        assertTrue(context.containsKey(contextVariableName), "Context variable should be present in context");
+        assertEquals(contextVariableValue, context.get(contextVariableName), "Unexpected context variable");
 
         previousValue = object.setContextVariable(contextVariableName, "newValue");
 
-        assertEquals("Unexpected previous value", contextVariableValue, previousValue);
+        assertEquals(contextVariableValue, previousValue, "Unexpected previous value");
     }
 
     @Test
@@ -1194,34 +935,27 @@ public class AbstractConfiguredObjectTest extends UnitTestBase
         final String objectName = "myName";
         final String contextVariableName = "myContextVariable";
         final String contextVariableValue = "myContextVariableValue";
-
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put(TestSingleton.NAME, objectName);
-        attributes.put(TestSingleton.CONTEXT, Collections.singletonMap(contextVariableName, contextVariableValue));
-
-        TestSingleton object = _model.getObjectFactory().create(TestSingleton.class, attributes, null);
+        final Map<String, Object> attributes = Map.of(TestSingleton.NAME, objectName,
+                TestSingleton.CONTEXT, Map.of(contextVariableName, contextVariableValue));
+        final TestSingleton object = _objectFactory.create(TestSingleton.class, attributes, null);
 
         Map<String, String> context = object.getContext();
-        assertEquals("Unexpected context variable", contextVariableValue, context.get(contextVariableName));
+        assertEquals(contextVariableValue, context.get(contextVariableName), "Unexpected context variable");
 
         String previousValue = object.removeContextVariable(contextVariableName);
-        assertEquals("Unexpected context variable value", contextVariableValue, previousValue);
+        assertEquals(contextVariableValue, previousValue, "Unexpected context variable value");
 
         context = object.getContext();
-        assertFalse("Context variable should not be present in context",
-                           context.containsKey(contextVariableName));
-
+        assertFalse(context.containsKey(contextVariableName), "Context variable should not be present in context");
 
         previousValue = object.removeContextVariable(contextVariableName);
-        assertNull("Previous value should be null", previousValue);
+        assertNull(previousValue, "Previous value should be null");
     }
 
     private Subject createTestAuthenticatedSubject(final String username)
     {
-        return new Subject(true,
-                           Collections.singleton(new AuthenticatedPrincipal(new UsernamePrincipal(username, null))),
-                           Collections.emptySet(),
-                           Collections.emptySet());
+        final UsernamePrincipal usernamePrincipal = new UsernamePrincipal(username, null);
+        final AuthenticatedPrincipal principal = new AuthenticatedPrincipal(usernamePrincipal);
+        return new Subject(true, Set.of(principal), Set.of(), Set.of());
     }
-
 }
