@@ -22,10 +22,12 @@ import static java.nio.charset.StandardCharsets.US_ASCII;
 import static org.apache.qpid.server.security.auth.AuthenticationResult.AuthenticationStatus.SUCCESS;
 import static org.apache.qpid.server.security.auth.AuthenticationResult.AuthenticationStatus.ERROR;
 import static org.apache.qpid.server.security.auth.manager.CachingAuthenticationProvider.AUTHENTICATION_CACHE_MAX_SIZE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.when;
 
 import java.nio.charset.Charset;
@@ -35,11 +37,9 @@ import java.security.Principal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 import javax.crypto.Mac;
@@ -52,14 +52,13 @@ import org.apache.directory.server.annotations.SaslMechanism;
 import org.apache.directory.server.core.annotations.ApplyLdifFiles;
 import org.apache.directory.server.core.annotations.CreateDS;
 import org.apache.directory.server.core.annotations.CreatePartition;
-import org.apache.directory.server.core.integ.CreateLdapServerRule;
 import org.apache.directory.server.core.kerberos.KeyDerivationInterceptor;
 import org.apache.directory.server.ldap.handlers.sasl.gssapi.GssapiMechanismHandler;
 import org.apache.directory.server.ldap.handlers.sasl.plain.PlainMechanismHandler;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 import org.apache.qpid.server.configuration.IllegalConfigurationException;
 import org.apache.qpid.server.configuration.updater.CurrentThreadTaskExecutor;
@@ -76,6 +75,7 @@ import org.apache.qpid.server.security.auth.sasl.crammd5.CramMd5Base64HashedNego
 import org.apache.qpid.server.security.auth.sasl.crammd5.CramMd5Base64HexNegotiator;
 import org.apache.qpid.server.security.auth.sasl.crammd5.CramMd5Negotiator;
 import org.apache.qpid.server.util.Strings;
+import org.apache.qpid.test.utils.CreateLdapServerExtension;
 import org.apache.qpid.test.utils.UnitTestBase;
 
 @CreateDS(
@@ -106,28 +106,29 @@ import org.apache.qpid.test.utils.UnitTestBase;
 @ApplyLdifFiles("users.ldif")
 public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTestBase
 {
-    @ClassRule
-    public static CreateLdapServerRule LDAP = new CreateLdapServerRule();
-    private final List<AuthenticationProvider<?>> _authenticationProviders = new ArrayList<>();
-    private Broker<?> _broker;
-    private TaskExecutor _executor;
+    @RegisterExtension
+    public static CreateLdapServerExtension LDAP = new CreateLdapServerExtension();
 
     private static final String USERNAME = "user1";
     private static final String PASSWORD = "password1";
 
-    @Before
+    private final List<AuthenticationProvider<?>> _authenticationProviders = new ArrayList<>();
+
+    private Broker<?> _broker;
+    private TaskExecutor _executor;
+
+    @BeforeEach
     public void setUp() throws Exception
     {
-        _executor = new CurrentThreadTaskExecutor();
-        _executor.start();
+        _executor = CurrentThreadTaskExecutor.newStartedInstance();
         _broker = BrokerTestHelper.createBrokerMock();
         when(_broker.getTaskExecutor()).thenReturn(_executor);
         when(_broker.getChildExecutor()).thenReturn(_executor);
         when(_broker.getAuthenticationProviders()).thenReturn(_authenticationProviders);
-        SaslHelper._clientNonce = UUID.randomUUID().toString();
+        SaslHelper._clientNonce = randomUUID().toString();
     }
 
-    @After
+    @AfterEach
     public void tearDown() throws Exception
     {
         _executor.stop();
@@ -136,22 +137,19 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
 
     @SuppressWarnings("unchecked")
     private CompositeUsernamePasswordAuthenticationManager<?> createCompositeAuthenticationManager(
-            UsernamePasswordAuthenticationProvider<?>... authenticationProviders
-                                                                                                  )
+            UsernamePasswordAuthenticationProvider<?>... authenticationProviders)
     {
         final Map<String, Object> attributesMap = new HashMap<>();
         attributesMap.put(AuthenticationProvider.TYPE, CompositeUsernamePasswordAuthenticationManager.PROVIDER_TYPE);
         attributesMap.put(AuthenticationProvider.NAME, "CompositeAuthenticationProvider");
-        attributesMap.put(AuthenticationProvider.ID, UUID.randomUUID());
+        attributesMap.put(AuthenticationProvider.ID, randomUUID());
         if (authenticationProviders.length > 0)
         {
-            attributesMap.put(
-                    "delegates",
-                    Arrays.stream(authenticationProviders).map(ConfiguredObject::getName).collect(Collectors.toList())
-            );
+            attributesMap.put("delegates",
+                    Arrays.stream(authenticationProviders).map(ConfiguredObject::getName).collect(Collectors.toList()));
         }
 
-        AuthenticationProvider<?> authProvider =
+        final AuthenticationProvider<?> authProvider =
                 _broker.getObjectFactory().create(AuthenticationProvider.class, attributesMap, _broker);
         _authenticationProviders.add(authProvider);
         return (CompositeUsernamePasswordAuthenticationManager<?>) authProvider;
@@ -160,11 +158,10 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
     @SuppressWarnings("unchecked")
     private MD5AuthenticationProvider createMD5AuthenticationProvider()
     {
-        final Map<String, Object> attributesMap = new HashMap<>();
-        attributesMap.put(AuthenticationProvider.NAME, "MD5AuthenticationProvider");
-        attributesMap.put(AuthenticationProvider.TYPE, "MD5");
-        attributesMap.put(AuthenticationProvider.ID, UUID.randomUUID());
-        AuthenticationProvider<?> authProvider =
+        final Map<String, Object> attributesMap = Map.of(AuthenticationProvider.NAME, "MD5AuthenticationProvider",
+                AuthenticationProvider.TYPE, "MD5",
+                AuthenticationProvider.ID, randomUUID());
+        final AuthenticationProvider<?> authProvider =
                 _broker.getObjectFactory().create(AuthenticationProvider.class, attributesMap, _broker);
         _authenticationProviders.add(authProvider);
         return (MD5AuthenticationProvider) authProvider;
@@ -173,12 +170,12 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
     @SuppressWarnings("unchecked")
     private PlainAuthenticationProvider createPlainAuthenticationProvider(String... names)
     {
-        final Map<String, Object> attributesMap = new HashMap<>();
-        attributesMap.put(AuthenticationProvider.NAME, names.length == 0 ? "PlainAuthenticationProvider" : names[0]);
-        attributesMap.put(AuthenticationProvider.TYPE, "Plain");
-        attributesMap.put(AuthenticationProvider.ID, UUID.randomUUID());
-        PlainAuthenticationProvider authProvider = (PlainAuthenticationProvider) _broker.getObjectFactory()
-            .create(AuthenticationProvider.class, attributesMap, _broker);
+        final Map<String, Object> attributesMap = Map
+                .of(AuthenticationProvider.NAME, names.length == 0 ? "PlainAuthenticationProvider" : names[0],
+                AuthenticationProvider.TYPE, "Plain",
+                AuthenticationProvider.ID, randomUUID());
+        final PlainAuthenticationProvider authProvider = (PlainAuthenticationProvider) _broker.getObjectFactory()
+                .create(AuthenticationProvider.class, attributesMap, _broker);
         _authenticationProviders.add(authProvider);
         return authProvider;
     }
@@ -186,13 +183,12 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
     @SuppressWarnings("unchecked")
     private ScramSHA256AuthenticationManager createScramSHA256AuthenticationManager(String... names)
     {
-        final Map<String, Object> attributesMap = new HashMap<>();
-        attributesMap.put(AuthenticationProvider.NAME,
-                          names.length == 0 ? "ScramSHA256AuthenticationManager" : names[0]);
-        attributesMap.put(AuthenticationProvider.TYPE, "SCRAM-SHA-256");
-        attributesMap.put(AuthenticationProvider.ID, UUID.randomUUID());
-        ScramSHA256AuthenticationManager authProvider = (ScramSHA256AuthenticationManager) _broker.getObjectFactory()
-            .create(AuthenticationProvider.class, attributesMap, _broker);
+        final Map<String, Object> attributesMap = Map
+                .of(AuthenticationProvider.NAME, names.length == 0 ? "ScramSHA256AuthenticationManager" : names[0],
+                AuthenticationProvider.TYPE, "SCRAM-SHA-256",
+                AuthenticationProvider.ID, randomUUID());
+        final ScramSHA256AuthenticationManager authProvider = (ScramSHA256AuthenticationManager) _broker.getObjectFactory()
+                .create(AuthenticationProvider.class, attributesMap, _broker);
         _authenticationProviders.add(authProvider);
         return authProvider;
     }
@@ -200,13 +196,12 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
     @SuppressWarnings("unchecked")
     private ScramSHA1AuthenticationManager createScramSHA1AuthenticationManager(String... names)
     {
-        final Map<String, Object> attributesMap = new HashMap<>();
-        attributesMap.put(AuthenticationProvider.NAME,
-                          names.length == 0 ? "ScramSHA1AuthenticationManager" : names[0]);
-        attributesMap.put(AuthenticationProvider.TYPE, "SCRAM-SHA-1");
-        attributesMap.put(AuthenticationProvider.ID, UUID.randomUUID());
-        ScramSHA1AuthenticationManager authProvider = (ScramSHA1AuthenticationManager) _broker.getObjectFactory()
-            .create(AuthenticationProvider.class, attributesMap, _broker);
+        final Map<String, Object> attributesMap = Map
+                .of(AuthenticationProvider.NAME, names.length == 0 ? "ScramSHA1AuthenticationManager" : names[0],
+                AuthenticationProvider.TYPE, "SCRAM-SHA-1",
+                AuthenticationProvider.ID, randomUUID());
+        final ScramSHA1AuthenticationManager authProvider = (ScramSHA1AuthenticationManager) _broker.getObjectFactory()
+                .create(AuthenticationProvider.class, attributesMap, _broker);
         _authenticationProviders.add(authProvider);
         return authProvider;
     }
@@ -219,16 +214,14 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         final String SEARCH_CONTEXT_VALUE = "ou=users," + ROOT;
         final String SEARCH_FILTER_VALUE = "(uid={0})";
 
-        final Map<String, Object> attributesMap = new HashMap<>();
-        attributesMap.put(SimpleLDAPAuthenticationManager.NAME, "SimpleLDAPAuthenticationManager");
-        attributesMap.put(SimpleLDAPAuthenticationManager.ID, UUID.randomUUID());
-        attributesMap.put(SimpleLDAPAuthenticationManager.TYPE, SimpleLDAPAuthenticationManager.PROVIDER_TYPE);
-        attributesMap.put(SimpleLDAPAuthenticationManager.SEARCH_CONTEXT, SEARCH_CONTEXT_VALUE);
-        attributesMap.put(SimpleLDAPAuthenticationManager.PROVIDER_URL,
-                          String.format(LDAP_URL_TEMPLATE, LDAP.getLdapServer().getPort()));
-        attributesMap.put(SimpleLDAPAuthenticationManager.SEARCH_FILTER, SEARCH_FILTER_VALUE);
-        attributesMap.put(SimpleLDAPAuthenticationManager.CONTEXT,
-                          Collections.singletonMap(AUTHENTICATION_CACHE_MAX_SIZE, "0"));
+        final Map<String, Object> attributesMap = Map
+                .of(SimpleLDAPAuthenticationManager.NAME, "SimpleLDAPAuthenticationManager",
+                SimpleLDAPAuthenticationManager.ID, randomUUID(),
+                SimpleLDAPAuthenticationManager.TYPE, SimpleLDAPAuthenticationManager.PROVIDER_TYPE,
+                SimpleLDAPAuthenticationManager.SEARCH_CONTEXT, SEARCH_CONTEXT_VALUE,
+                SimpleLDAPAuthenticationManager.PROVIDER_URL, String.format(LDAP_URL_TEMPLATE, LDAP.getLdapServer().getPort()),
+                SimpleLDAPAuthenticationManager.SEARCH_FILTER, SEARCH_FILTER_VALUE,
+                SimpleLDAPAuthenticationManager.CONTEXT, Map.of(AUTHENTICATION_CACHE_MAX_SIZE, "0"));
         final SimpleLDAPAuthenticationManager<?> authProvider =
                 (SimpleLDAPAuthenticationManager<?>) _broker.getObjectFactory()
                 .create(AuthenticationProvider.class, attributesMap, _broker);
@@ -236,10 +229,13 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         return authProvider;
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void failToCreateCompositeAuthenticationManager()
     {
-        createCompositeAuthenticationManager();
+        final IllegalArgumentException thrown = assertThrows(IllegalArgumentException.class,
+                this::createCompositeAuthenticationManager,
+                "Expected exception not thrown");
+        assertTrue(thrown.getMessage().contains("Mandatory attribute delegates not supplied"));
     }
 
     @Test()
@@ -247,50 +243,34 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
     {
 
         final PlainAuthenticationProvider plainAuthenticationProvider = createPlainAuthenticationProvider();
-        plainAuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        plainAuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                plainAuthenticationProvider
-        );
+                plainAuthenticationProvider);
 
         final AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
-        assertEquals("Unexpected result status", SUCCESS, result.getStatus());
-        assertEquals("Unexpected result principal", USERNAME, result.getMainPrincipal().getName());
+        assertEquals(SUCCESS, result.getStatus(), "Unexpected result status");
+        assertEquals(USERNAME, result.getMainPrincipal().getName(), "Unexpected result principal");
 
         // authenticate via SASL PLAIN
         final String RESPONSE = String.format("\0%s\0%s", USERNAME, PASSWORD);
         final SaslNegotiator plainSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult plainAuthResult = plainSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status",
-                     SUCCESS,
-                     plainAuthResult.getStatus());
+        assertEquals(SUCCESS, plainAuthResult.getStatus(), "Unexpected result status");
 
         // authenticate via SASL CRAM-MD5
-        saslCramMd(
-            CramMd5Negotiator.MECHANISM,
-            authManager.createSaslNegotiator(
-                CramMd5Negotiator.MECHANISM,
-                CRAM_MD_SASL_SETTINGS,
-                null
-            ),
-            USERNAME,
-            PASSWORD
-        );
+        saslCramMd(CramMd5Negotiator.MECHANISM,
+                authManager.createSaslNegotiator(CramMd5Negotiator.MECHANISM, CRAM_MD_SASL_SETTINGS, null),
+                USERNAME, PASSWORD);
 
         // authenticate via SASL SCRAM-SHA-1
-        saslScramSha(
-            ScramSHA1AuthenticationManager.MECHANISM,
-            authManager.createSaslNegotiator(ScramSHA1AuthenticationManager.MECHANISM, null, null),
-            USERNAME,
-            PASSWORD
-        );
+        saslScramSha(ScramSHA1AuthenticationManager.MECHANISM,
+                authManager.createSaslNegotiator(ScramSHA1AuthenticationManager.MECHANISM, null, null),
+                USERNAME, PASSWORD);
 
         // authenticate via SASL SCRAM-SHA-256
-        saslScramSha(
-            ScramSHA256AuthenticationManager.MECHANISM,
-            authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
-            USERNAME,
-            PASSWORD
-        );
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
+                authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
+                USERNAME, PASSWORD);
     }
 
     @Test()
@@ -299,65 +279,45 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
 
         final PlainAuthenticationProvider plainAuthenticationProvider = createPlainAuthenticationProvider();
         final MD5AuthenticationProvider md5AuthenticationProvider = createMD5AuthenticationProvider();
-        md5AuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        md5AuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                plainAuthenticationProvider, md5AuthenticationProvider
-        );
-        AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
-        assertEquals("Unexpected result status", SUCCESS, result.getStatus());
-        assertEquals("Unexpected result principal", USERNAME, result.getMainPrincipal().getName());
+                plainAuthenticationProvider, md5AuthenticationProvider);
+        final AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
+        assertEquals(SUCCESS, result.getStatus(), "Unexpected result status");
+        assertEquals(USERNAME, result.getMainPrincipal().getName(), "Unexpected result principal");
 
         // authenticate via SASL PLAIN
         final String RESPONSE = String.format("\0%s\0%s", USERNAME, PASSWORD);
         final SaslNegotiator plainSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult plainAuthResult = plainSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, plainAuthResult.getStatus());
+        assertEquals(SUCCESS, plainAuthResult.getStatus(), "Unexpected result status");
 
         // authenticate via SASL CRAM-MD5-HASHED
-        saslCramMd(
-            CramMd5Base64HashedNegotiator.MECHANISM,
-            authManager.createSaslNegotiator(
-                CramMd5Base64HashedNegotiator.MECHANISM,
-                CRAM_MD_SASL_SETTINGS,
-               null
-            ),
-            USERNAME,
-            PASSWORD
-        );
+        saslCramMd(CramMd5Base64HashedNegotiator.MECHANISM,
+                authManager.createSaslNegotiator(CramMd5Base64HashedNegotiator.MECHANISM, CRAM_MD_SASL_SETTINGS, null),
+                USERNAME, PASSWORD);
 
         // authenticate via SASL CRAM-MD5-HEX
-        saslCramMd(
-            CramMd5Base64HexNegotiator.MECHANISM,
-            authManager.createSaslNegotiator(
-                CramMd5Base64HexNegotiator.MECHANISM,
-                CRAM_MD_SASL_SETTINGS,
-               null
-            ),
-            USERNAME,
-            PASSWORD
-        );
+        saslCramMd(CramMd5Base64HexNegotiator.MECHANISM,
+                authManager.createSaslNegotiator(CramMd5Base64HexNegotiator.MECHANISM, CRAM_MD_SASL_SETTINGS, null),
+                USERNAME, PASSWORD);
     }
 
     @Test()
     public void authenticateAgainstScramSHA1AuthenticationManager() throws Exception
     {
-
         final ScramSHA1AuthenticationManager scramSHA1AuthenticationManager =
                 createScramSHA1AuthenticationManager();
-        scramSHA1AuthenticationManager.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        scramSHA1AuthenticationManager.createUser(USERNAME, PASSWORD, Map.of());
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                scramSHA1AuthenticationManager
-        );
-        AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
-        assertEquals("Unexpected result status", SUCCESS, result.getStatus());
-        assertEquals("Unexpected result principal", USERNAME, result.getMainPrincipal().getName());
+                scramSHA1AuthenticationManager);
+        final AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
+        assertEquals(SUCCESS, result.getStatus(), "Unexpected result status");
+        assertEquals(USERNAME, result.getMainPrincipal().getName(), "Unexpected result principal");
 
-        saslScramSha(
-                ScramSHA1AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA1AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA1AuthenticationManager.MECHANISM, null, null),
-                USERNAME,
-                PASSWORD
-        );
+                USERNAME, PASSWORD);
     }
 
     @Test()
@@ -366,43 +326,37 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
 
         final ScramSHA256AuthenticationManager scramSHA256AuthenticationManager =
                 createScramSHA256AuthenticationManager();
-        scramSHA256AuthenticationManager.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        scramSHA256AuthenticationManager.createUser(USERNAME, PASSWORD, Map.of());
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                scramSHA256AuthenticationManager
-                                                                                                                  );
-        AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
-        assertEquals("Unexpected result status", SUCCESS, result.getStatus());
-        assertEquals("Unexpected result principal", USERNAME, result.getMainPrincipal().getName());
+                scramSHA256AuthenticationManager);
+        final AuthenticationResult result = authManager.authenticate(USERNAME, PASSWORD);
+        assertEquals(SUCCESS, result.getStatus(), "Unexpected result status");
+        assertEquals(USERNAME, result.getMainPrincipal().getName(), "Unexpected result principal");
 
-        saslScramSha(
-            ScramSHA256AuthenticationManager.MECHANISM,
-            authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
-            USERNAME,
-            PASSWORD
-        );
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
+                authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
+                USERNAME, PASSWORD);
     }
 
     @Test()
     public void authenticateAgainstSimpleLDAPAuthenticationManager()
     {
         final String LDAP_USERNAME = "test1";
-
         final SimpleLDAPAuthenticationManager<?> simpleLDAPAuthenticationManager =
                 createSimpleLDAPAuthenticationManager();
-
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                simpleLDAPAuthenticationManager
-        );
+                simpleLDAPAuthenticationManager);
 
-        AuthenticationResult result = authManager.authenticate(LDAP_USERNAME, PASSWORD);
-        assertEquals("Unexpected result status", SUCCESS, result.getStatus());
-        assertEquals("Unexpected result principal", "cn=integration-test1,ou=users,dc=qpid,dc=org", result.getMainPrincipal().getName());
+        final AuthenticationResult result = authManager.authenticate(LDAP_USERNAME, PASSWORD);
+        assertEquals(SUCCESS, result.getStatus(), "Unexpected result status");
+        assertEquals("cn=integration-test1,ou=users,dc=qpid,dc=org", result.getMainPrincipal().getName(),
+                                "Unexpected result principal");
 
         // authenticate via SASL PLAIN
         final String RESPONSE = String.format("\0%s\0%s", LDAP_USERNAME, PASSWORD);
         final SaslNegotiator plainSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult plainAuthResult = plainSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, plainAuthResult.getStatus());
+        assertEquals(SUCCESS, plainAuthResult.getStatus(), "Unexpected result status");
     }
 
     @Test()
@@ -414,90 +368,63 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         final String LDAP_PASSWORD = "password1";
 
         final PlainAuthenticationProvider plainAuthenticationProvider = createPlainAuthenticationProvider();
-        plainAuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        plainAuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
 
         final MD5AuthenticationProvider md5AuthenticationProvider = createMD5AuthenticationProvider();
-        md5AuthenticationProvider.createUser(MD5_USERNAME, MD5_PASSWORD, Collections.emptyMap());
+        md5AuthenticationProvider.createUser(MD5_USERNAME, MD5_PASSWORD, Map.of());
 
         final SimpleLDAPAuthenticationManager<?> simpleLDAPAuthenticationManager =
                 createSimpleLDAPAuthenticationManager();
 
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                plainAuthenticationProvider, md5AuthenticationProvider, simpleLDAPAuthenticationManager
-        );
+                plainAuthenticationProvider, md5AuthenticationProvider, simpleLDAPAuthenticationManager);
 
         // authenticate against PlainAuthenticationProvider via SASL PLAIN
         String RESPONSE = String.format("\0%s\0%s", USERNAME, PASSWORD);
         final SaslNegotiator plainSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult plainAuthResult = plainSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, plainAuthResult.getStatus());
-        assertEquals(
-                "Unexpected result principal",
-                USERNAME,
-                plainAuthResult.getMainPrincipal().getName()
-        );
+        assertEquals(SUCCESS, plainAuthResult.getStatus(), "Unexpected result status");
+        assertEquals(USERNAME, plainAuthResult.getMainPrincipal().getName(), "Unexpected result principal");
 
         // authenticate against PlainAuthenticationProvider via SASL CRAM-MD5
-        saslCramMd(
-                CramMd5Negotiator.MECHANISM,
+        saslCramMd(CramMd5Negotiator.MECHANISM,
                 authManager.createSaslNegotiator(CramMd5Negotiator.MECHANISM, CRAM_MD_SASL_SETTINGS, null),
-                USERNAME,
-                PASSWORD
-        );
+                USERNAME, PASSWORD);
 
         // authenticate against PlainAuthenticationProvider via SASL SCRAM-SHA-1
-        saslScramSha(
-                ScramSHA1AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA1AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA1AuthenticationManager.MECHANISM, null, null),
-                USERNAME,
-                PASSWORD
-        );
+                USERNAME, PASSWORD);
 
         // authenticate against PlainAuthenticationProvider via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
-                USERNAME,
-                PASSWORD
-        );
+                USERNAME, PASSWORD);
 
         // authenticate against MD5AuthenticationProvider via SASL PLAIN
         RESPONSE = String.format("\0%s\0%s", MD5_USERNAME, MD5_PASSWORD);
         final SaslNegotiator md5SaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult md5AuthResult = md5SaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, md5AuthResult.getStatus());
-        assertEquals(
-                "Unexpected result principal",
-                MD5_USERNAME,
-                md5AuthResult.getMainPrincipal().getName()
-        );
+        assertEquals(SUCCESS, md5AuthResult.getStatus(), "Unexpected result status");
+        assertEquals(MD5_USERNAME, md5AuthResult.getMainPrincipal().getName(), "Unexpected result principal");
 
         // authenticate against MD5AuthenticationProvider via SASL CRAM-MD5-HASHED
-        saslCramMd(
-                CramMd5Base64HashedNegotiator.MECHANISM,
+        saslCramMd(CramMd5Base64HashedNegotiator.MECHANISM,
                 authManager.createSaslNegotiator(CramMd5Base64HashedNegotiator.MECHANISM, CRAM_MD_SASL_SETTINGS, null),
-                MD5_USERNAME,
-                MD5_PASSWORD
-        );
+                MD5_USERNAME, MD5_PASSWORD);
 
         // authenticate against MD5AuthenticationProvider via SASL CRAM-MD5-HEX
-        saslCramMd(
-                CramMd5Base64HexNegotiator.MECHANISM,
+        saslCramMd(CramMd5Base64HexNegotiator.MECHANISM,
                 authManager.createSaslNegotiator(CramMd5Base64HexNegotiator.MECHANISM, CRAM_MD_SASL_SETTINGS,null),
-                MD5_USERNAME,
-                MD5_PASSWORD
-        );
+                MD5_USERNAME, MD5_PASSWORD);
 
         // authenticate against SimpleLdapAuthenticationProvider via SASL PLAIN
         RESPONSE = String.format("\0%s\0%s", LDAP_USERNAME, LDAP_PASSWORD);
         final SaslNegotiator ldapSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult ldapAuthResult = ldapSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, ldapAuthResult.getStatus());
-        assertEquals(
-                "Unexpected result principal",
-                "cn=integration-test1,ou=users,dc=qpid,dc=org",
-                ldapAuthResult.getMainPrincipal().getName()
-        );
+        assertEquals(SUCCESS, ldapAuthResult.getStatus(), "Unexpected result status");
+        assertEquals("cn=integration-test1,ou=users,dc=qpid,dc=org", ldapAuthResult.getMainPrincipal().getName(),
+                "Unexpected result principal");
     }
 
     @Test()
@@ -509,46 +436,41 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         final String LDAP_PASSWORD = "password1";
 
         final PlainAuthenticationProvider plainAuthenticationProvider = createPlainAuthenticationProvider();
-        plainAuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        plainAuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
 
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider = createScramSHA256AuthenticationManager();
-        sha256AuthenticationProvider.createUser(SHA256_USERNAME, SHA256_PASSWORD, Collections.emptyMap());
+        sha256AuthenticationProvider.createUser(SHA256_USERNAME, SHA256_PASSWORD, Map.of());
 
         final SimpleLDAPAuthenticationManager<?> simpleLDAPAuthenticationManager =
                 createSimpleLDAPAuthenticationManager();
 
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
-                plainAuthenticationProvider, sha256AuthenticationProvider, simpleLDAPAuthenticationManager
-        );
+                plainAuthenticationProvider, sha256AuthenticationProvider, simpleLDAPAuthenticationManager);
 
         // authenticate against PlainAuthenticationProvider via SASL PLAIN
         String RESPONSE = String.format("\0%s\0%s", USERNAME, PASSWORD);
         final SaslNegotiator plainSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult plainAuthResult = plainSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, plainAuthResult.getStatus());
-        assertEquals("Unexpected result principal", USERNAME, plainAuthResult.getMainPrincipal().getName());
+        assertEquals(SUCCESS, plainAuthResult.getStatus(), "Unexpected result status");
+        assertEquals(USERNAME, plainAuthResult.getMainPrincipal().getName(), "Unexpected result principal");
 
         // authenticate against PlainAuthenticationProvider via SASL CRAM-MD5
-        saslCramMd(
-                CramMd5Negotiator.MECHANISM,
+        saslCramMd(CramMd5Negotiator.MECHANISM,
                 authManager.createSaslNegotiator(CramMd5Negotiator.MECHANISM, CRAM_MD_SASL_SETTINGS, null),
                 USERNAME, PASSWORD);
 
         // authenticate against PlainAuthenticationProvider via SASL SCRAM-SHA-1
-        saslScramSha(
-                ScramSHA1AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA1AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA1AuthenticationManager.MECHANISM, null, null),
                 USERNAME, PASSWORD);
 
         // authenticate against PlainAuthenticationProvider via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 USERNAME, PASSWORD);
 
         // authenticate against ScramSHA256AuthenticationManager via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 SHA256_USERNAME, SHA256_PASSWORD);
 
@@ -556,12 +478,9 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         RESPONSE = String.format("\0%s\0%s", LDAP_USERNAME, LDAP_PASSWORD);
         final SaslNegotiator ldapSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult ldapAuthResult = ldapSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", SUCCESS, ldapAuthResult.getStatus());
-        assertEquals(
-                "Unexpected result principal",
-                "cn=integration-test1,ou=users,dc=qpid,dc=org",
-                ldapAuthResult.getMainPrincipal().getName()
-        );
+        assertEquals(SUCCESS, ldapAuthResult.getStatus(), "Unexpected result status");
+        assertEquals("cn=integration-test1,ou=users,dc=qpid,dc=org", ldapAuthResult.getMainPrincipal().getName(),
+                "Unexpected result principal");
     }
 
     @Test()
@@ -571,23 +490,21 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         final String SHA256_PASSWORD = "password2";
 
         final PlainAuthenticationProvider plainAuthenticationProvider = createPlainAuthenticationProvider();
-        plainAuthenticationProvider.createUser(USERNAME, PLAIN_PASSWORD, Collections.emptyMap());
+        plainAuthenticationProvider.createUser(USERNAME, PLAIN_PASSWORD, Map.of());
 
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider = createScramSHA256AuthenticationManager();
-        sha256AuthenticationProvider.createUser(USERNAME, SHA256_PASSWORD, Collections.emptyMap());
+        sha256AuthenticationProvider.createUser(USERNAME, SHA256_PASSWORD, Map.of());
 
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
                 plainAuthenticationProvider, sha256AuthenticationProvider);
 
         // authenticate against PlainAuthenticationProvider via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 USERNAME, PLAIN_PASSWORD);
 
         // authenticate against ScramSHA256AuthenticationManager via SASL SCRAM-SHA-256 (fails due username collision)
-        saslScramShaInvalidCredentials(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramShaInvalidCredentials(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 USERNAME, SHA256_PASSWORD);
     }
@@ -601,35 +518,31 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         final String SHA256_PASSWORD3 = "password4";
 
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider1 = createScramSHA256AuthenticationManager("ScramSHA256AuthenticationManager1");
-        sha256AuthenticationProvider1.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        sha256AuthenticationProvider1.createUser(USERNAME, PASSWORD, Map.of());
 
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider2 = createScramSHA256AuthenticationManager("ScramSHA256AuthenticationManager2");
-        sha256AuthenticationProvider2.createUser(SHA256_USERNAME2, SHA256_PASSWORD2, Collections.emptyMap());
+        sha256AuthenticationProvider2.createUser(SHA256_USERNAME2, SHA256_PASSWORD2, Map.of());
 
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider3 = createScramSHA256AuthenticationManager("ScramSHA256AuthenticationManager3");
-        sha256AuthenticationProvider3.createUser(SHA256_USERNAME3, SHA256_PASSWORD3, Collections.emptyMap());
+        sha256AuthenticationProvider3.createUser(SHA256_USERNAME3, SHA256_PASSWORD3, Map.of());
 
         final CompositeUsernamePasswordAuthenticationManager<?> authManager = createCompositeAuthenticationManager(
                 sha256AuthenticationProvider1, sha256AuthenticationProvider2, sha256AuthenticationProvider3);
 
         // authenticate against first ScramSHA256AuthenticationManager via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 USERNAME, PASSWORD);
 
         // authenticate against second ScramSHA256AuthenticationManager via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 SHA256_USERNAME2, SHA256_PASSWORD2);
 
         // authenticate against third ScramSHA256AuthenticationManager via SASL SCRAM-SHA-256
-        saslScramSha(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramSha(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 SHA256_USERNAME3, SHA256_PASSWORD3);
-
     }
 
     @Test()
@@ -640,10 +553,10 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         final String NON_EXISTING_USERNAME = "test99";
 
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider = createScramSHA256AuthenticationManager();
-        sha256AuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        sha256AuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
 
         final ScramSHA1AuthenticationManager sha1AuthenticationProvider = createScramSHA1AuthenticationManager();
-        sha1AuthenticationProvider.createUser(SHA1_USERNAME, SHA1_PASSWORD, Collections.emptyMap());
+        sha1AuthenticationProvider.createUser(SHA1_USERNAME, SHA1_PASSWORD, Map.of());
 
         final SimpleLDAPAuthenticationManager<?> simpleLDAPAuthenticationManager =
                 createSimpleLDAPAuthenticationManager();
@@ -652,14 +565,12 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
                 sha256AuthenticationProvider, sha1AuthenticationProvider, simpleLDAPAuthenticationManager);
 
         // authenticate against ScramSHA256AuthenticationManager via SASL SCRAM-SHA-256
-        saslScramShaInvalidCredentials(
-                ScramSHA256AuthenticationManager.MECHANISM,
+        saslScramShaInvalidCredentials(ScramSHA256AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA256AuthenticationManager.MECHANISM, null, null),
                 NON_EXISTING_USERNAME, PASSWORD);
 
         // authenticate against ScramSHA256AuthenticationManager via SASL SCRAM-SHA-1
-        saslScramShaInvalidCredentials(
-                ScramSHA1AuthenticationManager.MECHANISM,
+        saslScramShaInvalidCredentials(ScramSHA1AuthenticationManager.MECHANISM,
                 authManager.createSaslNegotiator(ScramSHA1AuthenticationManager.MECHANISM, null, null),
                 NON_EXISTING_USERNAME, SHA1_PASSWORD);
 
@@ -667,100 +578,79 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         String RESPONSE = String.format("\0%s\0%s", NON_EXISTING_USERNAME, PASSWORD);
         final SaslNegotiator ldapSaslNegotiator = authManager.createSaslNegotiator("PLAIN", null, null);
         final AuthenticationResult ldapAuthResult = ldapSaslNegotiator.handleResponse(RESPONSE.getBytes(US_ASCII));
-        assertEquals("Unexpected result status", ERROR, ldapAuthResult.getStatus());
+        assertEquals(ERROR, ldapAuthResult.getStatus(), "Unexpected result status");
     }
 
-    @Test(expected = IllegalConfigurationException.class)
-    public void nestedComposteUsernamePasswordAuthenticationManager()
+    @Test
+    public void nestedCompositeUsernamePasswordAuthenticationManager()
     {
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider = createScramSHA256AuthenticationManager();
-        sha256AuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
+        sha256AuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
         final CompositeUsernamePasswordAuthenticationManager<?> composite1 = createCompositeAuthenticationManager(sha256AuthenticationProvider);
-        createCompositeAuthenticationManager(composite1);
+        IllegalConfigurationException thrown = assertThrows(IllegalConfigurationException.class,
+                () -> createCompositeAuthenticationManager(composite1), "Expected exception not thrown");
+        assertTrue(thrown.getMessage().contains("Composite authentication providers shouldn't be nested"));
     }
 
-    @Test(expected = IllegalConfigurationException.class)
+    @Test
     public void duplicateDelegates()
     {
         final ScramSHA256AuthenticationManager sha256AuthenticationProvider = createScramSHA256AuthenticationManager();
-        sha256AuthenticationProvider.createUser(USERNAME, PASSWORD, Collections.emptyMap());
-        createCompositeAuthenticationManager(sha256AuthenticationProvider, sha256AuthenticationProvider);
+        sha256AuthenticationProvider.createUser(USERNAME, PASSWORD, Map.of());
+        final IllegalConfigurationException thrown = assertThrows(IllegalConfigurationException.class,
+                () -> createCompositeAuthenticationManager(sha256AuthenticationProvider, sha256AuthenticationProvider),
+                "Expected exception not thrown");
+        assertTrue(thrown.getMessage().contains("Composite authentication manager shouldn't contain duplicate names"));
     }
 
-    private void saslCramMd(
-        String mechanism,
-        SaslNegotiator saslNegotiator,
-        String username,
-        String password
-    ) throws Exception
+    private void saslCramMd(final String mechanism,
+                            final SaslNegotiator saslNegotiator,
+                            final String username,
+                            final String password) throws Exception
     {
 
         final AuthenticationResult firstResult = saslNegotiator.handleResponse(new byte[0]);
-        assertEquals(
-                "Unexpected first result status",
-                AuthenticationResult.AuthenticationStatus.CONTINUE,
-                firstResult.getStatus()
-        );
+        assertEquals(AuthenticationResult.AuthenticationStatus.CONTINUE, firstResult.getStatus(),
+                "Unexpected first result status");
 
-        byte[] responseBytes = SaslUtil.generateCramMD5ClientResponse(
-                mechanism, username, password, firstResult.getChallenge()
-        );
+        final byte[] responseBytes = SaslUtil.generateCramMD5ClientResponse(mechanism, username, password,
+                firstResult.getChallenge());
 
         final AuthenticationResult secondResult = saslNegotiator.handleResponse(responseBytes);
 
-        assertEquals("Unexpected second result status",
-                     SUCCESS,
-                     secondResult.getStatus());
-        assertNull("Unexpected second result challenge", secondResult.getChallenge());
-        assertEquals("Unexpected second result main principal",
-                     username,
-                     secondResult.getMainPrincipal().getName());
+        assertEquals(SUCCESS, secondResult.getStatus(), "Unexpected second result status");
+        assertNull(secondResult.getChallenge(), "Unexpected second result challenge");
+        assertEquals(username, secondResult.getMainPrincipal().getName(), "Unexpected second result main principal");
 
         final AuthenticationResult thirdResult = saslNegotiator.handleResponse(new byte[0]);
-        assertEquals("Unexpected third result status",
-                     AuthenticationResult.AuthenticationStatus.ERROR,
-                     thirdResult.getStatus());
+        assertEquals(ERROR, thirdResult.getStatus(), "Unexpected third result status");
     }
 
-    private void saslScramSha(
-        String mechanism,
-        SaslNegotiator saslNegotiator,
-        String username,
-        String password
-    ) throws Exception
+    private void saslScramSha(final String mechanism,
+                              final SaslNegotiator saslNegotiator,
+                              final String username,
+                              final String password) throws Exception
     {
 
         final byte[] initialResponse = SaslHelper.createInitialResponse(username);
 
         final AuthenticationResult firstResult = saslNegotiator.handleResponse(initialResponse);
-        assertEquals(
-                "Unexpected first result status",
-                AuthenticationResult.AuthenticationStatus.CONTINUE,
-                firstResult.getStatus()
-         );
-        assertNotNull("Unexpected first result challenge", firstResult.getChallenge());
+        assertEquals(AuthenticationResult.AuthenticationStatus.CONTINUE, firstResult.getStatus(),
+                "Unexpected first result status");
+        assertNotNull(firstResult.getChallenge(), "Unexpected first result challenge");
 
-        final byte[] response = SaslHelper.calculateClientProof(
-                firstResult.getChallenge(),
-                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism)
-                    ? ScramSHA256AuthenticationManager.HMAC_NAME : ScramSHA1AuthenticationManager.HMAC_NAME,
-                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism)
-                    ? ScramSHA256AuthenticationManager.DIGEST_NAME : ScramSHA1AuthenticationManager.DIGEST_NAME,
-                password
-        );
+        final byte[] response = SaslHelper.calculateClientProof(firstResult.getChallenge(),
+                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism) ?
+                        ScramSHA256AuthenticationManager.HMAC_NAME : ScramSHA1AuthenticationManager.HMAC_NAME,
+                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism) ?
+                        ScramSHA256AuthenticationManager.DIGEST_NAME : ScramSHA1AuthenticationManager.DIGEST_NAME,
+                password);
 
         final AuthenticationResult secondResult = saslNegotiator.handleResponse(response);
-        assertEquals(
-                "Unexpected second result status",
-                SUCCESS,
-                secondResult.getStatus()
-        );
-        assertNotNull("Unexpected second result challenge", secondResult.getChallenge());
-        assertEquals(
-                "Unexpected second result principal",
-                username,
-                secondResult.getMainPrincipal().getName()
-        );
+        assertEquals(SUCCESS, secondResult.getStatus(), "Unexpected second result status");
+        assertNotNull(secondResult.getChallenge(), "Unexpected second result challenge");
+        assertEquals(username, secondResult.getMainPrincipal().getName(),
+                "Unexpected second result principal");
 
         final String serverFinalMessage = new String(secondResult.getChallenge(), SaslHelper.ASCII);
         final String[] parts = serverFinalMessage.split(",");
@@ -775,62 +665,45 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
         }
 
         final AuthenticationResult thirdResult = saslNegotiator.handleResponse(initialResponse);
-        assertEquals("Unexpected result status after completion of negotiation",
-                     AuthenticationResult.AuthenticationStatus.ERROR,
-                     thirdResult.getStatus());
-        assertNull("Unexpected principal after completion of negotiation", thirdResult.getMainPrincipal());
+        assertEquals(ERROR, thirdResult.getStatus(),"Unexpected result status after completion of negotiation");
+        assertNull(thirdResult.getMainPrincipal(), "Unexpected principal after completion of negotiation");
     }
 
-    private void saslScramShaInvalidCredentials(
-            String mechanism,
-            SaslNegotiator saslNegotiator,
-            String username,
-            String password) throws Exception
+    private void saslScramShaInvalidCredentials(final String mechanism,
+                                                final SaslNegotiator saslNegotiator,
+                                                final String username,
+                                                final String password) throws Exception
     {
-
         final byte[] initialResponse = SaslHelper.createInitialResponse(username);
-
         final AuthenticationResult firstResult = saslNegotiator.handleResponse(initialResponse);
-        assertEquals(
-                "Unexpected first result status",
-                AuthenticationResult.AuthenticationStatus.CONTINUE,
-                firstResult.getStatus()
-                    );
-        assertNotNull("Unexpected first result challenge", firstResult.getChallenge());
+        assertEquals(AuthenticationResult.AuthenticationStatus.CONTINUE, firstResult.getStatus(),
+                                "Unexpected first result status");
+        assertNotNull(firstResult.getChallenge(), "Unexpected first result challenge");
 
-        final byte[] response = SaslHelper.calculateClientProof(
-                firstResult.getChallenge(),
-                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism)
-                        ? ScramSHA256AuthenticationManager.HMAC_NAME : ScramSHA1AuthenticationManager.HMAC_NAME,
-                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism)
-                        ? ScramSHA256AuthenticationManager.DIGEST_NAME : ScramSHA1AuthenticationManager.DIGEST_NAME,
-                password
-                                                               );
-
+        final byte[] response = SaslHelper.calculateClientProof(firstResult.getChallenge(),
+                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism) ?
+                        ScramSHA256AuthenticationManager.HMAC_NAME : ScramSHA1AuthenticationManager.HMAC_NAME,
+                ScramSHA256AuthenticationManager.MECHANISM.equals(mechanism) ?
+                        ScramSHA256AuthenticationManager.DIGEST_NAME : ScramSHA1AuthenticationManager.DIGEST_NAME,
+                password);
         final AuthenticationResult secondResult = saslNegotiator.handleResponse(response);
-        assertEquals(
-                "Unexpected second result status",
-                ERROR,
-                secondResult.getStatus());
-        assertNull("Unexpected second result challenge", secondResult.getChallenge());
+        assertEquals(ERROR, secondResult.getStatus(), "Unexpected second result status");
+        assertNull(secondResult.getChallenge(), "Unexpected second result challenge");
 
     }
 
     private static class SaslHelper
     {
-
         private static final String GS2_HEADER = "n,,";
         private static final Charset ASCII = US_ASCII;
         private static String _clientFirstMessageBare;
         private static String _clientNonce;
         private static byte[] _serverSignature;
 
-        private static byte[] calculateClientProof(
-                final byte[] challenge,
-                String hmacName,
-                String digestName,
-                String userPassword
-        ) throws Exception
+        private static byte[] calculateClientProof(final byte[] challenge,
+                                                   final String hmacName,
+                                                   final String digestName,
+                                                   final String userPassword) throws Exception
         {
 
             final String serverFirstMessage = new String(challenge, ASCII);
@@ -870,8 +743,7 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
             final byte[] saltedPassword = generateSaltedPassword(passwordBytes, hmacName, _iterationCount, salt);
 
             final String clientFinalMessageWithoutProof =
-                    "c=" + Base64.getEncoder().encodeToString(GS2_HEADER.getBytes(ASCII))
-                    + ",r=" + nonce;
+                    "c=" + Base64.getEncoder().encodeToString(GS2_HEADER.getBytes(ASCII)) + ",r=" + nonce;
 
             final String authMessage =
                     _clientFirstMessageBare + "," + serverFirstMessage + "," + clientFinalMessageWithoutProof;
@@ -890,20 +762,17 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
             return finalMessageWithProof.getBytes();
         }
 
-        private static byte[] computeHmac(final byte[] key, final String string, String hmacName)
-                throws Exception
+        private static byte[] computeHmac(final byte[] key, final String string, final String hmacName) throws Exception
         {
             final Mac mac = createHmac(key, hmacName);
             mac.update(string.getBytes(ASCII));
             return mac.doFinal();
         }
 
-        private static byte[] generateSaltedPassword(
-                final byte[] passwordBytes,
-                String hmacName,
-                final int iterationCount,
-                final byte[] salt
-        ) throws Exception
+        private static byte[] generateSaltedPassword(final byte[] passwordBytes,
+                                                     final String hmacName,
+                                                     final int iterationCount,
+                                                     final byte[] salt) throws Exception
         {
             final Mac mac = createHmac(passwordBytes, hmacName);
             mac.update(salt);
@@ -924,7 +793,7 @@ public class CompositeUsernamePasswordAuthenticationManagerTest extends UnitTest
             return result;
         }
 
-        private static Mac createHmac(final byte[] keyBytes, String hmacName) throws Exception
+        private static Mac createHmac(final byte[] keyBytes, final String hmacName) throws Exception
         {
             final SecretKeySpec key = new SecretKeySpec(keyBytes, hmacName);
             final Mac mac = Mac.getInstance(hmacName);
