@@ -20,26 +20,30 @@
  */
 package org.apache.qpid.server.store;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.apache.qpid.server.configuration.CommonProperties;
-import org.junit.Before;
-import org.junit.Test;
+
+import com.google.common.collect.ImmutableMap;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.server.configuration.updater.CurrentThreadTaskExecutor;
+import org.apache.qpid.server.configuration.updater.TaskExecutor;
 import org.apache.qpid.server.logging.EventLogger;
 import org.apache.qpid.server.model.Broker;
 import org.apache.qpid.server.model.BrokerModel;
@@ -58,95 +62,88 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     private static final String VIRTUALHOST_CREATED_BY = "webadmin";
 
     private ConfiguredObjectRecord _brokerRecord;
-    private CurrentThreadTaskExecutor _taskExecutor;
     private SystemConfig<?> _systemConfig;
-    private List<Map<String, Object>> _virtaulHosts;
+    private List<Map<String, Object>> _virtualHosts;
     private UUID _hostId;
     private UUID _brokerId;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception
     {
-        _virtaulHosts = new ArrayList<>();
-        _hostId = UUID.randomUUID();
-        _brokerId = UUID.randomUUID();
-        Map<String, Object> brokerAttributes = new HashMap<>();
+        _virtualHosts = new ArrayList<>();
+        _hostId = randomUUID();
+        _brokerId = randomUUID();
+        final Map<String, Object> brokerAttributes = new HashMap<>();
         brokerAttributes.put("createdTime", BROKER_CREATE_TIME);
         brokerAttributes.put("defaultVirtualHost", VIRTUALHOST_NAME);
         brokerAttributes.put("modelVersion", "1.3");
         brokerAttributes.put("name", BROKER_NAME);
-        brokerAttributes.put("virtualhosts", _virtaulHosts);
+        brokerAttributes.put("virtualhosts", _virtualHosts);
 
         _brokerRecord = mock(ConfiguredObjectRecord.class);
         when(_brokerRecord.getId()).thenReturn(_brokerId);
         when(_brokerRecord.getType()).thenReturn("Broker");
         when(_brokerRecord.getAttributes()).thenReturn(brokerAttributes);
 
-        _taskExecutor = new CurrentThreadTaskExecutor();
-        _taskExecutor.start();
-        _systemConfig = new JsonSystemConfigImpl(_taskExecutor,
-                                                 mock(EventLogger.class),
-                                                 null, new HashMap<String,Object>());
+        final TaskExecutor taskExecutor = CurrentThreadTaskExecutor.newStartedInstance();
+        _systemConfig = new JsonSystemConfigImpl(taskExecutor, mock(EventLogger.class), null, Map.of());
     }
 
     @Test
     public void testUpgradeVirtualHostWithJDBCStoreAndBoneCPPool()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("connectionPool", "BONECP");
-        hostAttributes.put("connectionURL", "jdbc:derby://localhost:1527/tmp/vh/test;create=true");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("maxConnectionsPerPartition", 7);
-        hostAttributes.put("minConnectionsPerPartition", 6);
-        hostAttributes.put("partitionCount", 2);
-        hostAttributes.put("storeType", "jdbc");
-        hostAttributes.put("type", "STANDARD");
-        hostAttributes.put("jdbcBigIntType", "mybigint");
-        hostAttributes.put("jdbcBlobType", "myblob");
-        hostAttributes.put("jdbcVarbinaryType", "myvarbinary");
-        hostAttributes.put("jdbcBytesForBlob", true);
+        final Map<String, Object> hostAttributes = ImmutableMap.<String, Object>builder()
+                .put("name", VIRTUALHOST_NAME)
+                .put("modelVersion", "0.4")
+                .put("connectionPool", "BONECP")
+                .put("connectionURL", "jdbc:derby://localhost:1527/tmp/vh/test;create=true")
+                .put("createdBy", VIRTUALHOST_CREATED_BY)
+                .put("createdTime", VIRTUALHOST_CREATE_TIME)
+                .put("maxConnectionsPerPartition", 7)
+                .put("minConnectionsPerPartition", 6)
+                .put("partitionCount", 2)
+                .put("storeType", "jdbc")
+                .put("type", "STANDARD")
+                .put("jdbcBigIntType", "mybigint")
+                .put("jdbcBlobType", "myblob")
+                .put("jdbcVarbinaryType", "myvarbinary")
+                .put("jdbcBytesForBlob", true).build();
 
+        final ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(randomUUID(), "VirtualHost",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
 
-        ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "VirtualHost",
-                hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String, Object> context = Map.of("qpid.jdbcstore.bigIntType", "mybigint",
+                "qpid.jdbcstore.varBinaryType", "myvarbinary",
+                "qpid.jdbcstore.blobType", "myblob",
+                "qpid.jdbcstore.useBytesForBlob", true,
+                "qpid.jdbcstore.bonecp.maxConnectionsPerPartition", 7,
+                "qpid.jdbcstore.bonecp.minConnectionsPerPartition", 6,
+                "qpid.jdbcstore.bonecp.partitionCount", 2);
+        final Map<String,Object> expectedAttributes = Map.of("connectionPoolType", "BONECP",
+                "connectionUrl", "jdbc:derby://localhost:1527/tmp/vh/test;create=true",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "name", VIRTUALHOST_NAME,
+                "type", "JDBC",
+                "defaultVirtualHostNode", "true",
+                "context", context);
 
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("connectionPoolType", "BONECP");
-        expectedAttributes.put("connectionUrl", "jdbc:derby://localhost:1527/tmp/vh/test;create=true");
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("name", VIRTUALHOST_NAME);
-        expectedAttributes.put("type", "JDBC");
-        expectedAttributes.put("defaultVirtualHostNode", "true");
-
-        final Map<String, Object> context = new HashMap<>();
-        context.put("qpid.jdbcstore.bigIntType", "mybigint");
-        context.put("qpid.jdbcstore.varBinaryType", "myvarbinary");
-        context.put("qpid.jdbcstore.blobType", "myblob");
-        context.put("qpid.jdbcstore.useBytesForBlob", true);
-
-        context.put("qpid.jdbcstore.bonecp.maxConnectionsPerPartition", 7);
-        context.put("qpid.jdbcstore.bonecp.minConnectionsPerPartition", 6);
-        context.put("qpid.jdbcstore.bonecp.partitionCount", 2);
-        expectedAttributes.put("context", context);
-
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(),
+                "Unexpected attributes");
         assertBrokerRecord(records);
     }
 
     private List<ConfiguredObjectRecord> upgrade(final DurableConfigurationStore dcs,
                                                  final BrokerStoreUpgraderAndRecoverer recoverer)
     {
-        RecordRetrievingConfiguredObjectRecordHandler handler = new RecordRetrievingConfiguredObjectRecordHandler();
+        final RecordRetrievingConfiguredObjectRecordHandler handler =
+                new RecordRetrievingConfiguredObjectRecordHandler();
         dcs.openConfigurationStore(handler);
         return recoverer.upgrade(dcs, handler.getRecords());
     }
@@ -154,198 +151,185 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     @Test
     public void testUpgradeVirtualHostWithJDBCStoreAndDefaultPool()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("connectionPool", "DEFAULT");
-        hostAttributes.put("connectionURL", "jdbc:derby://localhost:1527/tmp/vh/test;create=true");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("storeType", "jdbc");
-        hostAttributes.put("type", "STANDARD");
-        hostAttributes.put("jdbcBigIntType", "mybigint");
-        hostAttributes.put("jdbcBlobType", "myblob");
-        hostAttributes.put("jdbcVarbinaryType", "myvarbinary");
-        hostAttributes.put("jdbcBytesForBlob", true);
+        final Map<String, Object> hostAttributes = ImmutableMap.<String, Object>builder()
+                .put("name", VIRTUALHOST_NAME)
+                .put("modelVersion", "0.4")
+                .put("connectionPool", "DEFAULT")
+                .put("connectionURL", "jdbc:derby://localhost:1527/tmp/vh/test;create=true")
+                .put("createdBy", VIRTUALHOST_CREATED_BY)
+                .put("createdTime", VIRTUALHOST_CREATE_TIME)
+                .put("storeType", "jdbc")
+                .put("type", "STANDARD")
+                .put("jdbcBigIntType", "mybigint")
+                .put("jdbcBlobType", "myblob")
+                .put("jdbcVarbinaryType", "myvarbinary")
+                .put("jdbcBytesForBlob", true).build();
 
 
-        ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "VirtualHost",
-                hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
+        final ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(randomUUID(), "VirtualHost",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("connectionPoolType", "NONE");
-        expectedAttributes.put("connectionUrl", "jdbc:derby://localhost:1527/tmp/vh/test;create=true");
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("name", VIRTUALHOST_NAME);
-        expectedAttributes.put("type", "JDBC");
-        expectedAttributes.put("defaultVirtualHostNode", "true");
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String, Object> context = Map.of("qpid.jdbcstore.bigIntType", "mybigint",
+                "qpid.jdbcstore.varBinaryType", "myvarbinary",
+                "qpid.jdbcstore.blobType", "myblob",
+                "qpid.jdbcstore.useBytesForBlob", true);
+        final Map<String,Object> expectedAttributes = Map.of("connectionPoolType", "NONE",
+                "connectionUrl", "jdbc:derby://localhost:1527/tmp/vh/test;create=true",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "name", VIRTUALHOST_NAME,
+                "type", "JDBC",
+                "defaultVirtualHostNode", "true",
+                "context", context);
 
-
-        final Map<String, Object> context = new HashMap<>();
-        context.put("qpid.jdbcstore.bigIntType", "mybigint");
-        context.put("qpid.jdbcstore.varBinaryType", "myvarbinary");
-        context.put("qpid.jdbcstore.blobType", "myblob");
-        context.put("qpid.jdbcstore.useBytesForBlob", true);
-
-        expectedAttributes.put("context", context);
-
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(),
+                "Unexpected attributes");
         assertBrokerRecord(records);
     }
 
     @Test
     public void testUpgradeVirtualHostWithDerbyStore()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("storePath", "/tmp/vh/derby");
-        hostAttributes.put("storeType", "derby");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "STANDARD");
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.4",
+                "storePath", "/tmp/vh/derby",
+                "storeType", "derby",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "type", "STANDARD");
 
-        ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "VirtualHost",
-                hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
+        final ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(randomUUID(), "VirtualHost",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("storePath", "/tmp/vh/derby");
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("name", VIRTUALHOST_NAME);
-        expectedAttributes.put("type", "DERBY");
-        expectedAttributes.put("defaultVirtualHostNode", "true");
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String,Object> expectedAttributes = Map.of("storePath", "/tmp/vh/derby",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "name", VIRTUALHOST_NAME,
+                "type", "DERBY",
+                "defaultVirtualHostNode", "true");
 
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(), "Unexpected attributes");
         assertBrokerRecord(records);
     }
 
     @Test
     public void testUpgradeVirtualHostWithBDBStore()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("storePath", "/tmp/vh/bdb");
-        hostAttributes.put("storeType", "bdb");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "STANDARD");
-        hostAttributes.put("bdbEnvironmentConfig", Collections.singletonMap("je.stats.collect", "false"));
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.4",
+                "storePath", "/tmp/vh/bdb",
+                "storeType", "bdb",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "type", "STANDARD",
+                "bdbEnvironmentConfig", Map.of("je.stats.collect", "false"));
 
+        final ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(randomUUID(), "VirtualHost",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
 
-        ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "VirtualHost",
-                hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("storePath", "/tmp/vh/bdb");
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("name", VIRTUALHOST_NAME);
-        expectedAttributes.put("type", "BDB");
-        expectedAttributes.put("defaultVirtualHostNode", "true");
-        expectedAttributes.put("context", Collections.singletonMap("je.stats.collect", "false"));
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String,Object> expectedAttributes = Map.of("storePath", "/tmp/vh/bdb",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "name", VIRTUALHOST_NAME,
+                "type", "BDB",
+                "defaultVirtualHostNode", "true",
+                "context", Map.of("je.stats.collect", "false"));
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(), "Unexpected attributes");
         assertBrokerRecord(records);
     }
 
     @Test
     public void testUpgradeVirtualHostWithBDBHAStore()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "BDB_HA");
-        hostAttributes.put("storePath", "/tmp/vh/bdbha");
-        hostAttributes.put("haCoalescingSync", "true");
-        hostAttributes.put("haDesignatedPrimary", "true");
-        hostAttributes.put("haGroupName", "ha");
-        hostAttributes.put("haHelperAddress", "localhost:7000");
-        hostAttributes.put("haNodeAddress", "localhost:7000");
-        hostAttributes.put("haNodeName", "n1");
-        hostAttributes.put("haReplicationConfig", Collections.singletonMap("je.stats.collect", "false"));
-        hostAttributes.put("bdbEnvironmentConfig", Collections.singletonMap("je.rep.feederTimeout", "1 m"));
+        final Map<String, Object> hostAttributes = ImmutableMap.<String, Object>builder()
+                .put("name", VIRTUALHOST_NAME)
+                .put("modelVersion", "0.4")
+                .put("createdBy", VIRTUALHOST_CREATED_BY)
+                .put("createdTime", VIRTUALHOST_CREATE_TIME)
+                .put("type", "BDB_HA")
+                .put("storePath", "/tmp/vh/bdbha")
+                .put("haCoalescingSync", "true")
+                .put("haDesignatedPrimary", "true")
+                .put("haGroupName", "ha")
+                .put("haHelperAddress", "localhost:7000")
+                .put("haNodeAddress", "localhost:7000")
+                .put("haNodeName", "n1")
+                .put("haReplicationConfig", Map.of("je.stats.collect", "false"))
+                .put("bdbEnvironmentConfig", Map.of("je.rep.feederTimeout", "1 m")).build();
 
+        final ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(randomUUID(), "VirtualHost",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
 
-        ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "VirtualHost",
-                hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String,Object> expectedContext = Map.of("je.stats.collect", "false",
+                "je.rep.feederTimeout", "1 m");
 
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedContext = new HashMap<>();
-        expectedContext.put("je.stats.collect", "false");
-        expectedContext.put("je.rep.feederTimeout", "1 m");
+        final Map<String,Object> expectedAttributes = ImmutableMap.<String, Object>builder()
+                .put("createdBy", VIRTUALHOST_CREATED_BY)
+                .put("createdTime", VIRTUALHOST_CREATE_TIME)
+                .put("type", "BDB_HA")
+                .put("storePath", "/tmp/vh/bdbha")
+                .put("designatedPrimary", "true")
+                .put("groupName", "ha")
+                .put("address", "localhost:7000")
+                .put("helperAddress", "localhost:7000")
+                .put("name", "n1")
+                .put("context", expectedContext)
+                .put("defaultVirtualHostNode", "true").build();
 
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("type", "BDB_HA");
-        expectedAttributes.put("storePath", "/tmp/vh/bdbha");
-        expectedAttributes.put("designatedPrimary", "true");
-        expectedAttributes.put("groupName", "ha");
-        expectedAttributes.put("address", "localhost:7000");
-        expectedAttributes.put("helperAddress", "localhost:7000");
-        expectedAttributes.put("name", "n1");
-        expectedAttributes.put("context", expectedContext);
-        expectedAttributes.put("defaultVirtualHostNode", "true");
-
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(), "Unexpected attributes");
         assertBrokerRecord(records);
     }
 
     @Test
     public void testUpgradeVirtualHostWithMemoryStore()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("storeType", "memory");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "STANDARD");
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.4",
+                "storeType", "memory",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "type", "STANDARD");
 
-        ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "VirtualHost",
-                hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
+        final ConfiguredObjectRecord virtualHostRecord = new ConfiguredObjectRecordImpl(randomUUID(), "VirtualHost",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, virtualHostRecord);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("name", VIRTUALHOST_NAME);
-        expectedAttributes.put("type", "Memory");
-        expectedAttributes.put("defaultVirtualHostNode", "true");
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(virtualHostRecord.getId(), records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String,Object> expectedAttributes = Map.of("createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "name", VIRTUALHOST_NAME,
+                "type", "Memory",
+                "defaultVirtualHostNode", "true");
 
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(), "Unexpected attributes");
         assertBrokerRecord(records);
     }
 
@@ -353,16 +337,14 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     public void testUpgradeBrokerRecordWithModelVersion1_0()
     {
         _brokerRecord.getAttributes().put("modelVersion", "1.0");
-        _brokerRecord.getAttributes().put("virtualhosts", _virtaulHosts);
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.1");
-        hostAttributes.put("storeType", "memory");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("id", _hostId);
-        _virtaulHosts.add(hostAttributes);
-
+        _brokerRecord.getAttributes().put("virtualhosts", _virtualHosts);
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.1",
+                "storeType", "memory",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "id", _hostId);
+        _virtualHosts.add(hostAttributes);
 
         upgradeBrokerRecordAndAssertUpgradeResults();
     }
@@ -371,16 +353,15 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     public void testUpgradeBrokerRecordWithModelVersion1_1()
     {
         _brokerRecord.getAttributes().put("modelVersion", "1.1");
-        _brokerRecord.getAttributes().put("virtualhosts", _virtaulHosts);
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.2");
-        hostAttributes.put("storeType", "memory");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "STANDARD");
-        hostAttributes.put("id", _hostId);
-        _virtaulHosts.add(hostAttributes);
+        _brokerRecord.getAttributes().put("virtualhosts", _virtualHosts);
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.2",
+                "storeType", "memory",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "type", "STANDARD",
+                "id", _hostId);
+        _virtualHosts.add(hostAttributes);
 
         upgradeBrokerRecordAndAssertUpgradeResults();
     }
@@ -389,16 +370,15 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     public void testUpgradeBrokerRecordWithModelVersion1_2()
     {
         _brokerRecord.getAttributes().put("modelVersion", "1.2");
-        _brokerRecord.getAttributes().put("virtualhosts", _virtaulHosts);
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.3");
-        hostAttributes.put("storeType", "memory");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "STANDARD");
-        hostAttributes.put("id", _hostId);
-        _virtaulHosts.add(hostAttributes);
+        _brokerRecord.getAttributes().put("virtualhosts", _virtualHosts);
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.3",
+                "storeType", "memory",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "type", "STANDARD",
+                "id", _hostId);
+        _virtualHosts.add(hostAttributes);
 
         upgradeBrokerRecordAndAssertUpgradeResults();
     }
@@ -407,16 +387,15 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     public void testUpgradeBrokerRecordWithModelVersion1_3()
     {
         _brokerRecord.getAttributes().put("modelVersion", "1.3");
-        _brokerRecord.getAttributes().put("virtualhosts", _virtaulHosts);
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", VIRTUALHOST_NAME);
-        hostAttributes.put("modelVersion", "0.4");
-        hostAttributes.put("storeType", "memory");
-        hostAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        hostAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        hostAttributes.put("type", "STANDARD");
-        hostAttributes.put("id", _hostId);
-        _virtaulHosts.add(hostAttributes);
+        _brokerRecord.getAttributes().put("virtualhosts", _virtualHosts);
+        final Map<String, Object> hostAttributes = Map.of("name", VIRTUALHOST_NAME,
+                "modelVersion", "0.4",
+                "storeType", "memory",
+                "createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "type", "STANDARD",
+                "id", _hostId);
+        _virtualHosts.add(hostAttributes);
 
         upgradeBrokerRecordAndAssertUpgradeResults();
     }
@@ -424,43 +403,38 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     @Test
     public void testUpgradeNonAMQPPort()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", "nonAMQPPort");
-        hostAttributes.put("type", "HTTP");
+        final Map<String, Object> hostAttributes = Map.of("name", "nonAMQPPort",
+                "type", "HTTP");
 
         _brokerRecord.getAttributes().put("modelVersion", "2.0");
 
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
-                                                                                  hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(randomUUID(), "Port",
+                hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        assertTrue("No virtualhostalias rescords should be returned",
-                          findRecordByType("VirtualHostAlias", records).isEmpty());
-
+        assertTrue(findRecordByType("VirtualHostAlias", records).isEmpty(),
+                "No virtualhostalias rescords should be returned");
     }
 
     @Test
     public void testUpgradeImpliedAMQPPort()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", "impliedPort");
+        final Map<String, Object> hostAttributes = Map.of("name", "impliedPort");
 
         _brokerRecord.getAttributes().put("modelVersion", "2.0");
 
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Port", hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
-                                                                           hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        assertFalse("VirtualHostAlias rescords should be returned",
-                           findRecordByType("VirtualHostAlias", records).isEmpty());
+        assertFalse(findRecordByType("VirtualHostAlias", records).isEmpty(),
+                "VirtualHostAlias rescords should be returned");
 
     }
 
@@ -468,22 +442,19 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     @Test
     public void testUpgradeImpliedNonAMQPPort()
     {
-        Map<String, Object> hostAttributes = new HashMap<>();
-        hostAttributes.put("name", "nonAMQPPort");
-        hostAttributes.put("protocols", "HTTP");
+        final Map<String, Object> hostAttributes = Map.of("name", "nonAMQPPort",
+                "protocols", "HTTP");
 
         _brokerRecord.getAttributes().put("modelVersion", "2.0");
 
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Port", hostAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
-                                                                           hostAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        assertTrue("No virtualhostalias rescords should be returned",
-                          findRecordByType("VirtualHostAlias", records).isEmpty());
+        assertTrue(findRecordByType("VirtualHostAlias", records).isEmpty(),
+                "No virtualhostalias rescords should be returned");
     }
 
     @Test
@@ -492,157 +463,128 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
         _brokerRecord.getAttributes().put("modelVersion", "3.0");
         _brokerRecord.getAttributes().put("type", "broker");
 
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> brokerRecords = findRecordByType("Broker", records);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> brokerRecords = findRecordByType("Broker", records);
-        assertEquals("Unexpected number of broker records", (long) 1, (long) brokerRecords.size());
-        assertFalse("Unexpected type", brokerRecords.get(0).getAttributes().containsKey("type"));
+        assertEquals(1, (long) brokerRecords.size(), "Unexpected number of broker records");
+        assertFalse(brokerRecords.get(0).getAttributes().containsKey("type"), "Unexpected type");
     }
 
     @Test
     public void testUpgradeAMQPPortWithNetworkBuffers()
     {
-        Map<String, Object> portAttributes = new HashMap<>();
-        portAttributes.put("name", getTestName());
-        portAttributes.put("type", "AMQP");
-        portAttributes.put("receiveBufferSize", "1");
-        portAttributes.put("sendBufferSize", "2");
+        final Map<String, Object> portAttributes = Map.of("name", getTestName(),
+                "type", "AMQP",
+                "receiveBufferSize", "1",
+                "sendBufferSize", "2");
 
         _brokerRecord.getAttributes().put("modelVersion", "3.0");
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
-                portAttributes, Collections.singletonMap("Broker", _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(randomUUID(), "Port",
+                portAttributes, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
-        assertEquals("Unexpected port size", (long) 1, (long) ports.size());
-        ConfiguredObjectRecord upgradedRecord = ports.get(0);
-        Map<String, Object> attributes = upgradedRecord.getAttributes();
-        assertFalse("receiveBufferSize is found " + attributes.get("receiveBufferSize"),
-                           attributes.containsKey("receiveBufferSize"));
-        assertFalse("sendBufferSize is found " + attributes.get("sendBufferSize"),
-                           attributes.containsKey("sendBufferSize"));
-        assertEquals("Unexpected name", getTestName(), attributes.get("name"));
+        assertEquals(1, (long) ports.size(), "Unexpected port size");
+        final ConfiguredObjectRecord upgradedRecord = ports.get(0);
+        final Map<String, Object> attributes = upgradedRecord.getAttributes();
+        assertFalse(attributes.containsKey("receiveBufferSize"),
+                "receiveBufferSize is found " + attributes.get("receiveBufferSize"));
+        assertFalse(attributes.containsKey("sendBufferSize"),
+                "sendBufferSize is found " + attributes.get("sendBufferSize"));
+        assertEquals(getTestName(), attributes.get("name"), "Unexpected name");
     }
 
     @Test
     public void testUpgradeRemoveJmxPlugin()
     {
-        Map<String, Object> jmxPlugin = new HashMap<>();
-        jmxPlugin.put("name", getTestName());
-        jmxPlugin.put("type", "MANAGEMENT-JMX");
+        final Map<String, Object> jmxPlugin = Map.of("name", getTestName(),
+                "type", "MANAGEMENT-JMX");
 
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(),
-                                                                           "Plugin",
-                                                                           jmxPlugin,
-                                                                           Collections.singletonMap("Broker",
-                                                                                                    _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Plugin", jmxPlugin, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        List<ConfiguredObjectRecord> plugins = findRecordByType("Plugin", records);
-        assertTrue("JMX Plugin was not removed", plugins.isEmpty());
+        final List<ConfiguredObjectRecord> plugins = findRecordByType("Plugin", records);
+        assertTrue(plugins.isEmpty(), "JMX Plugin was not removed");
     }
 
     @Test
     public void testUpgradeRemoveJmxPortByType()
     {
-        Map<String, Object> jmxPort = new HashMap<>();
-        jmxPort.put("name", "jmx1");
-        jmxPort.put("type", "JMX");
+        final Map<String, Object> jmxPort = Map.of("name", "jmx1",
+                "type", "JMX");
 
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
-                                                                           jmxPort,
-                                                                           Collections.singletonMap("Broker",
-                                                                                                    _brokerRecord.getId()));
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Port", jmxPort, Map.of("Broker", _brokerRecord.getId()));
 
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
-        assertTrue("Port was not removed", ports.isEmpty());
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
+        assertTrue(ports.isEmpty(), "Port was not removed");
     }
 
     @Test
     public void testUpgradeRemoveRmiPortByType()
     {
-        Map<String, Object> rmiPort = new HashMap<>();
-        rmiPort.put("name", "rmi1");
-        rmiPort.put("type", "RMI");
+        final Map<String, Object> rmiPort = Map.of("name", "rmi1",
+                "type", "RMI");
 
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
-                                                                           rmiPort,
-                                                                           Collections.singletonMap("Broker",
-                                                                                                    _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
-        assertTrue("Port was not removed", ports.isEmpty());
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Port", rmiPort, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
+        assertTrue(ports.isEmpty(), "Port was not removed");
     }
 
     @Test
     public void testUpgradeRemoveJmxPortByProtocol()
     {
-        Map<String, Object> jmxPort = new HashMap<>();
-        jmxPort.put("name", "jmx2");
-        jmxPort.put("protocols", Collections.singleton("JMX_RMI"));
+        final Map<String, Object> jmxPort = Map.of("name", "jmx2",
+                "protocols", Set.of("JMX_RMI"));
 
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(),
-                                                                           "Port",
-                                                                           jmxPort,
-                                                                           Collections.singletonMap("Broker",
-                                                                                                    _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
-        assertTrue("Port was not removed", ports.isEmpty());
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Port", jmxPort, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
+        assertTrue(ports.isEmpty(), "Port was not removed");
     }
 
     @Test
     public void testUpgradeRemoveRmiPortByProtocol()
     {
-        Map<String, Object> rmiPort2 = new HashMap<>();
-        rmiPort2.put("name", "rmi2");
-        rmiPort2.put("protocols", Collections.singleton("RMI"));
+        final Map<String, Object> rmiPort2 = Map.of("name", "rmi2",
+                "protocols", Set.of("RMI"));
 
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(UUID.randomUUID(),
-                                                                            "Port",
-                                                                            rmiPort2,
-                                                                            Collections.singletonMap("Broker",
-                                                                                                     _brokerRecord.getId()));
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
-        assertTrue("Port was not removed", ports.isEmpty());
+        final ConfiguredObjectRecord portRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(), "Port", rmiPort2, Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, portRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> ports = findRecordByType("Port", records);
+        assertTrue(ports.isEmpty(), "Port was not removed");
     }
 
     @Test
@@ -650,34 +592,28 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     {
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        Map<String, Object> authenticationProvider = new HashMap<>();
-        authenticationProvider.put("name", "anonymous");
-        authenticationProvider.put("type", "Anonymous");
-
-        ConfiguredObjectRecord authenticationProviderRecord = new ConfiguredObjectRecordImpl(
-                UUID.randomUUID(),
+        final Map<String, Object> authenticationProvider = Map.of("name", "anonymous",
+                "type", "Anonymous");
+        final ConfiguredObjectRecord authenticationProviderRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(),
                 "AuthenticationProvider",
                 authenticationProvider,
-                Collections.singletonMap("Broker", _brokerRecord.getId()));
-
-        ConfiguredObjectRecord preferencesProviderRecord = new ConfiguredObjectRecordImpl(
-                UUID.randomUUID(),
+                Map.of("Broker", _brokerRecord.getId()));
+        final ConfiguredObjectRecord preferencesProviderRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(),
                 "PreferencesProvider",
-                Collections.<String, Object>emptyMap(),
-                Collections.singletonMap("AuthenticationProvider", authenticationProviderRecord.getId()));
+                Map.of(),
+                Map.of("AuthenticationProvider", authenticationProviderRecord.getId()));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord,
+                                                                                authenticationProviderRecord,
+                                                                                preferencesProviderRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> preferencesProviders = findRecordByType("PreferencesProvider", records);
+        assertTrue(preferencesProviders.isEmpty(), "PreferencesProvider was not removed");
 
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord,
-                                                                          authenticationProviderRecord,
-                                                                          preferencesProviderRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> preferencesProviders = findRecordByType("PreferencesProvider", records);
-        assertTrue("PreferencesProvider was not removed", preferencesProviders.isEmpty());
-
-        List<ConfiguredObjectRecord> authenticationProviders = findRecordByType("AuthenticationProvider", records);
-        assertEquals("AuthenticationProvider was removed", (long) 1, (long) authenticationProviders.size());
+        final List<ConfiguredObjectRecord> authenticationProviders = findRecordByType("AuthenticationProvider", records);
+        assertEquals(1, (long) authenticationProviders.size(), "AuthenticationProvider was removed");
     }
 
     @Test
@@ -685,218 +621,193 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     {
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        Map<String, Object> authenticationProvider = new HashMap<>();
-        authenticationProvider.put("name", "anonymous");
-        authenticationProvider.put("type", "Anonymous");
-        authenticationProvider.put("preferencesproviders", Collections.emptyMap());
-
-        ConfiguredObjectRecord authenticationProviderRecord = new ConfiguredObjectRecordImpl(
-                UUID.randomUUID(),
+        final Map<String, Object> authenticationProvider = Map.of("name", "anonymous",
+                "type", "Anonymous",
+                "preferencesproviders", Map.of());
+        final ConfiguredObjectRecord authenticationProviderRecord = new ConfiguredObjectRecordImpl(
+                randomUUID(),
                 "AuthenticationProvider",
                 authenticationProvider,
-                Collections.singletonMap("Broker", _brokerRecord.getId()));
-
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, authenticationProviderRecord);
-
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-        List<ConfiguredObjectRecord> authenticationProviders = findRecordByType("AuthenticationProvider", records);
-        assertEquals("AuthenticationProviders was removed", (long) 1, (long) authenticationProviders.size());
-        assertFalse("PreferencesProvider was not removed",
-                           authenticationProviders.get(0).getAttributes().containsKey("preferencesproviders"));
+                Map.of("Broker", _brokerRecord.getId()));
+        final DurableConfigurationStore dcs =
+                new DurableConfigurationStoreStub(_brokerRecord, authenticationProviderRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final List<ConfiguredObjectRecord> authenticationProviders = findRecordByType("AuthenticationProvider", records);
+        assertEquals(1, (long) authenticationProviders.size(), "AuthenticationProviders was removed");
+        assertFalse(authenticationProviders.get(0).getAttributes().containsKey("preferencesproviders"),
+                               "PreferencesProvider was not removed");
     }
 
     @Test
-    public void testUpgradeTrustStoreRecordsFrom_6_0() throws Exception
+    public void testUpgradeTrustStoreRecordsFrom_6_0()
     {
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
-        Map<String, UUID> parents = Collections.singletonMap("Broker", _brokerRecord.getId());
+        final Map<String, UUID> parents = Map.of("Broker", _brokerRecord.getId());
 
-        Map<String, Object> trustStoreAttributes1 = new HashMap<>();
-        trustStoreAttributes1.put("name", "truststore1");
-        trustStoreAttributes1.put("type", "FileTrustStore");
-        trustStoreAttributes1.put("path", "${json:test.ssl.resources}/java_broker_truststore1.jks");
-        trustStoreAttributes1.put("password", "password");
-        ConfiguredObjectRecord trustStore1 = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "TrustStore",
+        final Map<String, Object> trustStoreAttributes1 = Map.of("name", "truststore1",
+                "type", "FileTrustStore",
+                "path", "${json:test.ssl.resources}/java_broker_truststore1.jks",
+                "password", "password");
+        final ConfiguredObjectRecord trustStore1 = new ConfiguredObjectRecordImpl(randomUUID(), "TrustStore",
                                                                         trustStoreAttributes1,
                                                                         parents);
 
-        Map<String, Object> trustStoreAttributes2 = new HashMap<>();
-        trustStoreAttributes2.put("name", "truststore2");
-        trustStoreAttributes2.put("type", "FileTrustStore");
-        trustStoreAttributes2.put("path", "${json:test.ssl.resources}/java_broker_truststore2.jks");
-        trustStoreAttributes2.put("password", "password");
-        trustStoreAttributes2.put("includedVirtualHostMessageSources", "true");
-        ConfiguredObjectRecord trustStore2 = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "TrustStore",
+        final Map<String, Object> trustStoreAttributes2 = Map.of("name", "truststore2",
+                "type", "FileTrustStore",
+                "path", "${json:test.ssl.resources}/java_broker_truststore2.jks",
+                "password", "password",
+                "includedVirtualHostMessageSources", "true");
+        final ConfiguredObjectRecord trustStore2 = new ConfiguredObjectRecordImpl(randomUUID(), "TrustStore",
                                                                             trustStoreAttributes2,
                                                                             parents);
 
-        Map<String, Object> trustStoreAttributes3 = new HashMap<>();
-        trustStoreAttributes3.put("name", "truststore3");
-        trustStoreAttributes3.put("type", "FileTrustStore");
-        trustStoreAttributes3.put("path", "${json:test.ssl.resources}/java_broker_truststore3.jks");
-        trustStoreAttributes3.put("password", "password");
-        trustStoreAttributes3.put("excludedVirtualHostMessageSources", "true");
-        ConfiguredObjectRecord trustStore3 = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "TrustStore",
+        final Map<String, Object> trustStoreAttributes3 = Map.of("name", "truststore3",
+                "type", "FileTrustStore",
+                "path", "${json:test.ssl.resources}/java_broker_truststore3.jks",
+                "password", "password",
+                "excludedVirtualHostMessageSources", "true");
+        final ConfiguredObjectRecord trustStore3 = new ConfiguredObjectRecordImpl(randomUUID(), "TrustStore",
                                                                             trustStoreAttributes3,
                                                                             parents);
 
-        DurableConfigurationStore dcs =
+        final DurableConfigurationStore dcs =
                 new DurableConfigurationStoreStub(_brokerRecord, trustStore1, trustStore2, trustStore3);
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final ConfiguredObjectRecord trustStore1Upgraded = findRecordById(trustStore1.getId(), records);
+        final ConfiguredObjectRecord trustStore2Upgraded = findRecordById(trustStore2.getId(), records);
+        final ConfiguredObjectRecord trustStore3Upgraded = findRecordById(trustStore3.getId(), records);
 
-        ConfiguredObjectRecord trustStore1Upgraded = findRecordById(trustStore1.getId(), records);
-        ConfiguredObjectRecord trustStore2Upgraded = findRecordById(trustStore2.getId(), records);
-        ConfiguredObjectRecord trustStore3Upgraded = findRecordById(trustStore3.getId(), records);
+        assertNotNull(trustStore1Upgraded, "Trust store 1 is not found after upgrade");
+        assertNotNull(trustStore2Upgraded, "Trust store 2 is not found after upgrade");
+        assertNotNull(trustStore3Upgraded, "Trust store 3 is not found after upgrade");
 
-        assertNotNull("Trust store 1 is not found after upgrade", trustStore1Upgraded);
-        assertNotNull("Trust store 2 is not found after upgrade", trustStore2Upgraded);
-        assertNotNull("Trust store 3 is not found after upgrade", trustStore3Upgraded);
+        assertEquals(trustStoreAttributes1, new HashMap<>(trustStore1Upgraded.getAttributes()),
+                "Unexpected attributes after upgrade for Trust store 1");
 
-        assertEquals("Unexpected attributes after upgrade for Trust store 1",
-                            trustStoreAttributes1,
-                            new HashMap<>(trustStore1Upgraded.getAttributes()));
+        assertEquals("true", trustStore2Upgraded.getAttributes().get("includedVirtualHostNodeMessageSources"),
+                "includedVirtualHostNodeMessageSources is not found");
+        assertNull(trustStore2Upgraded.getAttributes().get("includedVirtualHostMessageSources"),
+                "includedVirtualHostMessageSources is  found");
 
-        assertEquals("includedVirtualHostNodeMessageSources is not found",
-                            "true",
-                            trustStore2Upgraded.getAttributes().get("includedVirtualHostNodeMessageSources"));
-        assertNull("includedVirtualHostMessageSources is  found",
-                          trustStore2Upgraded.getAttributes().get("includedVirtualHostMessageSources"));
-
-        assertEquals("includedVirtualHostNodeMessageSources is not found",
-                            "true",
-                            trustStore3Upgraded.getAttributes().get("excludedVirtualHostNodeMessageSources"));
-        assertNull("includedVirtualHostMessageSources is  found",
-                          trustStore3Upgraded.getAttributes().get("excludedVirtualHostMessageSources"));
+        assertEquals("true", trustStore3Upgraded.getAttributes().get("excludedVirtualHostNodeMessageSources"),
+                "includedVirtualHostNodeMessageSources is not found");
+        assertNull(trustStore3Upgraded.getAttributes().get("excludedVirtualHostMessageSources"),
+                "includedVirtualHostMessageSources is  found");
         assertModelVersionUpgraded(records);
     }
 
     @Test
-    public void testUpgradeJmxRecordsFrom_3_0() throws Exception
+    public void testUpgradeJmxRecordsFrom_3_0()
     {
         _brokerRecord.getAttributes().put("modelVersion", "3.0");
-        Map<String, UUID> parents = Collections.singletonMap("Broker", _brokerRecord.getId());
+        final Map<String, UUID> parents = Map.of("Broker", _brokerRecord.getId());
 
-        Map<String, Object> jmxPortAttributes = new HashMap<>();
-        jmxPortAttributes.put("name", "jmx1");
-        jmxPortAttributes.put("type", "JMX");
-        ConfiguredObjectRecord jmxPort = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
+        final Map<String, Object> jmxPortAttributes = Map.of("name", "jmx1",
+                "type", "JMX");
+        final ConfiguredObjectRecord jmxPort = new ConfiguredObjectRecordImpl(randomUUID(), "Port",
                                                                         jmxPortAttributes,
                                                                         parents);
-        Map<String, Object> rmiPortAttributes = new HashMap<>();
-        rmiPortAttributes.put("name", "rmi1");
-        rmiPortAttributes.put("type", "RMI");
-        ConfiguredObjectRecord rmiPort = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
+        final Map<String, Object> rmiPortAttributes = Map.of("name", "rmi1",
+                "type", "RMI");
+        final ConfiguredObjectRecord rmiPort = new ConfiguredObjectRecordImpl(randomUUID(), "Port",
                                                                         rmiPortAttributes,
                                                                         parents);
 
-        Map<String, Object> jmxPluginAttributes = new HashMap<>();
-        jmxPluginAttributes.put("name", getTestName());
-        jmxPluginAttributes.put("type", "MANAGEMENT-JMX");
+        final Map<String, Object> jmxPluginAttributes = Map.of("name", getTestName(),
+                "type", "MANAGEMENT-JMX");
 
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        ConfiguredObjectRecord jmxManagement = new ConfiguredObjectRecordImpl(UUID.randomUUID(),
+        final ConfiguredObjectRecord jmxManagement = new ConfiguredObjectRecordImpl(randomUUID(),
                                                                            "Plugin",
                                                                            jmxPluginAttributes,
                                                                            parents);
 
-        DurableConfigurationStore dcs =
+        final DurableConfigurationStore dcs =
                 new DurableConfigurationStoreStub(_brokerRecord, jmxPort, rmiPort, jmxManagement);
 
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        assertNull("Jmx port is not removed", findRecordById(jmxPort.getId(), records));
-        assertNull("Rmi port is not removed", findRecordById(rmiPort.getId(), records));
-        assertNull("Jmx plugin is not removed", findRecordById(jmxManagement.getId(), records));
+        assertNull(findRecordById(jmxPort.getId(), records), "Jmx port is not removed");
+        assertNull(findRecordById(rmiPort.getId(), records), "Rmi port is not removed");
+        assertNull(findRecordById(jmxManagement.getId(), records), "Jmx plugin is not removed");
 
         assertModelVersionUpgraded(records);
     }
 
     @Test
-    public void testUpgradeHttpPortFrom_6_0() throws Exception
+    @SuppressWarnings("unchecked")
+    public void testUpgradeHttpPortFrom_6_0()
     {
         _brokerRecord.getAttributes().put("modelVersion", "6.0");
 
-        Map<String, UUID> parents = Collections.singletonMap("Broker", _brokerRecord.getId());
+        final Map<String, UUID> parents = Map.of("Broker", _brokerRecord.getId());
+        final Map<String, String> context = Map.of("port.http.additionalInternalThreads", "6",
+                "port.http.maximumQueuedRequests", "1000");
+        final Map<String, Object> httpPortAttributes = Map.of("name", "http",
+                "protocols", Set.of("HTTP"),
+                "context", context);
 
-        Map<String, Object> httpPortAttributes = new HashMap<>();
-        httpPortAttributes.put("name", "http");
-        httpPortAttributes.put("protocols", Collections.singletonList("HTTP"));
-        final Map<String, String > context = new HashMap<>();
-        httpPortAttributes.put("context", context);
-
-        context.put("port.http.additionalInternalThreads", "6");
-        context.put("port.http.maximumQueuedRequests", "1000");
-
-        ConfiguredObjectRecord httpPort = new ConfiguredObjectRecordImpl(UUID.randomUUID(), "Port",
+        final ConfiguredObjectRecord httpPort = new ConfiguredObjectRecordImpl(randomUUID(), "Port",
                                                                         httpPortAttributes,
                                                                         parents);
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, httpPort);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final ConfiguredObjectRecord upgradedPort = findRecordById(httpPort.getId(), records);
+        assertNotNull(upgradedPort, "Http port is not found");
+        final Map<String, Object> upgradedAttributes = upgradedPort.getAttributes();
 
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord, httpPort);
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
-
-        ConfiguredObjectRecord upgradedPort = findRecordById(httpPort.getId(), records);
-        assertNotNull("Http port is not found", upgradedPort);
-        Map<String, Object> upgradedAttributes = upgradedPort.getAttributes();
-
-        Map<String, String> upgradedContext = (Map<String, String>) upgradedAttributes.get("context");
-        assertFalse("Context variable \"port.http.additionalInternalThreads\" is not removed",
-                           upgradedContext.containsKey("port.http.additionalInternalThreads"));
-        assertFalse("Context variable \"port.http.maximumQueuedRequests\" is not removed",
-                           upgradedContext.containsKey("port.http.maximumQueuedRequests"));
-        assertEquals("Context variable \"port.http.maximumQueuedRequests\" is not renamed",
-                            "1000",
-                            upgradedContext.get("qpid.port.http.acceptBacklog"));
+        final Map<String, String> upgradedContext = (Map<String, String>) upgradedAttributes.get("context");
+        assertFalse(upgradedContext.containsKey("port.http.additionalInternalThreads"),
+                "Context variable \"port.http.additionalInternalThreads\" is not removed");
+        assertFalse(upgradedContext.containsKey("port.http.maximumQueuedRequests"),
+                "Context variable \"port.http.maximumQueuedRequests\" is not removed");
+        assertEquals("1000", upgradedContext.get("qpid.port.http.acceptBacklog"),
+                "Context variable \"port.http.maximumQueuedRequests\" is not renamed");
     }
 
     @Test
-    public void testBrokerConnectionAttributesRemoval() throws Exception
+    @SuppressWarnings("unchecked")
+    public void testBrokerConnectionAttributesRemoval()
     {
         _brokerRecord.getAttributes().put("modelVersion", "6.1");
         _brokerRecord.getAttributes().put("connection.sessionCountLimit", "512");
         _brokerRecord.getAttributes().put("connection.heartBeatDelay", "300");
         _brokerRecord.getAttributes().put("connection.closeWhenNoRoute", "false");
 
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
-        BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
+        final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
 
-        ConfiguredObjectRecord upgradedBroker = findRecordById(_brokerRecord.getId(), records);
-        assertNotNull("Upgraded broker record is not found", upgradedBroker);
-        Map<String, Object> upgradedAttributes = upgradedBroker.getAttributes();
+        final ConfiguredObjectRecord upgradedBroker = findRecordById(_brokerRecord.getId(), records);
+        assertNotNull(upgradedBroker, "Upgraded broker record is not found");
+        final Map<String, Object> upgradedAttributes = upgradedBroker.getAttributes();
 
-        final Map<String, String> expectedContext = new HashMap<>();
-        expectedContext.put("qpid.port.sessionCountLimit", "512");
-        expectedContext.put("qpid.port.heartbeatDelay", "300");
-        expectedContext.put("qpid.port.closeWhenNoRoute", "false");
+        final Map<String, String> expectedContext = Map.of("qpid.port.sessionCountLimit", "512",
+                "qpid.port.heartbeatDelay", "300",
+                "qpid.port.closeWhenNoRoute", "false");
 
-        Object upgradedContext = upgradedAttributes.get("context");
+        final Object upgradedContext = upgradedAttributes.get("context");
         final boolean condition = upgradedContext instanceof Map;
-        assertTrue("Unpexcted context", condition);
-        assertEquals("Unexpected context",
-                            expectedContext,
-                            new HashMap<>(((Map<String, String>) upgradedContext)));
+        assertTrue(condition, "Unpexcted context");
+        assertEquals(expectedContext, new HashMap<>(((Map<String, String>) upgradedContext)), "Unexpected context");
 
-        assertFalse("Session count limit is not removed",
-                           upgradedAttributes.containsKey("connection.sessionCountLimit"));
-        assertFalse("Heart beat delay is not removed",
-                           upgradedAttributes.containsKey("connection.heartBeatDelay"));
-        assertFalse("Close when no route is not removed",
-                           upgradedAttributes.containsKey("conection.closeWhenNoRoute"));
+        assertFalse(upgradedAttributes.containsKey("connection.sessionCountLimit"),
+                "Session count limit is not removed");
+        assertFalse(upgradedAttributes.containsKey("connection.heartBeatDelay"), "Heart beat delay is not removed");
+        assertFalse(upgradedAttributes.containsKey("conection.closeWhenNoRoute"),
+                "Close when no route is not removed");
     }
 
     @Test
     public void testContextVariableUpgradeForTLSProtocolsSetOnBroker()
     {
-        final Map<String, String> context = new HashMap<>();
-        context.put("qpid.security.tls.protocolWhiteList", ".*");
-        context.put("qpid.security.tls.protocolBlackList", "Ssl.*");
+        final Map<String, String> context = Map.of("qpid.security.tls.protocolWhiteList", ".*",
+                "qpid.security.tls.protocolBlackList", "Ssl.*");
 
         _brokerRecord.getAttributes().put("modelVersion", "8.0");
         _brokerRecord.getAttributes().put("context", context);
@@ -904,20 +815,17 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
         final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
         final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
         final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
         final Map<String, String> contextMap = findCategoryRecordAndGetContext("Broker", records);
 
         assertEquals(".*", contextMap.get(CommonProperties.QPID_SECURITY_TLS_PROTOCOL_ALLOW_LIST));
         assertEquals("Ssl.*", contextMap.get(CommonProperties.QPID_SECURITY_TLS_PROTOCOL_DENY_LIST));
     }
 
-
     @Test
     public void testContextVariableUpgradeForTLSCipherSuitesSetOnBroker()
     {
-        final Map<String, String> context = new HashMap<>();
-        context.put("qpid.security.tls.cipherSuiteWhiteList", ".*");
-        context.put("qpid.security.tls.cipherSuiteBlackList", "Ssl.*");
+        final Map<String, String> context = Map.of("qpid.security.tls.cipherSuiteWhiteList", ".*",
+                "qpid.security.tls.cipherSuiteBlackList", "Ssl.*");
 
         _brokerRecord.getAttributes().put("modelVersion", "8.0");
         _brokerRecord.getAttributes().put("context", context);
@@ -925,7 +833,6 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
         final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
         final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
         final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
         final Map<String, String> contextMap = findCategoryRecordAndGetContext("Broker", records);
 
         assertEquals(".*", contextMap.get(CommonProperties.QPID_SECURITY_TLS_CIPHER_SUITE_ALLOW_LIST));
@@ -937,18 +844,15 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     {
         _brokerRecord.getAttributes().put("modelVersion", "8.0");
 
-        final Map<String, String> context = new HashMap<>();
-        context.put("qpid.security.tls.protocolWhiteList", ".*");
-        context.put("qpid.security.tls.protocolBlackList", "Ssl.*");
+        final Map<String, String> context = Map.of("qpid.security.tls.protocolWhiteList", ".*",
+                "qpid.security.tls.protocolBlackList", "Ssl.*");
 
         final ConfiguredObjectRecord portRecord =
                 createMockRecordForGivenCategoryTypeAndContext("Port", "AMQP", context);
 
         final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(portRecord, _brokerRecord);
         final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-
         final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
         final Map<String, String> contextMap = findCategoryRecordAndGetContext("Port", records);
 
         assertEquals(".*", contextMap.get(CommonProperties.QPID_SECURITY_TLS_PROTOCOL_ALLOW_LIST));
@@ -960,18 +864,15 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
     {
         _brokerRecord.getAttributes().put("modelVersion", "8.0");
 
-        final Map<String, String> context = new HashMap<>();
-        context.put("qpid.security.tls.cipherSuiteWhiteList", ".*");
-        context.put("qpid.security.tls.cipherSuiteBlackList", "Ssl.*");
+        final Map<String, String> context = Map.of("qpid.security.tls.cipherSuiteWhiteList", ".*",
+                "qpid.security.tls.cipherSuiteBlackList", "Ssl.*");
         final ConfiguredObjectRecord authenticationProviderRecord =
                 createMockRecordForGivenCategoryTypeAndContext("AuthenticationProvider", "OAuth2", context);
 
         final DurableConfigurationStore dcs =
                 new DurableConfigurationStoreStub(authenticationProviderRecord, _brokerRecord);
         final BrokerStoreUpgraderAndRecoverer recoverer = new BrokerStoreUpgraderAndRecoverer(_systemConfig);
-
         final List<ConfiguredObjectRecord> records = upgrade(dcs, recoverer);
-
         final Map<String, String> contextMap = findCategoryRecordAndGetContext("AuthenticationProvider", records);
 
         assertEquals(".*", contextMap.get(CommonProperties.QPID_SECURITY_TLS_CIPHER_SUITE_ALLOW_LIST));
@@ -983,12 +884,12 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
                                                                                   final Map<String, String> context)
     {
         final ConfiguredObjectRecord record = mock(ConfiguredObjectRecord.class);
-        when(record.getId()).thenReturn(UUID.randomUUID());
+        when(record.getId()).thenReturn(randomUUID());
         when(record.getType()).thenReturn(category);
-        final Map<String, Object> attributes = new HashMap<>();
-        attributes.put("name", getTestName());
-        attributes.put("type", type);
-        attributes.put("context", context);
+
+        final Map<String, Object> attributes = Map.of("name", getTestName(),
+                "type", type,
+                "context", context);
         when(record.getAttributes()).thenReturn(attributes);
         return record;
     }
@@ -998,7 +899,7 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
                                                                 final List<ConfiguredObjectRecord> records)
     {
         final List<ConfiguredObjectRecord> foundRecords = findRecordByType(category, records);
-        assertEquals("Unexpected number of records", 1, foundRecords.size());
+        assertEquals(1, foundRecords.size(), "Unexpected number of records");
         final Map<String, Object> attributes = foundRecords.get(0).getAttributes();
         assertNotNull(attributes);
         final Object context = attributes.get("context");
@@ -1008,79 +909,60 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
 
     private void assertModelVersionUpgraded(final List<ConfiguredObjectRecord> records)
     {
-        ConfiguredObjectRecord upgradedBrokerRecord = findRecordById(_brokerRecord.getId(), records);
-        assertEquals("Unexpected model version",
-                            BrokerModel.MODEL_VERSION,
-                            upgradedBrokerRecord.getAttributes().get(Broker.MODEL_VERSION));
+        final ConfiguredObjectRecord upgradedBrokerRecord = findRecordById(_brokerRecord.getId(), records);
+        assertEquals(BrokerModel.MODEL_VERSION, upgradedBrokerRecord.getAttributes().get(Broker.MODEL_VERSION),
+                "Unexpected model version");
     }
 
     private void upgradeBrokerRecordAndAssertUpgradeResults()
     {
-        DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
-        List<ConfiguredObjectRecord> records = upgrade(dcs, new BrokerStoreUpgraderAndRecoverer(_systemConfig));
+        final DurableConfigurationStore dcs = new DurableConfigurationStoreStub(_brokerRecord);
+        final List<ConfiguredObjectRecord> records = upgrade(dcs, new BrokerStoreUpgraderAndRecoverer(_systemConfig));
 
         assertVirtualHost(records, true);
         assertBrokerRecord(records);
     }
 
-    private void assertVirtualHost(List<ConfiguredObjectRecord> records, final boolean isDefaultVHN)
+    private void assertVirtualHost(final List<ConfiguredObjectRecord> records, final boolean isDefaultVHN)
     {
-        ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(_hostId, records);
-        assertEquals("Unexpected type", "VirtualHostNode", upgradedVirtualHostNodeRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("createdBy", VIRTUALHOST_CREATED_BY);
-        expectedAttributes.put("createdTime", VIRTUALHOST_CREATE_TIME);
-        expectedAttributes.put("name", VIRTUALHOST_NAME);
-        expectedAttributes.put("type", "Memory");
-        expectedAttributes.put("defaultVirtualHostNode", Boolean.toString(isDefaultVHN));
-        assertEquals("Unexpected attributes", expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes());
+        final ConfiguredObjectRecord upgradedVirtualHostNodeRecord = findRecordById(_hostId, records);
+        assertEquals("VirtualHostNode", upgradedVirtualHostNodeRecord.getType(), "Unexpected type");
+        final Map<String,Object> expectedAttributes = Map.of("createdBy", VIRTUALHOST_CREATED_BY,
+                "createdTime", VIRTUALHOST_CREATE_TIME,
+                "name", VIRTUALHOST_NAME,
+                "type", "Memory",
+                "defaultVirtualHostNode", Boolean.toString(isDefaultVHN));
+        assertEquals(expectedAttributes, upgradedVirtualHostNodeRecord.getAttributes(), "Unexpected attributes");
     }
 
-    private void assertBrokerRecord(List<ConfiguredObjectRecord> records)
+    private void assertBrokerRecord(final List<ConfiguredObjectRecord> records)
     {
-        ConfiguredObjectRecord upgradedBrokerRecord = findRecordById(_brokerId, records);
-        assertEquals("Unexpected type", "Broker", upgradedBrokerRecord.getType());
-        Map<String,Object> expectedAttributes = new HashMap<>();
-        expectedAttributes.put("name", "Broker");
-        expectedAttributes.put("modelVersion", BrokerModel.MODEL_VERSION);
-        expectedAttributes.put("createdTime", 1401385808828L);
-        assertEquals("Unexpected broker attributes", expectedAttributes, upgradedBrokerRecord.getAttributes());
+        final ConfiguredObjectRecord upgradedBrokerRecord = findRecordById(_brokerId, records);
+        assertEquals("Broker", upgradedBrokerRecord.getType(), "Unexpected type");
+        final Map<String,Object> expectedAttributes = Map.of("name", "Broker",
+                "modelVersion", BrokerModel.MODEL_VERSION,
+                "createdTime", 1401385808828L);
+        assertEquals(expectedAttributes, upgradedBrokerRecord.getAttributes(), "Unexpected broker attributes");
     }
 
-    private ConfiguredObjectRecord findRecordById(UUID id, List<ConfiguredObjectRecord> records)
+    private ConfiguredObjectRecord findRecordById(final UUID id, final List<ConfiguredObjectRecord> records)
     {
-        for (ConfiguredObjectRecord configuredObjectRecord : records)
-        {
-            if (configuredObjectRecord.getId().equals(id))
-            {
-                return configuredObjectRecord;
-            }
-        }
-        return null;
+        return records.stream().filter(record -> record.getId().equals(id)).findFirst().orElse(null);
     }
 
-    private List<ConfiguredObjectRecord> findRecordByType(String type, List<ConfiguredObjectRecord> records)
+    private List<ConfiguredObjectRecord> findRecordByType(final String type, final List<ConfiguredObjectRecord> records)
     {
-        List<ConfiguredObjectRecord> results = new ArrayList<>();
-
-        for (ConfiguredObjectRecord configuredObjectRecord : records)
-        {
-            if (configuredObjectRecord.getType().equals(type))
-            {
-                results.add(configuredObjectRecord);
-            }
-        }
-        return results;
+        return records.stream().filter(record -> record.getType().equals(type)).collect(Collectors.toList());
     }
 
     static class DurableConfigurationStoreStub implements DurableConfigurationStore
     {
-        private final ConfiguredObjectRecord[] records;
+        private final List<ConfiguredObjectRecord> records;
 
         public DurableConfigurationStoreStub(ConfiguredObjectRecord... records)
         {
             super();
-            this.records = records;
+            this.records = List.of(records);
         }
 
         @Override
@@ -1106,7 +988,7 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
         }
 
         @Override
-        public void update(boolean createIfNecessary, ConfiguredObjectRecord... records) throws StoreException
+        public void update(final boolean createIfNecessary, final ConfiguredObjectRecord... records) throws StoreException
         {
         }
 
@@ -1121,13 +1003,10 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
         }
 
         @Override
-        public boolean openConfigurationStore(ConfiguredObjectRecordHandler handler,
+        public boolean openConfigurationStore(final ConfiguredObjectRecordHandler handler,
                                               final ConfiguredObjectRecord... initialRecords) throws StoreException
         {
-            for (ConfiguredObjectRecord record : records)
-            {
-                handler.handle(record);
-            }
+            records.forEach(handler::handle);
             return false;
         }
 
@@ -1135,10 +1014,7 @@ public class BrokerStoreUpgraderAndRecovererTest extends UnitTestBase
         @Override
         public void reload(ConfiguredObjectRecordHandler handler) throws StoreException
         {
-            for (ConfiguredObjectRecord record : records)
-            {
-                handler.handle(record);
-            }
+            records.forEach(handler::handle);
         }
     }
 
