@@ -22,8 +22,9 @@ package org.apache.qpid.server.util;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertEquals;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
@@ -31,11 +32,11 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.apache.qpid.test.utils.UnitTestBase;
 
@@ -44,52 +45,35 @@ public class StringsTest extends UnitTestBase
     @Test
     public void testSubstitutionResolver()
     {
-        Strings.MapResolver mapResolver =
-                new Strings.MapResolver(Collections.singletonMap("test", "C:\\TEMP\\\"Hello World\""));
-
-        Strings.Resolver jsonResolver = Strings.createSubstitutionResolver("json:",
-                                                                           new LinkedHashMap<String, String>()
-                                                                           {
-                                                                               {
-                                                                                   put("\\", "\\\\");
-                                                                                   put("\"", "\\\"");
-                                                                               }
-                                                                           });
-
+        final Strings.MapResolver mapResolver = new Strings.MapResolver(Map.of("test", "C:\\TEMP\\\"Hello World\""));
+        final LinkedHashMap<String, String> map = new LinkedHashMap<>();
+        map.put("\\", "\\\\");
+        map.put("\"", "\\\"");
+        final Strings.Resolver jsonResolver = Strings.createSubstitutionResolver("json:", map);
         assertEquals("{ \"path\" : \"C:\\\\TEMP\\\\\\\"Hello World\\\"\\foo\" }",
-                            Strings.expand("{ \"path\" : \"${json:test}\\foo\" }", Strings.chain(jsonResolver, mapResolver)));
+                Strings.expand("{ \"path\" : \"${json:test}\\foo\" }", Strings.chain(jsonResolver, mapResolver)));
     }
 
     @Test
     public void testNestedSubstitutionResolver()
     {
-        Map<String,String> context = new HashMap<>();
-        context.put("test", "C:\\TEMP\\\"Hello World\"");
-        context.put("nestedTest", "${test}");
-        Strings.MapResolver mapResolver =
-                new Strings.MapResolver(context);
-
-        Strings.Resolver jsonResolver = Strings.createSubstitutionResolver("json:",
-                                                                           new LinkedHashMap<String, String>()
-                                                                           {
-                                                                               {
-                                                                                   put("\\", "\\\\");
-                                                                                   put("\"", "\\\"");
-                                                                               }
-                                                                           });
-
+        final Map<String,String> context = Map.of("test", "C:\\TEMP\\\"Hello World\"",
+                "nestedTest", "${test}");
+        final Strings.MapResolver mapResolver = new Strings.MapResolver(context);
+        final LinkedHashMap<String, String> map = new LinkedHashMap<>();
+        map.put("\\", "\\\\");
+        map.put("\"", "\\\"");
+        final Strings.Resolver jsonResolver = Strings.createSubstitutionResolver("json:", map);
         assertEquals("{ \"path\" : \"C:\\\\TEMP\\\\\\\"Hello World\\\"\\foo\" }",
-                            Strings.expand("{ \"path\" : \"${json:nestedTest}\\foo\" }", Strings.chain(jsonResolver, mapResolver)));
+                Strings.expand("{ \"path\" : \"${json:nestedTest}\\foo\" }", Strings.chain(jsonResolver, mapResolver)));
     }
 
     @Test
     public void hexDumpSingleByte()
     {
         // Known good created with echo -n A | od -Ax -tx1 -v
-        String expected = String.format("0000000    41%n" +
-                                        "0000001%n");
-
-        String actual = Strings.hexDump(ByteBuffer.wrap("A".getBytes()));
+        final String expected = String.format("0000000    41%n" + "0000001%n");
+        final String actual = Strings.hexDump(ByteBuffer.wrap("A".getBytes()));
         assertThat(actual, is(equalTo(expected)));
     }
 
@@ -97,11 +81,9 @@ public class StringsTest extends UnitTestBase
     public void hexDumpManyBytes()
     {
         // Known good created with echo -n 12345678123456789 | od -Ax -tx1 -v
-        String expected = String.format("0000000    31  32  33  34  35  36  37  38  31  32  33  34  35  36  37  38%n" +
-                                        "0000010    39%n" +
-                                        "0000011%n");
-
-        String actual = Strings.hexDump(ByteBuffer.wrap("12345678123456789".getBytes()));
+        final String expected = String.format("0000000    31  32  33  34  35  36  37  38  31  32  33  34  35  36  37  38%n" +
+                "0000010    39%n" + "0000011%n");
+        final String actual = Strings.hexDump(ByteBuffer.wrap("12345678123456789".getBytes()));
         assertThat(actual, is(equalTo(expected)));
     }
 
@@ -116,7 +98,7 @@ public class StringsTest extends UnitTestBase
         actual = Strings.toCharSequence("").toString();
         assertThat(expected, is(equalTo(actual)));
 
-        Object object = new Object();
+        final Object object = new Object();
         expected = object.toString();
         actual = Strings.toCharSequence(object).toString();
         assertThat(expected, is(equalTo(actual)));
@@ -128,7 +110,6 @@ public class StringsTest extends UnitTestBase
         assertThat(null, is(equalTo(Strings.decodeCharArray(null, null))));
         assertThat(new byte[]{}, is(equalTo(Strings.decodeCharArray(new char[]{}, null))));
         assertThat(new byte[]{}, is(equalTo(Strings.decodeCharArray("".toCharArray(), null))));
-
         final char[] base64 = Base64.getEncoder().encodeToString("test".getBytes(StandardCharsets.UTF_8)).toCharArray();
         assertThat(new byte[]{116, 101, 115, 116}, is(equalTo(Strings.decodeCharArray(base64, null))));
     }
@@ -136,8 +117,8 @@ public class StringsTest extends UnitTestBase
     @Test
     public void split()
     {
-        assertThat(Collections.emptyList(), is(equalTo(Strings.split(null))));
-        assertThat(Collections.emptyList(), is(equalTo(Strings.split(""))));
+        assertThat(List.of(), is(equalTo(Strings.split(null))));
+        assertThat(List.of(), is(equalTo(Strings.split(""))));
         assertThat(Collections.singletonList("a"), is(equalTo(Strings.split("a"))));
         assertThat(Collections.singletonList("a "), is(equalTo(Strings.split("a "))));
         assertThat(Arrays.asList("a", "b"), is(equalTo(Strings.split("a,b"))));
@@ -146,32 +127,17 @@ public class StringsTest extends UnitTestBase
     @Test
     public void join()
     {
-        try
-        {
-            Strings.join(",", (Object[]) null);
-        }
-        catch (NullPointerException e)
-        {
-            assertThat("Items must be not null", is(equalTo(e.getMessage())));
-        }
+        NullPointerException thrown = assertThrows(NullPointerException.class,
+                () -> Strings.join(",", (Object[]) null));
+        assertThat("Items must be not null", is(equalTo(thrown.getMessage())));
 
-        try
-        {
-            Strings.join(",", (Iterable<?>) null);
-        }
-        catch (NullPointerException e)
-        {
-            assertThat("Items must be not null", is(equalTo(e.getMessage())));
-        }
+        thrown = assertThrows(NullPointerException.class,
+                () -> Strings.join(",", (Iterable<?>) null));
+        assertThat("Items must be not null", is(equalTo(thrown.getMessage())));
 
-        try
-        {
-            Strings.join(null, (Iterable<?>) null);
-        }
-        catch (NullPointerException e)
-        {
-            assertThat("Separator must be not null", is(equalTo(e.getMessage())));
-        }
+        thrown = assertThrows(NullPointerException.class,
+                () -> Strings.join(null, (Iterable<?>) null));
+        assertThat("Separator must be not null", is(equalTo(thrown.getMessage())));
 
         assertThat("", is(equalTo(Strings.join(",", new Object[]{}))));
         assertThat("", is(equalTo(Strings.join(",", new ArrayList<>()))));
